--- a/毛泽东选集(1-7卷静火版)(索引).md
+++ b/毛泽东选集(1-7卷静火版)(索引).md
@@ -9,3 +9,13 @@
 #### 中国社会各阶级的分析(1925.12.1)
 
 [中国社会各阶级的分析](毛泽东选集(1-7卷静火版)/第一卷/第一次国内革命战争时期/中国社会各阶级的分析.md)
+
+#### 湖南农民运动考察报告(1927.3)
+
+[湖南农民运动考察报告](毛泽东选集(1-7卷静火版)/第一卷/第一次国内革命战争时期/湖南农民运动考察报告.md)
+
+### 第二次国内革命战争时期(1927.8-1937)
+
+#### 中国的红色政权为什么能够存在？(1928.10.5)
+
+[中国的红色政权为什么能够存在？](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/中国的红色政权为什么能够存在？.md)
