--- a/毛泽东选集-读书笔记.md
+++ b/毛泽东选集-读书笔记.md
@@ -6,3 +6,45 @@
 
 #### 中国社会各阶级的分析(1925.12.1)
 
+谁是我们的敌人？谁是我们的朋友？这个问题是革命的首要问题。中国过去一切革命斗争成效甚少，其基本原因就是因为不能团结真正的朋友，以攻击真正的敌人。革命党是群众的向导，在革命中未有革命党领错了路而革命不失败的。我们的革命要有不领错路和一定成功的把握，不可不注意团结我们的真正的朋友，以攻击我们的真正的敌人。我们要分辨真正的敌友，不可不将中国社会各阶级的经济地位及其对于革命的态度，作一个大概的分析。
+
+综上所述，可知一切勾结帝国主义的军阀、官僚、买办阶级、大地主阶级以及附属于他们的一部分反动知识界，是我们的敌人。工业无产阶级是我们革命的领导力量。一切半无产阶级、小资产阶级，是我们最接近的朋友。那动摇不定的中产阶级，其右翼可能是我们的敌人，其左翼可能是我们的朋友——但我们要时常提防他们，不要让他们扰乱了我们的阵线。
+
+#### 湖南农民运动考察报告(1927.3)
+
+很短的时间内，将有几万万农民从中国中部、南部和北部各省起来，其势如暴风骤雨，迅猛异常，无论什么大的力量都将压抑不住。他们将冲决一切束缚他们的罗网，朝着解放的路上迅跑。一切帝国主义、军阀、贪官污吏、土豪劣绅，都将被他们葬入坟墓。一切革命的党派、革命的同志，都将在他们面前受他们的检验而决定弃取。站在他们的前头领导他们呢？还是站在他们的后头指手画脚地批评他们呢？还是站在他们的对面反对他们呢？每个中国人对于这三项都有选择的自由，不过时局将强迫你迅速地选择罢了。
+
+宗法封建性的土豪劣绅，不法地主阶级，是几千年专制政治的基础，帝国主义、军阀、贪官污吏的墙脚。打翻这个封建势力，乃是国民革命的真正目标。
+
+一切革命同志须知：国民革命需要一个大的农村变动。辛亥革命[^1-1-2-3]没有这个变动，所以失败了。现在有了这个变动，乃是革命完成的重要因素。一切革命同志都要拥护这个变动，否则他就站到反革命立场上去了。
+
+第二，革命不是请客吃饭，不是做文章，不是绘画绣花，不能那样雅致，那样从容不迫，文质彬彬，那样温良恭俭让。革命是暴动，是一个阶级推翻一个阶级的暴烈的行动。
+
+在第二时期内，必须建立农民的绝对权力。必须不准人恶意地批评农会。必须把一切绅权都打倒，把绅士打在地下，甚至用脚踏上。所有一切所谓“过分”的举动，在第二时期都有革命的意义。质言之，每个农村都必须造成一个短时期的恐怖现象，非如此决不能镇压农村反革命派的活动，决不能打倒绅权。矫枉必须过正，不过正不能矫枉[^1-1-2-4]。
+
+终结旧的封建秩序，必须用群众的革命方法，而不是用修正的——改良的方法。
+
+没有贫农，便没有革命。若否认他们，便是否认革命。若打击他们，便是打击革命。
+
+以前土豪劣绅的残忍，土豪劣绅造成的农村白色恐怖是这样，现在农民起来枪毙几个土豪劣绅，造成一点小小的镇压反革命派的恐怖现象，有什么理由说不应该？
+
+只有土豪劣绅看了害怕，革命党决不应该看了害怕。
+
+这四种权力——政权、族权、神权、夫权，代表了全部封建宗法的思想和制度，是束缚中国人民特别是农民的四条极大的绳索。
+
+菩萨是农民立起来的，到了一定时期农民会用他们自己的双手丢开这些菩萨，无须旁人过早地代庖丢菩萨。共产党对于这些东西的宣传政策应当是：“引而不发，跃如也。”[^1-1-2-18]菩萨要农民自己去丢，烈女祠、节孝坊要农民自己去摧毁，别人代庖是不对的。
+
+中国历来只是地主有文化，农民没有文化。可是地主的文化是由农民造成的，因为造成地主文化的东西，不是别的，正是从农民身上掠取的血汗。
+
+农民运动发展的结果，农民的文化程度迅速地提高了。不久的时间内，全省当有几万所学校在乡村中涌出来，不若知识阶级和所谓“教育家”者流，空唤“普及教育”，唤来唤去还是一句废话。
+
+我想，这一点子赤化若没有时，还成个什么国民革命！嘴里天天说“唤起民众”，民众起来了又害怕得要死，这和叶公好龙[^1-1-2-27]有什么两样！
+
+[^1-1-2-3]: 辛亥革命是以孙中山为首的资产阶级革命团体同盟会所领导的推翻清朝专制王朝的革命。一九一一年（辛亥年）十月十日，革命党人发动新军在湖北武昌举行起义，接着各省响应，外国帝国主义所支持的清朝反动统治迅速瓦解。一九一二年一月在南京成立了中华民国临时政府，孙中山就任临时大总统。统治中国两千多年的君主专制制度从此结束，民主共和国的观念从此深入人心。但是资产阶级革命派力量很弱，并具有妥协性，没有能力发动广大人民的力量比较彻底地进行反帝反封建的革命。辛亥革命的成果迅即被北洋军阀袁世凯篡夺，中国仍然没有摆脱半殖民地、半封建的状态。
+[^1-1-2-4]: “矫枉过正”是一句成语，原意是纠正错误而超过了应有的限度。但旧时有人常用这句话去拘束人们的活动，要人们只在修正旧成规的范围内活动，而不许完全破坏旧成规。在修正旧成规的范围内活动，叫做合乎“正”，如果完全破坏旧成规，就叫做“过正”。这也正是改良派和革命队伍内机会主义者的理论。毛泽东在这里驳斥了这类改良派的理论。这里说“矫枉必须过正，不过正不能矫枉”，就是说，要终结旧的封建秩序，必须用群众的革命方法，而不是用修正的——改良的方法。
+[^1-1-2-18]: 这句话引自《孟子·尽心上》，大意是说善于教人射箭的人，引满了弓，却不射出去，只摆着跃跃欲动的姿势。毛泽东在这里是借来比喻共产党人应当善于教育和启发农民，使农民自觉地去破除迷信和其他不良的风俗习惯，而不是不顾农民的觉悟程度，靠发号施令代替农民去破除。
+[^1-1-2-27]: 叶公好龙，见汉朝刘向所作《新序·杂事》：“叶公子高好龙，钩以写龙，凿以写龙，屋室雕文以写龙。于是天龙闻而下之，窥头于牖，施尾于堂。叶公见之，弃而还走，失其魂魄，五色无主。是叶公非好龙也，好夫似龙而非龙者也。”毛泽东在这里用以比喻蒋介石辈口谈革命，实际上畏惧革命，反对革命。
+
+### 第二次国内革命战争时期(1927.8-1937)
+
+#### 中国的红色政权为什么能够存在？(1928.10.5)
