--- a/毛泽东选集(1-7卷静火版)(一卷本).md
+++ b/毛泽东选集(1-7卷静火版)(一卷本).md
@@ -264,7 +264,7 @@
 [^1-1-2-7]: 吴佩孚（一八七四——一九三九），山东蓬莱人，北洋直系军阀首领之一。一九二○年七月，他打败皖系军阀段祺瑞，开始左右北洋军阀的中央政权，为英美帝国主义的代理人。一九二四年十月，他在军阀混战中失败。一年后再起，到一九二六年北伐战争前，他据有直隶（今河北）南部和湖北、湖南、河南等省。北伐军从广东出发，首先打倒的敌人就是吴佩孚。
 [^1-1-2-8]: 三民主义是孙中山在中国资产阶级民主革命中提出的民族、民权、民生三个问题的原则和纲领。随着时代的不同，三民主义的内容有新旧的区别。旧三民主义是中国旧民主主义革命的纲领。一九二四年一月，孙中山接受共产党人的建议，在中国国民党第一次全国代表大会上，对三民主义重新作了解释，旧三民主义从此发展为新三民主义。新三民主义包含联俄、联共、扶助农工的三大政策和反对帝国主义、反对封建主义的纲领，是第一次国内革命战争时期中国共产党同国民党合作的政治基础。参见本书第二卷《新民主主义论》第十节。
 [^1-1-2-9]: 不应当容许富农加入农会。一九二七年时期，农民群众还不知道这一点。
-[^1-1-2-10]: 见本卷《中国社会各阶级的分析》注[^1-1-2-10]: 。
+[^1-1-2-10]: 见本卷《中国社会各阶级的分析》注[10]: 。
 [^1-1-2-11]: 指当时的国民党县党部。
 [^1-1-2-12]: 袁祖铭，贵州军阀，在一九二六年六月至一九二七年一月期间曾经盘据湘西一带。
 [^1-1-2-13]: 亩捐是当时县、区、乡豪绅政权除抽收原有田赋之外，另行按田亩摊派的一种苛捐。这种捐税连租种地主土地的贫苦农民都要直接负担。
@@ -276,7 +276,7 @@
 [^1-1-2-19]: 唐生智是当时站在革命方面参加北伐的一个将军。叶开鑫是当时站在北洋军阀方面反对革命的一个将军。
 [^1-1-2-20]: 孙传芳（一八八五——一九三五），山东泰安人，北洋直系军阀。一九二五年十一月以后，曾经统治浙江、福建、江苏、安徽、江西五省。他镇压过上海工人的起义。一九二六年九月至十一月间，他的军队主力在江西的南昌、九江一带，被北伐军击溃。
 [^1-1-2-21]: 东方文化主义，是排斥近代科学文明，标榜和宣扬东方落后的农业生产和封建文化的一种反动思想。
-[^1-1-2-22]: 会党指哥老会等旧中国民间秘密团体。参见本卷《中国社会各阶级的分析》注[^1-1-2-17]: 。
+[^1-1-2-22]: 会党指哥老会等旧中国民间秘密团体。参见本卷《中国社会各阶级的分析》注[17]: 。
 [^1-1-2-23]: 山、堂、香、水，是旧中国民间秘密团体的一些宗派的称号。
 [^1-1-2-24]: 一九二六年十一月至一九二七年三月，蒋介石把国民革命军总司令部设在南昌。蒋介石在南昌集合了国民党右派和一部分北洋军阀的政客，勾结帝国主义，策划反革命的阴谋，形成了与当时的革命中心武汉对抗的局面。
 [^1-1-2-25]: 张静江（一八七七——一九五○），浙江湖州人。当时任国民党中央执行委员会常务委员会代理主席，是国民党右派头子之一，为蒋介石设谋画策的人。
