--- a/毛泽东选集(1-7卷静火版)(索引).md
+++ b/毛泽东选集(1-7卷静火版)(索引).md
@@ -19,3 +19,7 @@
 #### 中国的红色政权为什么能够存在？(1928.10.5)
 
 [中国的红色政权为什么能够存在？](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/中国的红色政权为什么能够存在？.md)
+
+#### 井冈山的斗争(1928.11.25)
+
+[井冈山的斗争](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/井冈山的斗争.md)
