--- a/毛泽东选集-读书笔记.md
+++ b/毛泽东选集-读书笔记.md
@@ -1,3 +1,5 @@
+[TOC]
+
 # 毛泽东选集(1-7卷静火版)
 
 ## 第一卷
@@ -48,3 +50,11 @@
 ### 第二次国内革命战争时期(1927.8-1937)
 
 #### 中国的红色政权为什么能够存在？(1928.10.5)
+
+现在国民党新军阀的统治，依然是城市买办阶级和乡村豪绅阶级的统治，对外投降帝国主义，对内以新军阀代替旧军阀，对工农阶级的经济的剥削和政治的压迫比从前更加厉害。
+
+中国内部各派军阀的矛盾和斗争，反映着帝国主义各国的矛盾和斗争。故只要各国帝国主义分裂中国的状况存在，各派军阀就无论如何不能妥协，所有妥协都是暂时的。今天的暂时的妥协，即酝酿着明天的更大的战争。
+
+中国迫切需要一个资产阶级的民主革命，这个革命必须由无产阶级领导才能完成。从广东出发向长江发展的一九二六年到一九二七年的革命，因为无产阶级没有坚决地执行自己的领导权，被买办豪绅阶级夺取了领导，以反革命代替了革命。
+
+#### 井冈山的斗争(1928.11.25)
