--- a/毛泽东选集(1-7卷静火版)(一卷本).md
+++ b/毛泽东选集(1-7卷静火版)(一卷本).md
@@ -486,3 +486,5 @@
 [^1-2-2-24]: 以劳动力为标准分配土地的方法，是不妥当的。事实上，在革命根据地，长时期都是实行按人口平分土地的原则。
 [^1-2-2-25]: 这里指中共红四军第六次代表大会。这次会议在一九二八年十一月十三日开预备会，十四日正式开会，十五日闭幕。
 [^1-2-2-26]: 靖卫团是一种反革命的地方武装。
+
+#### 关于纠正党内的错误思想(1929.12)
