--- a/毛泽东选集-读书笔记/第一卷/第一次国内革命战争时期/湖南农民运动考察报告.md
+++ b/毛泽东选集-读书笔记/第一卷/第一次国内革命战争时期/湖南农民运动考察报告.md
@@ -8,7 +8,7 @@
 
 ## 组织起来
 
-湖南的农民运动，就湘中、湘南已发达的各县来说，大约分为两个时期。去年一月至九月为第一时期，即组织时期。此时期内，一月至六月为秘密活动时期，七月至九月革命军驱逐赵恒惕[^2]，为公开活动时期。此时期内，农会会员的人数总计不过三四十万，能直接领导的群众也不过百余万，在农村中还没有什么斗争，因此各界对它也没有什么批评。因为农会会员能作向导，作侦探，作挑夫，北伐军的军官们还有说几句好话的。十月至今年一月为第二时期，即革命时期。农会会员激增到二百万，能直接领导的群众增加到一千万。因为农民入农会大多数每家只写一个人的名字，故会员二百万，群众便有约一千万。在湖南农民全数中，差不多组织了一半。如湘潭、湘乡、浏阳、长沙、醴陵、宁乡、平江、湘阴、衡山、衡阳、耒阳、郴县、安化等县，差不多全体农民都集合在农会的组织中，都立在农会领导之下。农民既已有了广大的组织，便开始行动起来，于是在四个月中造成一个空前的农村大革命。
+湖南的农民运动，就湘中、湘南已发达的各县来说，大约分为两个时期。去年一月至九月为第一时期，即组织时期。此时期内，一月至六月为秘密活动时期，七月至九月革命军驱逐赵恒惕[^2]，为公开活动时期。此时期内，农会会员的人数总计不过三四十万，能直接领导的群众也不过百余万，在农村中还没有什么斗争，因此各界对它也没有什么批评。因为农会会员能作向导，作侦探，作挑夫，北伐军的军官们还有说几句好话的。十月至今年一月为第二时期，即革命时期。农会会员激增到二百万，能直接领导的群众增加到一千万。因为农民入农会大多数每家只写一个人的名字，故会员二百万，群众便有约一千万。在湖南农民全数中，差不多组织了一半。如湘潭、湘乡、浏阳、长沙、醴陵、宁乡、平江、湘阴、衡山、衡阳、耒阳、郴(**chēn**)县、安化等县，差不多全体农民都集合在农会的组织中，都立在农会领导之下。农民既已有了广大的组织，便开始行动起来，于是在四个月中造成一个空前的农村大革命。
 
 ## 打倒土豪劣绅，一切权力归农会
 
@@ -72,7 +72,7 @@
 
 关进县监狱。这是比戴高帽子更重的罪。把土豪劣绅捉了，送进知事公署的监狱，关起来，要知事办他的罪。现在监狱里关人和从前两样，从前是绅士送农民来关，现在是农民送绅士来关。
 
-驱逐。土豪劣绅中罪恶昭著的，农民不是要驱逐，而是要捉他们，或杀他们。他们怕捉怕杀，逃跑出外。重要的土豪劣绅，在农民运动发达县份，几乎都跑光了，结果等于被驱逐。他们中间，头等的跑到上海，次等的跑到汉口，三等的跑到长沙，四等的跑到县城。这些逃跑的土豪劣绅，以逃到上海的为最安全。逃到汉口的，如华容的三个劣绅，终被捉回。逃到长沙的，更随时有被各县旅省学生捕获之虞(**yú**，忧虑)，我在长沙就亲眼看见捕获两个。逃到县城的，资格已是第四等了，农民耳目甚多，发觉甚易。湖南政府财政困难，财政当局曾归咎于农民驱逐阔人，以致筹款不易，亦可见土豪劣绅不容于乡里之一斑。
+驱逐。土豪劣绅中罪恶昭著的，农民不是要驱逐，而是要捉他们，或杀他们。他们怕捉怕杀，逃跑出外。重要的土豪劣绅，在农民运动发达县份，几乎都跑光了，结果等于被驱逐。他们中间，头等的跑到上海，次等的跑到汉口，三等的跑到长沙，四等的跑到县城。这些逃跑的土豪劣绅，以逃到上海的为最安全。逃到汉口的，如华容的三个劣绅，终被捉回。逃到长沙的，更随时有被各县旅省学生捕获之虞(**yú，忧虑**)，我在长沙就亲眼看见捕获两个。逃到县城的，资格已是第四等了，农民耳目甚多，发觉甚易。湖南政府财政困难，财政当局曾归咎于农民驱逐阔人，以致筹款不易，亦可见土豪劣绅不容于乡里之一斑。
 
 枪毙。这必是很大的土豪劣绅，农民和各界民众共同做的。例如宁乡的杨致泽，岳阳的周嘉淦，华容的傅道南、孙伯助，是农民和各界人民督促政府枪毙的。湘潭的晏容秋，则是农民和各界人民强迫县长同意从监狱取出，由农民自己动手枪毙的。宁乡的刘昭，是农民直接打死的。醴陵的彭志蕃，益阳的周天爵、曹云，则正待“审判土豪劣绅特别法庭”判罪处决。这样的大劣绅、大土豪，枪毙一个，全县震动，于肃清封建余孽，极有效力。这样的大土豪劣绅，各县多的有几十个，少的也有几个，每县至少要把几个罪大恶极的处决了，才是镇压反动派的有效方法。土豪劣绅势盛时，杀农民真是杀人不眨眼。长沙新康镇团防局长何迈泉，办团十年，在他手里杀死的贫苦农民将近一千人，美其名曰“杀匪”。我的家乡湘潭县银田镇团防局长汤峻岩、罗叔林二人，民国二年以来十四年间，杀人五十多，活埋四人。被杀的五十多人中，最先被杀的两人是完全无罪的乞丐。汤峻岩说：“杀两个叫化子开张！”这两个叫化子就是这样一命呜呼了。**以前土豪劣绅的残忍，土豪劣绅造成的农村白色恐怖是这样，现在农民起来枪毙几个土豪劣绅，造成一点小小的镇压反革命派的恐怖现象，有什么理由说不应该？**
 
@@ -148,7 +148,7 @@
 
 鸦片：禁得非常之严。农会下命令缴烟枪，不敢稍违抗不缴。醴陵一个劣绅不缴烟枪，被捉去游乡。
 
-农民这个“缴枪运动”，其声势不弱于北伐军对吴佩孚、孙传芳[^20]军队的缴枪。好些革命军军官家里的年尊老太爷，烟瘾极重，靠一杆“枪”救命的，都被“万岁”（劣绅讥诮(**qiào**，讥讽)农民之称）们缴了去。“万岁”们不仅禁种禁吃，还要禁运。由贵州经宝庆、湘乡、攸(**yōu**)县、醴陵到江西去的鸦片，被拦截焚烧不少。这一来，和政府的财政发生了冲突。结果，还是省农会为了顾全北伐军饷，命令下级农会“暂缓禁运”。但农民在那里愤愤不乐。
+农民这个“缴枪运动”，其声势不弱于北伐军对吴佩孚、孙传芳[^20]军队的缴枪。好些革命军军官家里的年尊老太爷，烟瘾极重，靠一杆“枪”救命的，都被“万岁”（劣绅讥诮(**qiào，讥讽**)农民之称）们缴了去。“万岁”们不仅禁种禁吃，还要禁运。由贵州经宝庆、湘乡、攸(**yōu**)县、醴陵到江西去的鸦片，被拦截焚烧不少。这一来，和政府的财政发生了冲突。结果，还是省农会为了顾全北伐军饷，命令下级农会“暂缓禁运”。但农民在那里愤愤不乐。
 
 三者以外，农民禁止或限制的东西还有很多，略举之则有：
 
