--- a/毛泽东选集-读书笔记(索引).md
+++ b/毛泽东选集-读书笔记(索引).md
@@ -23,3 +23,7 @@
 #### 井冈山的斗争(1928.11.25)
 
 [井冈山的斗争](毛泽东选集-读书笔记/第一卷/第二次国内革命战争时期/井冈山的斗争.md)
+
+#### 关于纠正党内的错误思想(1929.12)
+
+[关于纠正党内的错误思想](毛泽东选集-读书笔记/第一卷/第二次国内革命战争时期/关于纠正党内的错误思想.md)
