--- a/毛泽东选集-读书笔记.md
+++ b/毛泽东选集-读书笔记.md
@@ -58,3 +58,19 @@
 中国迫切需要一个资产阶级的民主革命，这个革命必须由无产阶级领导才能完成。从广东出发向长江发展的一九二六年到一九二七年的革命，因为无产阶级没有坚决地执行自己的领导权，被买办豪绅阶级夺取了领导，以反革命代替了革命。
 
 #### 井冈山的斗争(1928.11.25)
+
+尤其是新来的俘虏兵，他们感觉国民党军队和我们军队是两个世界。他们虽然感觉红军的物质生活不如白军，但是精神得到了解放。同样一个兵，昨天在敌军不勇敢，今天在红军很勇敢，就是民主主义的影响。红军像一个火炉，俘虏兵过来马上就熔化了。中国不但人民需要民主主义，军队也需要民主主义。军队内的民主主义制度，将是破坏封建雇佣军队的一个重要的武器[^1-2-2-17]。
+
+乡、区两级乃至县一级，政府的执行委员会，都是用一种群众会选举的。一哄而集的群众会，不能讨论问题，不能使群众得到政治训练，又最便于知识分子或投机分子的操纵。一些地方有了代表会，亦仅认为是对执行委员会的临时选举机关；选举完毕，大权揽于委员会，代表会再不谈起。名副其实的工农兵代表会组织，不是没有，只是少极了。所以如此，就是因为缺乏对于代表会这个新的政治制度的宣传和教育。封建时代独裁专断的恶习惯深中于群众乃至一般党员的头脑中，一时扫除不净，遇事贪图便利，不喜欢麻烦的民主制度。民主集中主义的制度，一定要在革命斗争中显出了它的效力，使群众了解它是最能发动群众力量和最利于斗争的，方能普遍地真实地应用于群众组织。
+
+现在民众普遍知道的“工农兵政府”，是指委员会，因为他们尚不认识代表会的权力，以为委员会才是真正的权力机关。没有代表大会作依靠的执行委员会，其处理事情，往往脱离群众的意见，对没收及分配土地的犹豫妥协，对经费的滥用和贪污，对白色势力的畏避或斗争不坚决，到处发现。委员会也很少开全体会，遇事由常委处决。区乡两级政府则常委会也少开，遇事由主席、秘书、财务或赤卫队长（暴动队长）各自处理决定，这四个人是经常驻会的。所以，民主集中主义，在政府工作中也用得不习惯。
+
+初期的政府委员会中，特别是乡政府一级，小地主富农争着要干。他们挂起红带子，装得很热心，用骗术钻入了政府委员会，把持一切，使贫农委员只作配角。只有在斗争中揭破了他们的假面，贫农阶级起来之后，方能去掉他们。这种现象虽不普遍，但在很多地方都发现了。
+
+中国现时确实还是处在资产阶级民权革命的阶段。中国彻底的民权主义革命的纲领，包括对外推翻帝国主义，求得彻底的民族解放；对内肃清买办阶级的在城市的势力，完成土地革命，消灭乡村的封建关系，推翻军阀政府。必定要经过这样的民权主义革命，方能造成过渡到社会主义的真正基础。
+
+要转入到沸热的全国高涨的革命中去，则包括城市小资产阶级在内的政治的经济的民权主义斗争的发动，是必经的道路。
+
+[^1-2-2-17]:在军队内部实行一定的民主，是毛泽东一贯的思想。在这里毛泽东特别着重地指出革命军队内部民主生活的必要，是因为当时红军初建，非强调民主，不足以鼓舞新入伍的农民和俘虏过来的国民党军士兵的革命积极性，不足以肃清干部中由反动军队传来的军阀主义的习气。当然，部队中的民主生活必须是在军事纪律所许可的范围内，必须是为着加强纪律而不是为着减弱纪律，所以在部队中提倡必要的民主的时候，必须同时反对要求极端民主的无纪律现象。而这种现象在初期的红军中，曾经一度严重地存在过。关于毛泽东反对军队中极端民主化的斗争，参见本卷《关于纠正党内的错误思想》。
+
+#### 关于纠正党内的错误思想(1929.12)
