--- a/毛泽东选集-读书笔记/第一卷/第二次国内革命战争时期/井冈山的斗争.md
+++ b/毛泽东选集-读书笔记/第一卷/第二次国内革命战争时期/井冈山的斗争.md
@@ -6,7 +6,7 @@
 
 一国之内，在四围白色政权的包围中间，产生一小块或若干小块的红色政权区域，在目前的世界上只有中国有这种事。我们分析它发生的原因之一，在于中国有买办豪绅阶级间的不断的分裂和战争。只要买办豪绅阶级间的分裂和战争是继续的，则工农武装割据的存在和发展也将是能够继续的。此外，工农武装割据的存在和发展，还需要具备下列的条件：（1）有很好的群众；（2）有很好的党；（3）有相当力量的红军；（4）有便利于作战的地势；（5）有足够给养的经济力。
 
-在统治阶级政权的暂时稳定的时期和破裂的时期，割据地区对四围统治阶级必须采取不同的战略。在统治阶级内部发生破裂时期，例如两湖在李宗仁唐生智战争时期[^1]，广东在张发奎李济深战争时期[^2]，我们的战略可以比较地冒进，用军事发展割据的地方可以比较地广大。但是仍然需要注意建立中心区域的坚实基础，以备白色恐怖到来时有所恃而不恐。若在统治阶级政权比较稳定的时期，例如今年四月以后的南方各省，则我们的战略必须是逐渐地推进的。这时在军事上最忌分兵冒进，在地方工作方面（分配土地，建立政权，发展党，组织地方武装）最忌把人力分得四散，而不注意建立中心区域的坚实基础。各地许多小块红色区域的失败，不是客观上条件不具备，就是主观上策略有错误。至于策略之所以错误，全在未曾把统治阶级政权暂时稳定的时期和破裂的时期这两个不同的时期分别清楚。有些同志在统治阶级政权暂时稳定的时期，也主张分兵冒进，甚至主张只用赤卫队[^3]保卫大块地方，好像完全不知道敌人方面除了挨户团[^4]之外还有正式军队集中来打的一回事。在地方工作方面，则完全不注意建立中心区域的坚实的基础，不顾主观力量的可能，只图无限量的推广。如果遇到什么人在军事方面主张采取逐步推广的政策，在地方工作方面主张集中力量建立中心区域的坚实基础，以求自立于不败之地，则谥之曰“保守主义”。他们的这种错误意见，就是今年八月湘赣边界失败以及同时红军第四军在湘南失败的根本原因。
+在统治阶级政权的暂时稳定的时期和破裂的时期，割据地区对四围统治阶级必须采取不同的战略。在统治阶级内部发生破裂时期，例如两湖在李宗仁唐生智战争时期[^1]，广东在张发奎李济深战争时期[^2]，我们的战略可以比较地冒进，用军事发展割据的地方可以比较地广大。但是仍然需要注意建立中心区域的坚实基础，以备白色恐怖到来时有所恃而不恐。若在统治阶级政权比较稳定的时期，例如今年四月以后的南方各省，则我们的战略必须是逐渐地推进的。这时在军事上最忌分兵冒进，在地方工作方面（分配土地，建立政权，发展党，组织地方武装）最忌把人力分得四散，而不注意建立中心区域的坚实基础。各地许多小块红色区域的失败，不是客观上条件不具备，就是主观上策略有错误。至于策略之所以错误，全在未曾把统治阶级政权暂时稳定的时期和破裂的时期这两个不同的时期分别清楚。有些同志在统治阶级政权暂时稳定的时期，也主张分兵冒进，甚至主张只用赤卫队[^3]保卫大块地方，好像完全不知道敌人方面除了挨户团[^4]之外还有正式军队集中来打的一回事。在地方工作方面，则完全不注意建立中心区域的坚实的基础，不顾主观力量的可能，只图无限量的推广。如果遇到什么人在军事方面主张采取逐步推广的政策，在地方工作方面主张集中力量建立中心区域的坚实基础，以求自立于不败之地，则谥(**shì，称作**)之曰“保守主义”。他们的这种错误意见，就是今年八月湘赣边界失败以及同时红军第四军在湘南失败的根本原因。
 
 湘赣边界的工作，从去年十月做起。开头，各县完全没有了党的组织，地方武装只袁文才、王佐各六十枝坏枪在井冈山附近，永新、莲花、茶陵、酃县四县农民自卫军枪枝全数缴给了豪绅阶级，群众革命情绪已经被压下去了。到今年二月，宁冈、永新、茶陵、遂川都有了党的县委，酃县有了特别区委，莲花亦开始建立了党的组织，和万安县委发生了关系。地方武装，除酃县外，各县都有了少数。在宁冈、茶陵、遂川、永新，特别是遂川、永新二县，进行了很多次打倒豪绅、发动群众的游击暴动，成绩都还好。这个时期，土地革命还没有深入。政权机关称为工农兵政府。军中组织了士兵委员会[^5]。部队分开行动时，则组织行动委员会指挥之。这时党的高级指导机关，是秋收起义时湖南省委任命的前敌委员会（毛泽东任书记）。三月上旬，前委因湘南特委的要求而取消，改组为师委（何挺颖为书记），变成单管军中党的机关，对地方党不能过问。同时毛部又因湘南特委的要求调往湘南，遂使边界被敌占领者一个多月。三月底湘南失败，四月朱、毛两部及湘南农军退到宁冈，再开始边界的割据。
 
@@ -28,7 +28,7 @@
 
 边界的斗争，完全是军事的斗争，党和群众不得不一齐军事化。怎样对付敌人，怎样作战，成了日常生活的中心问题。所谓割据，必须是武装的。哪一处没有武装，或者武装不够，或者对付敌人的策略错了，地方就立即被敌人占去了。这种斗争，一天比一天激烈，问题也就非常地繁复和严重。
 
-边界红军的来源：（一）潮汕叶贺旧部[^8]；（二）前武昌国民政府警卫团[^9]；（三）平浏的农民[^10]；（四）湘南的农民[^11]和水口山的工人[^12]；（五）许克祥、唐生智、白崇禧、朱培德、吴尚、熊式辉等部的俘虏兵；（六）边界各县的农民。但是叶贺旧部、警卫团和平浏农民，经过一年多的战斗，只剩下三分之一。湘南农民，伤亡也大。因此，前四项虽然至今还是红军第四军的骨干，但已远不如后二项多。后二项中又以敌军俘虏为多，设无此项补充，则兵员大成问题。虽然如此，兵的增加和枪的增加仍不相称，枪不容易损失，兵有伤、亡、病、逃，损失甚易。湖南省委答应送安源工人[^13]来此，亟盼实行。
+边界红军的来源：（一）潮汕叶贺旧部[^8]；（二）前武昌国民政府警卫团[^9]；（三）平浏的农民[^10]；（四）湘南的农民[^11]和水口山的工人[^12]；（五）许克祥、唐生智、白崇禧、朱培德、吴尚、熊式辉等部的俘虏兵；（六）边界各县的农民。但是叶贺旧部、警卫团和平浏农民，经过一年多的战斗，只剩下三分之一。湘南农民，伤亡也大。因此，前四项虽然至今还是红军第四军的骨干，但已远不如后二项多。后二项中又以敌军俘虏为多，设无此项补充，则兵员大成问题。虽然如此，兵的增加和枪的增加仍不相称，枪不容易损失，兵有伤、亡、病、逃，损失甚易。湖南省委答应送安源工人[^13]来此，亟(**jí，迫切**)盼实行。
 
 红军成分，一部是工人、农民，一部是游民无产者。游民成分太多，当然不好。但因天天在战斗，伤亡又大，游民分子却有战斗力，能找到游民补充已属不易。在此种情形下，只有加紧政治训练的一法。
 
@@ -44,7 +44,7 @@
 
 作战一次，就有一批伤兵。由于营养不足、受冻和其他原因，官兵病的很多。医院设在山上，用中西两法治疗，医生药品均缺。现在医院中共有八百多人。湖南省委答应办药，至今不见送到。仍祈中央和两省委送几个西医和一些碘片来。
 
-红军的物质生活如此菲薄，战斗如此频繁，仍能维持不敝，除党的作用外，就是靠实行军队内的民主主义。官长不打士兵，官兵待遇平等，士兵有开会说话的自由，废除烦琐的礼节，经济公开。士兵管理伙食，仍能从每日五分的油盐柴菜钱中节余一点作零用，名曰“伙食尾子”，每人每日约得六七十文。这些办法，士兵很满意。尤其是新来的俘虏兵，他们感觉国民党军队和我们军队是两个世界。他们虽然感觉红军的物质生活不如白军，但是精神得到了解放。同样一个兵，昨天在敌军不勇敢，今天在红军很勇敢，就是民主主义的影响。红军像一个火炉，俘虏兵过来马上就熔化了。中国不但人民需要民主主义，军队也需要民主主义。军队内的民主主义制度，将是破坏封建雇佣军队的一个重要的武器[^17]。
+红军的物质生活如此菲薄，战斗如此频繁，仍能维持不敝，除党的作用外，就是靠实行军队内的民主主义。官长不打士兵，官兵待遇平等，士兵有开会说话的自由，废除烦琐的礼节，经济公开。士兵管理伙食，仍能从每日五分的油盐柴菜钱中节余一点作零用，名曰“伙食尾子”，每人每日约得六七十文。这些办法，士兵很满意。**尤其是新来的俘虏兵，他们感觉国民党军队和我们军队是两个世界。他们虽然感觉红军的物质生活不如白军，但是精神得到了解放。同样一个兵，昨天在敌军不勇敢，今天在红军很勇敢，就是民主主义的影响。红军像一个火炉，俘虏兵过来马上就熔化了。中国不但人民需要民主主义，军队也需要民主主义。军队内的民主主义制度，将是破坏封建雇佣军队的一个重要的武器[^17]。**
 
 党的组织，现分连支部、营委、团委、军委四级。连有支部，班有小组。红军所以艰难奋战而不溃散，“支部建在连上”是一个重要原因。两年前，我们在国民党军中的组织，完全没有抓住士兵，即在叶挺部[^18]也还是每团只有一个支部，故经不起严重的考验。现在红军中党员和非党员约为一与三之比，即平均四个人中有一个党员。最近决定在战斗兵中发展党员数量，达到党员非党员各半的目的[^19]。现在连支部缺乏好的书记，请中央从各地不能立足的活动分子中派遣多人来此充当。湘南来的工作人员，几乎尽数在军中做党的工作。可是八月间在湘南跑散了一些，所以现在不能调出人去。
 
@@ -54,15 +54,15 @@
 
 对敌军的宣传，最有效的方法是释放俘虏和医治伤兵。敌军的士兵和营、连、排长被我们俘虏过来，即对他们进行宣传工作，分为愿留愿去两种，愿去的即发路费释放。这样就把敌人所谓“共匪见人就杀”的欺骗，立即打破。杨池生的《九师旬刊》，对于我们的这种办54法有“毒矣哉”的惊叹。红军士兵们对于所捉俘虏的抚慰和欢送，十分热烈，在每次“欢送新弟兄大会”上，俘虏兵演说也回报我们以热烈的感激。医治敌方伤兵，效力也很大。聪明的敌人例如李文彬，近来也仿效我们的办法，不杀俘虏，医治被俘伤兵。不过，在再作战时，我们的人还是有拖枪回来的，这样的事已有过两回。此外，文字宣传，如写标语等，也尽力在做。每到一处，壁上写满了口号。惟缺绘图的技术人材，请中央和两省委送几个来。
 
-军事根据地：第一个根据地是井冈山，介在宁冈、酃县、遂川、永新四县之交。北麓是宁冈的茅坪，南麓是遂川的黄坳，两地相距九十里。东麓是永新的拿山，西麓是酃县的水口，两地相距百八十里。四周从拿山起经龙源口（以上永新）、新城、茅坪、大陇（以上宁冈）、十都、水口、下村（以上酃县）、营盘圩、戴家埔、大汾、堆子前、黄坳、五斗江、车坳（以上遂川）到拿山，共计五百五十里。山上大井、小井、上井、中井、下井、茨坪、下庄、行洲、草坪、白银湖、罗浮各地，均有水田和村庄，为自来土匪、散军窟宅之所，现在作了我们的根据地。但人口不满两千，产谷不满万担，军粮全靠宁冈、永新、遂川三县输送。山上要隘，都筑了工事。医院、被服厂、军械处、各团留守处，均在这里。现在正从宁冈搬运粮食上山。若有充足的给养，敌人是打不进来的。第二个根据地是宁冈、永新、莲花、茶陵四县交界的九陇山，重要性不及井冈山，为四县地方武装的最后根据地，也筑了工事。在四围白色政权中间的红色割据，利用山险是必要的。
+军事根据地：第一个根据地是井冈山，介在宁冈、酃县、遂川、永新四县之交。北麓是宁冈的茅坪，南麓是遂川的黄坳，两地相距九十里。东麓是永新的拿山，西麓是酃县的水口，两地相距百八十里。四周从拿山起经龙源口（以上永新）、新城、茅坪、大陇（以上宁冈）、十都、水口、下村（以上酃县）、营盘圩、戴家埔、大汾(**fén**)、堆子前、黄坳、五斗江、车坳（以上遂川）到拿山，共计五百五十里。山上大井、小井、上井、中井、下井、茨(**cí**)坪、下庄、行洲、草坪、白银湖、罗浮各地，均有水田和村庄，为自来土匪、散军窟宅之所，现在作了我们的根据地。但人口不满两千，产谷不满万担，军粮全靠宁冈、永新、遂川三县输送。山上要隘，都筑了工事。医院、被服厂、军械处、各团留守处，均在这里。现在正从宁冈搬运粮食上山。若有充足的给养，敌人是打不进来的。第二个根据地是宁冈、永新、莲花、茶陵四县交界的九陇山，重要性不及井冈山，为四县地方武装的最后根据地，也筑了工事。在四围白色政权中间的红色割据，利用山险是必要的。
 
 ## 土地问题
 
 边界土地状况：大体说来，土地的百分之六十以上在地主手里，百分之四十以下在农民手里。江西方面，遂川的土地最集中，约百分之八十是地主的。永新次之，约百分之七十是地主的。万安、宁冈、莲花自耕农较多，但地主的土地仍占比较的多数，约百分之六十，农民只占百分之四十。湖南方面，茶陵、酃县两县均有约百分之七十的土地在地主手中。
 
-中间阶级问题：在上述土地状况之下，没收一切土地重新分配[^21]，是能得到大多数人拥护的。但农村中略分为三种阶级，即大、中地主阶级，小地主、富农的中间阶级，中农、贫农阶级。富农往往与小地主利害联在一起。富农土地在土地总额中占少数，但与小地主土地合计，则数量颇大。这种情形，恐全国亦差不多。边界对于土地是采取全部没收、彻底分配的政策；故在红色区域，豪绅阶级和中间阶级，同被打击。政策是如此，实际执行时却大受中间阶级的阻碍。当革命初期，中间阶级表面上投降贫农阶级，实际则利用他们从前的社会地位及家族主义，恐吓贫农，延宕分田的时间。到无可延宕时，即隐瞒土地实数，或自据肥田，把瘠田让人。此时期内，贫农因长期地被摧残及感觉革命胜利无保障，往往接受中间阶级的意见，不敢积极行动。必待进至革命高涨，如得了全县甚至几县政权，反动军队几次战败，红军的威力几次表现之后，农村中才有对于中间阶级的积极行动。如永新南乡，是中间阶级最多的地方，延宕分田及隐瞒土地也最厉害。到六月二十三日龙源口红军大胜之后，区政府又处理了几个延宕分田的人，才实际地分下去。但是无论哪一县，封建的家族组织十分普遍，多是一姓一个村子，或一姓几个村子，非有一个比较长的时间，村子内阶级分化不能完成，家族主义不能战胜。
+中间阶级问题：在上述土地状况之下，没收一切土地重新分配[^21]，是能得到大多数人拥护的。但农村中略分为三种阶级，即大、中地主阶级，小地主、富农的中间阶级，中农、贫农阶级。富农往往与小地主利害联在一起。富农土地在土地总额中占少数，但与小地主土地合计，则数量颇大。这种情形，恐全国亦差不多。边界对于土地是采取全部没收、彻底分配的政策；故在红色区域，豪绅阶级和中间阶级，同被打击。政策是如此，实际执行时却大受中间阶级的阻碍。当革命初期，中间阶级表面上投降贫农阶级，实际则利用他们从前的社会地位及家族主义，恐吓贫农，延宕(**dàng，拖延、延迟**)分田的时间。到无可延宕时，即隐瞒土地实数，或自据肥田，把瘠田让人。此时期内，贫农因长期地被摧残及感觉革命胜利无保障，往往接受中间阶级的意见，不敢积极行动。必待进至革命高涨，如得了全县甚至几县政权，反动军队几次战败，红军的威力几次表现之后，农村中才有对于中间阶级的积极行动。如永新南乡，是中间阶级最多的地方，延宕分田及隐瞒土地也最厉害。到六月二十三日龙源口红军大胜之后，区政府又处理了几个延宕分田的人，才实际地分下去。但是无论哪一县，封建的家族组织十分普遍，多是一姓一个村子，或一姓几个村子，非有一个比较长的时间，村子内阶级分化不能完成，家族主义不能战胜。
 
-白色恐怖下中间阶级的反水：中间阶级在革命高涨时受到打击，白色恐怖一来，马上反水。引导反动军队大烧永新、宁冈革命农民的房子的，就是两县的小地主和富农。他们依照反动派的指示，烧屋、捉人，十分勇敢。红军再度到宁冈新城、古城、砻市一带时，有数千农民听信反动派的共产党将要杀死他们的宣传，跟了反动派跑到永新。经过我们“不杀反水农民”、“欢迎反水农民回来割禾”的宣传之后，才有一些农民慢慢地跑回来。
+白色恐怖下中间阶级的反水：中间阶级在革命高涨时受到打击，白色恐怖一来，马上反水。引导反动军队大烧永新、宁冈革命农民的房子的，就是两县的小地主和富农。他们依照反动派的指示，烧屋、捉人，十分勇敢。红军再度到宁冈新城、古城、砻(**lóng**)市一带时，有数千农民听信反动派的共产党将要杀死他们的宣传，跟了反动派跑到永新。经过我们“不杀反水农民”、“欢迎反水农民回来割禾”的宣传之后，才有一些农民慢慢地跑回来。
 
 全国革命低潮时，割据地区最困难的问题，就在拿不住中间阶级。中间阶级之所以反叛，受到革命的过重打击是主因。然若全国在革命高涨中，贫农阶级有所恃而增加勇气，中间阶级亦有所惧而不敢乱为。当李宗仁唐生智战争向湖南发展时，茶陵的小地主向农民求和，有送猪肉给农民过年的（这时红军已退出茶陵向遂川去了）。李唐战争结束，就不见有这等事了。现在全国是反革命高涨时期，被打击的中间阶级在白色区域内几乎完全附属于豪绅阶级去了，贫农阶级成了孤军。此问题实在严重得很[^22]。
 
@@ -76,19 +76,19 @@
 
 ## 政权问题
 
-县、区、乡各级民众政权是普遍地组织了，但是名不副实。许多地方无所谓工农兵代表会。乡、区两级乃至县一级，政府的执行委员会，都是用一种群众会选举的。一哄而集的群众会，不能讨论问题，不能使群众得到政治训练，又最便于知识分子或投机分子的操纵。一些地方有了代表会，亦仅认为是对执行委员会的临时选举机关；选举完毕，大权揽于委员会，代表会再不谈起。名副其实的工农兵代表会组织，不是没有，只是少极了。所以如此，就是因为缺乏对于代表会这个新的政治制度的宣传和教育。封建时代独裁专断的恶习惯深中于群众乃至一般党员的头脑中，一时扫除不净，遇事贪图便利，不喜欢麻烦的民主制度。民主集中主义的制度，一定要在革命斗争中显出了它的效力，使群众了解它是最能发动群众力量和最利于斗争的，方能普遍地真实地应用于群众组织。我们正在制订详细的各级代表会组织法（依据中央的大纲），把以前的错误逐渐纠正。红军中的各级士兵代表会议，现亦正在使之经常建立起来，纠正从前只有士兵委员会而无士兵代表会的错误。
+县、区、乡各级民众政权是普遍地组织了，但是名不副实。许多地方无所谓工农兵代表会。**乡、区两级乃至县一级，政府的执行委员会，都是用一种群众会选举的。一哄而集的群众会，不能讨论问题，不能使群众得到政治训练，又最便于知识分子或投机分子的操纵。一些地方有了代表会，亦仅认为是对执行委员会的临时选举机关；选举完毕，大权揽于委员会，代表会再不谈起。名副其实的工农兵代表会组织，不是没有，只是少极了。所以如此，就是因为缺乏对于代表会这个新的政治制度的宣传和教育。封建时代独裁专断的恶习惯深中于群众乃至一般党员的头脑中，一时扫除不净，遇事贪图便利，不喜欢麻烦的民主制度。民主集中主义的制度，一定要在革命斗争中显出了它的效力，使群众了解它是最能发动群众力量和最利于斗争的，方能普遍地真实地应用于群众组织。**我们正在制订详细的各级代表会组织法（依据中央的大纲），把以前的错误逐渐纠正。红军中的各级士兵代表会议，现亦正在使之经常建立起来，纠正从前只有士兵委员会而无士兵代表会的错误。
 
-现在民众普遍知道的“工农兵政府”，是指委员会，因为他们尚不认识代表会的权力，以为委员会才是真正的权力机关。没有代表大会作依靠的执行委员会，其处理事情，往往脱离群众的意见，对没收及分配土地的犹豫妥协，对经费的滥用和贪污，对白色势力的畏避或斗争不坚决，到处发现。委员会也很少开全体会，遇事由常委处决。区乡两级政府则常委会也少开，遇事由主席、秘书、财务或赤卫队长（暴动队长）各自处理决定，这四个人是经常驻会的。所以，民主集中主义，在政府工作中也用得不习惯。
+**现在民众普遍知道的“工农兵政府”，是指委员会，因为他们尚不认识代表会的权力，以为委员会才是真正的权力机关。没有代表大会作依靠的执行委员会，其处理事情，往往脱离群众的意见，对没收及分配土地的犹豫妥协，对经费的滥用和贪污，对白色势力的畏避或斗争不坚决，到处发现。委员会也很少开全体会，遇事由常委处决。区乡两级政府则常委会也少开，遇事由主席、秘书、财务或赤卫队长（暴动队长）各自处理决定，这四个人是经常驻会的。所以，民主集中主义，在政府工作中也用得不习惯。**
 
-初期的政府委员会中，特别是乡政府一级，小地主富农争着要干。他们挂起红带子，装得很热心，用骗术钻入了政府委员会，把持一切，使贫农委员只作配角。只有在斗争中揭破了他们的假面，贫农阶级起来之后，方能去掉他们。这种现象虽不普遍，但在很多地方都发现了。
+**初期的政府委员会中，特别是乡政府一级，小地主富农争着要干。他们挂起红带子，装得很热心，用骗术钻入了政府委员会，把持一切，使贫农委员只作配角。只有在斗争中揭破了他们的假面，贫农阶级起来之后，方能去掉他们。这种现象虽不普遍，但在很多地方都发现了。**
 
 党在群众中有极大的威权，政府的威权却差得多。这是由于许多事情为图省便，党在那里直接做了，把政权机关搁置一边。这种情形是很多的。政权机关里的党团组织有些地方没有，有些地方有了也用得不完满。以后党要执行领导政府的任务；党的主张办法，除宣传外，执行的时候必须通过政府的组织。国民党直接向政府下命令的错误办法，是要避免的。
 
 ## 党的组织问题
 
-与机会主义斗争的经过：马日事变前后，边界各县的党，可以说是被机会主义操纵的。当反革命到来时，很少坚决的斗争。去年十月，红军（工农革命军第一军第一师第一团）到达边界各县时，只剩下若干避难藏匿的党员，党的组织全部被敌人破坏了。十一月到今年四月，为重新建党时期，五月以后为大发展时期。一年以来，党内机会主义现象仍然到处发现：一部分党员无斗争决心，敌来躲入深山，叫做“打埋伏”；一部分党员富有积极性，却又流于盲目的暴动。这些都是小资产阶级思想的表现。这种情形，经过长期的斗争锻炼和党内教育，逐渐减少了。同时，在红军中，这种小资产阶级的思想，也是存在的。敌人来了，主张拚一下，否则就要逃跑。这两种思想，往往在讨论作战时由一个人说出来。经过了长时间党内的斗争和客观事实的教训，例如拚一下遭了损伤，逃跑遭了失败，才逐渐地改变过来。
+与机会主义斗争的经过：马日事变前后，边界各县的党，可以说是被机会主义操纵的。当反革命到来时，很少坚决的斗争。去年十月，红军（工农革命军第一军第一师第一团）到达边界各县时，只剩下若干避难藏匿的党员，党的组织全部被敌人破坏了。十一月到今年四月，为重新建党时期，五月以后为大发展时期。一年以来，党内机会主义现象仍然到处发现：一部分党员无斗争决心，敌来躲入深山，叫做“打埋伏”；一部分党员富有积极性，却又流于盲目的暴动。这些都是小资产阶级思想的表现。这种情形，经过长期的斗争锻炼和党内教育，逐渐减少了。同时，在红军中，这种小资产阶级的思想，也是存在的。敌人来了，主张拚(**pàn，争斗**)一下，否则就要逃跑。这两种思想，往往在讨论作战时由一个人说出来。经过了长时间党内的斗争和客观事实的教训，例如拚一下遭了损伤，逃跑遭了失败，才逐渐地改变过来。
 
-地方主义：边界的经济，是农业经济，有些地方还停留在杵臼时代（山地大都用杵臼舂米，平地方有许多石碓）。社会组织是普遍地以一姓为单位的家族组织。党在村落中的组织，因居住关系，许多是一姓的党员为一个支部，支部会议简直同时就是家族会议。在这种情形下，“斗争的布尔什维克党”的建设，真是难得很。说共产党不分国界省界的话，他们不大懂，不分县界、区界、乡界的话，他们也是不大懂得的。各县之间地方主义很重，一县内的各区乃至各乡之间也有很深的地方主义。这种地方主义的改变，说道理，至多发生几分效力，多半要靠白色势力的非地方主义的压迫。例如反革命的两省“会剿”，使人民在斗争中有了共同的利害，才可以逐渐地打破他们的地方主义。经过了许多这样的教训，地方主义是减少了。
+地方主义：边界的经济，是农业经济，有些地方还停留在杵臼(**chǔ jiù，舂捣粮食或药物等的工具**)时代（山地大都用杵臼舂(**chōng，把东西放在石臼或乳钵里捣去皮壳或捣碎**)米，平地方有许多石碓(**duì，舂米用具**)）。社会组织是普遍地以一姓为单位的家族组织。党在村落中的组织，因居住关系，许多是一姓的党员为一个支部，支部会议简直同时就是家族会议。在这种情形下，“斗争的布尔什维克党”的建设，真是难得很。说共产党不分国界省界的话，他们不大懂，不分县界、区界、乡界的话，他们也是不大懂得的。各县之间地方主义很重，一县内的各区乃至各乡之间也有很深的地方主义。这种地方主义的改变，说道理，至多发生几分效力，多半要靠白色势力的非地方主义的压迫。例如反革命的两省“会剿”，使人民在斗争中有了共同的利害，才可以逐渐地打破他们的地方主义。经过了许多这样的教训，地方主义是减少了。
 
 土客籍问题：边界各县还有一件特别的事，就是土客籍的界限。土籍的本地人和数百年前从北方移来的客籍人之间存在着很大的界限，历史上的仇怨非常深，有时发生很激烈的斗争。这种客籍人从闽粤边起，沿湘、赣两省边界，直至鄂南，大概有几百万人。客籍占领山地，为占领平地的土籍所压迫，素无政治权利。前年和去年的国民革命，客籍表示欢迎，以为出头有日。不料革命失败，客籍被土籍压迫如故。我们的区域内，宁冈、遂川、酃县、茶陵，都有土客籍问题，而以宁冈的问题为最严重。前年至去年，宁冈的土籍革命派和客籍结合，在共产党领导之下，推翻了土籍豪绅的政权，掌握了全县。去年六月，江西朱培德政府反革命，九月，豪绅带领朱培德军队“进剿”宁冈，重新挑起土客籍人民之间斗争。这种土客籍的界限，在道理上讲不应引到被剥削的工农阶级内部来，尤其不应引到共产党内部来。然而在事实上，因为多年遗留下来的习惯，这种界限依然存在。例如边界八月失败，土籍豪绅带领反动军队回宁冈，宣传客籍将要杀土籍，土籍农民大部分反水，挂起白带子，带领白军烧屋搜山。十月、十一月红军打败白军，土籍农民跟着反动派逃走，客籍农民又去没收土籍农民的财物。这种情况，反映到党内来，时常发生无谓的斗争。我们的办法是一面宣传“不杀反水农民”，“反水农民回来一样得田地”，使他们脱离豪绅的影响，安心回家；一面由县政府责令客籍农民将没收的财物退还原主，并出布告保护土籍农民。在党内，加紧教育，务使两部分党员团结一致。
 
@@ -98,9 +98,9 @@
 
 ## 革命性质问题
 
-我们完全同意共产国际关于中国问题的决议。中国现时确实还是处在资产阶级民权革命的阶段。中国彻底的民权主义革命的纲领，包括对外推翻帝国主义，求得彻底的民族解放；对内肃清买办阶级的在城市的势力，完成土地革命，消灭乡村的封建关系，推翻军阀政府。必定要经过这样的民权主义革命，方能造成过渡到社会主义的真正基础。我们一年来转战各地，深感全国革命潮流的低落。一方面有少数小块地方的红色政权，一方面全国人民还没有普通的民权，工人农民以至民权派的资产阶级，一概没有言论集会的权利，加入共产党是最大的犯罪。红军每到一地，群众冷冷清清，经过宣传之后，才慢慢地起来。和敌军打仗，不论哪一军都要硬打，没有什么敌军内部的倒戈或暴动。马日事变后招募“暴徒”最多的第六军，也是这样。我们深深感觉寂寞，我们时刻盼望这种寂寞生活的终了。要转入到沸热的全国高涨的革命中去，则包括城市小资产阶级在内的政治的经济的民权主义斗争的发动，是必经的道路。
+我们完全同意共产国际关于中国问题的决议。**中国现时确实还是处在资产阶级民权革命的阶段。中国彻底的民权主义革命的纲领，包括对外推翻帝国主义，求得彻底的民族解放；对内肃清买办阶级的在城市的势力，完成土地革命，消灭乡村的封建关系，推翻军阀政府。必定要经过这样的民权主义革命，方能造成过渡到社会主义的真正基础。**我们一年来转战各地，深感全国革命潮流的低落。一方面有少数小块地方的红色政权，一方面全国人民还没有普通的民权，工人农民以至民权派的资产阶级，一概没有言论集会的权利，加入共产党是最大的犯罪。红军每到一地，群众冷冷清清，经过宣传之后，才慢慢地起来。和敌军打仗，不论哪一军都要硬打，没有什么敌军内部的倒戈或暴动。马日事变后招募“暴徒”最多的第六军，也是这样。我们深深感觉寂寞，我们时刻盼望这种寂寞生活的终了。**要转入到沸热的全国高涨的革命中去，则包括城市小资产阶级在内的政治的经济的民权主义斗争的发动，是必经的道路。**
 
-对小资产阶级的政策，我们在今年二月以前，是比较地执行得好的。三月湖南特委的代表到宁冈，批评我们太右，烧杀太少，没有执行所谓“使小资产变成无产，然后强迫他们革命”的政策，于是改变原来前委的领导人，政策一变。四月全军到边界后，烧杀虽仍不多，但对城市中等商人的没收和乡村小地主富农的派款，是做得十分厉害的。湘南特委提出的“一切工厂归工人”的口号，也宣传得很普遍。这种打击小资产阶级的过左的政策，把小资产阶级大部驱到豪绅一边，使他们挂起白带子反对我们。近来逐渐改变这种政策，情形渐渐好些。在遂川特别收到了好的效果，县城和市镇上的商人不畏避我们了，颇有说红军的好话的。草林圩上逢圩（日中为市，三天一次），到圩两万人，为从来所未有。这件事，证明我们的政策是正确的了。豪绅对人民的税捐很重，遂川靖卫团[^26]在黄坳到草林七十里路上要抽五道税，无论什么农产都不能免。我们打掉靖卫团，取消这些税，获得了农民和中小商人全体的拥护。
+对小资产阶级的政策，我们在今年二月以前，是比较地执行得好的。三月湖南特委的代表到宁冈，批评我们太右，烧杀太少，没有执行所谓“使小资产变成无产，然后强迫他们革命”的政策，于是改变原来前委的领导人，政策一变。四月全军到边界后，烧杀虽仍不多，但对城市中等商人的没收和乡村小地主富农的派款，是做得十分厉害的。湘南特委提出的“一切工厂归工人”的口号，也宣传得很普遍。这种打击小资产阶级的过左的政策，把小资产阶级大部驱到豪绅一边，使他们挂起白带子反对我们。近来逐渐改变这种政策，情形渐渐好些。在遂川特别收到了好的效果，县城和市镇上的商人不畏避我们了，颇有说红军的好话的。草林圩(**xū，集市**)上逢圩（日中为市，三天一次），到圩两万人，为从来所未有。这件事，证明我们的政策是正确的了。豪绅对人民的税捐很重，遂川靖卫团[^26]在黄坳到草林七十里路上要抽五道税，无论什么农产都不能免。我们打掉靖卫团，取消这些税，获得了农民和中小商人全体的拥护。
 
 中央要我们发布一个包括小资产阶级利益的政纲，我们则提议请中央制订一个整个民权革命的政纲，包括工人利益、土地革命和民族解放，使各地有所遵循。
 
@@ -110,7 +110,7 @@
 
 广东北部沿湖南江西两省边界至湖北南部，都属罗霄山脉区域。整个的罗霄山脉我们都走遍了；各部分比较起来，以宁冈为中心的罗霄山脉的中段，最利于我们的军事割据。北段地势不如中段可进可守，又太迫近了大的政治都会，如果没有迅速夺取长沙或武汉的计划，则以大部兵力放在浏阳、醴陵、萍乡、铜鼓一带是很危险的。南段地势较北段好，但群众基础不如中段，政治上及于湘赣两省的影响也小些，不如中段一举一动可以影响两省的下游。中段的长处：（1）有经营了一年多的群众基础。（2）党的组织有相当的基础。（3）经过一年多的时间，创造了富有斗争经验的地方武装，这是十分难得的；这个地方武装的力量，加上红军第四军的力量，是任凭什么敌人也不能消灭的。（4）有很好的军事根据地——井冈山，地方武装的根据地则各县都有。（5）影响两省，且能影响两省的下游，比较湘南赣南等处只影响一省，且在一省的上游和僻地者，政治意义大不相同。中段的缺点，是因割据已久，“围剿”军多，经济问题，特别是现金问题，十分困难。
 
-湖南省委对于此间的行动计划，六七月间数星期内，曾三变其主张。第一次袁德生来，赞成罗霄山脉中段政权计划。第二次杜修经、杨开明来，主张红军毫不犹豫地向湘南发展，只留二百枝枪会同赤卫队保卫边界，并说这是“绝对正确”的方针。第三次袁德生又来，相隔不过十天，这次信上除骂了我们一大篇外，却主张红军向湘东去，又说是“绝对正确”的方针，而且又要我们“毫不犹豫”。我们接受了这样硬性的指示，不从则迹近违抗，从则明知失败，真是不好处。当第二次信到时，军委、特委、永新县委举行联席会议，认为往湘南危险，决定不执行省委的意见。数天之后，却由杜修经杨开明坚持省委意见，利用第二十九团的乡土观念，把红军拉去攻郴州，致边界和红军一齐失败。红军数量上约损失一半；边界则被焚之屋、被杀之人不可胜数，各县相继失陷，至今未能完全恢复。至于往湘东，在湘鄂赣三省豪绅政权尚未分裂之前，亦决不宜用红军的主力去。设七月无去湘南一举，则不但可免边界的八月失败，且可乘国民党第六军和王均战于江西樟树之际，击破永新敌军，席卷吉安、安福，前锋可达萍乡，而与北段之红第五军取得联络。即在这种时候，也应以宁冈为大本营，去湘东的只能是游击部队。因豪绅间战争未起，湘边酃县、茶陵、攸县尚有大敌，主力北向，必为所乘。中央要我们考虑往湘东或往湘南，实行起来都很危险，湘东之议虽未实现，湘南则已有证验。这种痛苦的经验，是值得我们时时记着的。
+湖南省委对于此间的行动计划，六七月间数星期内，曾三变其主张。第一次袁德生来，赞成罗霄山脉中段政权计划。第二次杜修经、杨开明来，主张红军毫不犹豫地向湘南发展，只留二百枝枪会同赤卫队保卫边界，并说这是“绝对正确”的方针。第三次袁德生又来，相隔不过十天，这次信上除骂了我们一大篇外，却主张红军向湘东去，又说是“绝对正确”的方针，而且又要我们“毫不犹豫”。我们接受了这样硬性的指示，不从则迹(**jì**)近违抗，从则明知失败，真是不好处。当第二次信到时，军委、特委、永新县委举行联席会议，认为往湘南危险，决定不执行省委的意见。数天之后，却由杜修经杨开明坚持省委意见，利用第二十九团的乡土观念，把红军拉去攻郴州，致边界和红军一齐失败。红军数量上约损失一半；边界则被焚之屋、被杀之人不可胜数，各县相继失陷，至今未能完全恢复。至于往湘东，在湘鄂赣三省豪绅政权尚未分裂之前，亦决不宜用红军的主力去。设七月无去湘南一举，则不但可免边界的八月失败，且可乘国民党第六军和王均战于江西樟树之际，击破永新敌军，席卷吉安、安福，前锋可达萍乡，而与北段之红第五军取得联络。即在这种时候，也应以宁冈为大本营，去湘东的只能是游击部队。因豪绅间战争未起，湘边酃县、茶陵、攸县尚有大敌，主力北向，必为所乘。中央要我们考虑往湘东或往湘南，实行起来都很危险，湘东之议虽未实现，湘南则已有证验。这种痛苦的经验，是值得我们时时记着的。
 
 现在是豪绅阶级统治还没有破裂的时期，环边界而“进剿”的敌军，尚有十余团之多。但若我们于现金问题能继续找得出路（粮食衣服已不成大问题），则凭借边界的基础，对付此数敌人，甚至更多的敌人，均有办法。为边界计，红军若走，则像八月那样的蹂躏，立可重来。赤卫队虽不至完全消灭，党和群众的基础将受到极大的摧残，除山头割据可以保存一些外，平地均将转入秘密状态，如八九月间一样。红军不走，以现在的基础可以逐渐向四周发展，前途的希望是很大的。为红军计，欲求扩大，只有在有群众基础的井冈山四周即宁冈、永新、酃县、遂川四县，利用湘赣两敌利害不一致，四面防守，无法集中的情况，和敌人作长期的斗争。利用正确的战术，不战则已，战则必胜，必有俘获，如此可以逐渐扩大红军。以四月至七月那时边界群众的准备，红军大队若无湘南之行，则八月间红军的扩大是没有疑义的。虽然犯了一次错误，红军已卷土重来此地利人和之边界，前途希望还是不恶。红军必须在边界这等地方，下斗争的决心，有耐战的勇气，才能增加武器，练出好兵。边界的红旗子，业已打了一年，虽然一方面引起了湘鄂赣三省乃至全国豪绅阶级的痛恨，另一方面却渐渐引起了附近省份工农士兵群众的希望。以士兵论，因军阀们把向边界“剿匪”当做一件大事，“剿匪经年，耗费百万”（鲁涤平），“人称二万，枪号五千”（王均），如此等类的话，逐渐引起敌军士兵和无出路的下级官长对我们注意，自拔来归的将日益增多，红军扩充，又是一条来路。并且边界红旗子始终不倒，不但表示了共产党的力量，而且表示了统治阶级的破产，在全国政治上有重大的意义。所以我们始终认为罗霄山脉中段政权的创造和扩大，是十分必要和十分正确的。
 
