--- a/毛泽东选集-读书笔记(索引).md
+++ b/毛泽东选集-读书笔记(索引).md
@@ -27,3 +27,8 @@
 #### 关于纠正党内的错误思想(1929.12)
 
 [关于纠正党内的错误思想](毛泽东选集-读书笔记/第一卷/第二次国内革命战争时期/关于纠正党内的错误思想.md)
+
+#### 星星之火，可以燎原(1930.1.5)
+
+[星星之火，可以燎原](毛泽东选集-读书笔记/第一卷/第二次国内革命战争时期/星星之火，可以燎原.md)
+
