--- a/毛泽东选集-读书笔记.md
+++ b/毛泽东选集-读书笔记.md
@@ -22,7 +22,7 @@
 
 第二，革命不是请客吃饭，不是做文章，不是绘画绣花，不能那样雅致，那样从容不迫，文质彬彬，那样温良恭俭让。革命是暴动，是一个阶级推翻一个阶级的暴烈的行动。
 
-在第二时期内，必须建立农民的绝对权力。必须不准人恶意地批评农会。必须把一切绅权都打倒，把绅士打在地下，甚至用脚踏上。所有一切所谓“过分”的举动，在第二时期都有革命的意义。质言之，每个农村都必须造成一个短时期的恐怖现象，非如此决不能镇压农村反革命派的活动，决不能打倒绅权。矫枉必须过正，不过正不能矫枉[^1-1-2-4]。
+在第二时期内，必须建立农民的绝对权力。必须不准人恶意地批评农会。必须把一切绅权都打倒，把绅士打在地下，甚至用脚踏上。所有一切所谓“过分”的举动，在第二时期都有革命的意义。质言之，每个农村都必须造成一个短时期的恐怖现象，非如此决不能镇压农村反革命派的活动，决不能打倒绅权。**矫枉必须过正，不过正不能矫枉[^1-1-2-4]。**
 
 终结旧的封建秩序，必须用群众的革命方法，而不是用修正的——改良的方法。
 
@@ -61,7 +61,7 @@
 
 尤其是新来的俘虏兵，他们感觉国民党军队和我们军队是两个世界。他们虽然感觉红军的物质生活不如白军，但是精神得到了解放。同样一个兵，昨天在敌军不勇敢，今天在红军很勇敢，就是民主主义的影响。红军像一个火炉，俘虏兵过来马上就熔化了。中国不但人民需要民主主义，军队也需要民主主义。军队内的民主主义制度，将是破坏封建雇佣军队的一个重要的武器[^1-2-2-17]。
 
-乡、区两级乃至县一级，政府的执行委员会，都是用一种群众会选举的。一哄而集的群众会，不能讨论问题，不能使群众得到政治训练，又最便于知识分子或投机分子的操纵。一些地方有了代表会，亦仅认为是对执行委员会的临时选举机关；选举完毕，大权揽于委员会，代表会再不谈起。名副其实的工农兵代表会组织，不是没有，只是少极了。所以如此，就是因为缺乏对于代表会这个新的政治制度的宣传和教育。封建时代独裁专断的恶习惯深中于群众乃至一般党员的头脑中，一时扫除不净，遇事贪图便利，不喜欢麻烦的民主制度。民主集中主义的制度，一定要在革命斗争中显出了它的效力，使群众了解它是最能发动群众力量和最利于斗争的，方能普遍地真实地应用于群众组织。
+乡、区两级乃至县一级，政府的执行委员会，都是用一种群众会选举的。**一哄而集的群众会，不能讨论问题，不能使群众得到政治训练，又最便于知识分子或投机分子的操纵。**一些地方有了代表会，亦仅认为是对执行委员会的临时选举机关；选举完毕，大权揽于委员会，代表会再不谈起。名副其实的工农兵代表会组织，不是没有，只是少极了。所以如此，就是因为缺乏对于代表会这个新的政治制度的宣传和教育。**封建时代独裁专断的恶习惯深中于群众乃至一般党员的头脑中，一时扫除不净，遇事贪图便利，不喜欢麻烦的民主制度。**民主集中主义的制度，一定要在革命斗争中显出了它的效力，使群众了解它是最能发动群众力量和最利于斗争的，方能普遍地真实地应用于群众组织。
 
 现在民众普遍知道的“工农兵政府”，是指委员会，因为他们尚不认识代表会的权力，以为委员会才是真正的权力机关。没有代表大会作依靠的执行委员会，其处理事情，往往脱离群众的意见，对没收及分配土地的犹豫妥协，对经费的滥用和贪污，对白色势力的畏避或斗争不坚决，到处发现。委员会也很少开全体会，遇事由常委处决。区乡两级政府则常委会也少开，遇事由主席、秘书、财务或赤卫队长（暴动队长）各自处理决定，这四个人是经常驻会的。所以，民主集中主义，在政府工作中也用得不习惯。
 
@@ -74,3 +74,44 @@
 [^1-2-2-17]:在军队内部实行一定的民主，是毛泽东一贯的思想。在这里毛泽东特别着重地指出革命军队内部民主生活的必要，是因为当时红军初建，非强调民主，不足以鼓舞新入伍的农民和俘虏过来的国民党军士兵的革命积极性，不足以肃清干部中由反动军队传来的军阀主义的习气。当然，部队中的民主生活必须是在军事纪律所许可的范围内，必须是为着加强纪律而不是为着减弱纪律，所以在部队中提倡必要的民主的时候，必须同时反对要求极端民主的无纪律现象。而这种现象在初期的红军中，曾经一度严重地存在过。关于毛泽东反对军队中极端民主化的斗争，参见本卷《关于纠正党内的错误思想》。
 
 #### 关于纠正党内的错误思想(1929.12)
+
+以为红军的任务也和白军相仿佛，只是单纯地打仗的。不知道中国的红军是一个执行革命的政治任务的武装集团。特别是现在，红军决不是单纯地打仗的，它除了打仗消灭敌人军事力量之外，还要负担宣传群众、组织群众、武装群众、帮助群众建立革命政权以至于建立共产党的组织等项重大的任务。红军的打仗，不是单纯地为了打仗而打仗，而是为了宣传群众、组织群众、武装群众，并帮助群众建设革命政权才去打仗的，离了对群众的宣传、组织、武装和建设革命政权等项目标，就是失去了打仗的意义，也就是失去了红军存在的意义。
+
+从理论上铲除极端民主化的根苗。首先，要指出极端民主化的危险，在于损伤以至完全破坏党的组织，削弱以至完全毁灭党的战斗力，使党担负不起斗争的责任，由此造成革命的失败。其次，要指出极端民主化的来源，在于小资产阶级的自由散漫性。这种自由散漫性带到党内，就成了政治上的和组织上的极端民主化的思想。这种思想是和无产阶级的斗争任务根本不相容的。
+
+开会时要使到会的人尽量发表意见。有争论的问题，要把是非弄明白，不要调和敷衍。一次不能解决的，二次再议（以不妨碍工作为条件），以期得到明晰的结论。
+
+党的纪律之一是少数服从多数。少数人在自己的意见被否决之后，必须拥护多数人所通过的决议。除必要时得在下一次会议再提出讨论外，不得在行动上有任何反对的表示。
+
+党内批评是坚强党的组织、增加党的战斗力的武器。但是红军党内的批评有些不是这样，变成了攻击个人。其结果，不但毁坏了个人，也毁坏了党的组织。这是小资产阶级个人主义的表现。纠正的方法，在于使党员明白批评的目的是增加党的战斗力以达到阶级斗争的胜利，不应当利用批评去做攻击个人的工具。
+
+许多党员不在党内批评而在党外去批评。这是因为一般党员还不懂得党的组织（会议等）的重要，以为批评在组织内或在组织外没有什么分别。纠正的方法，就是要教育党员懂得党的组织的重要性，对党委或同志有所批评应当在党的会议上提出。
+
+绝对平均主义的来源，和政治上的极端民主化一样，是手工业和小农经济的产物，不过一则见之于政治生活方面，一则见之于物质生活方面罢了。
+
+**应指出绝对平均主义不但在资本主义没有消灭的时期，只是农民小资产者的一种幻想；就是在社会主义时期，物质的分配也要按照“各尽所能按劳取酬”的原则和工作的需要，决无所谓绝对的平均。**红军人员的物质分配，应该做到大体上的平均，例如官兵薪饷平等，因为这是现时斗争环境所需要的。但是必须反对不问一切理由的绝对平均主义，因为这不是斗争的需要，适得其反，是于斗争有妨碍的。
+
+关于党内批评问题，还有一点要说及的，就是有些同志的批评不注意大的方面，只注意小的方面。他们不明白批评的主要任务，是指出政治上的错误和组织上的错误。至于个人缺点，如果不是与政治的和组织的错误有联系，则不必多所指摘，使同志们无所措手足。而且这种批评一发展，党内精神完全集注到小的缺点方面，人人变成了谨小慎微的君子，就会忘记党的政治任务，这是很大的危险。
+
+主要是教育党员使党员的思想和党内的生活都政治化，科学化。要达到这个目的，就要：（一）教育党员用马克思列宁主义的方法去作政治形势的分析和阶级势力的估量，以代替主观主义的分析和估量。（二）使党员注意社会经济的调查和研究，由此来决定斗争的策略和工作的方法，使同志们知道离开了实际情况的调查，就要堕入空想和盲动的深坑。（三）党内批评要防止主观武断和把批评庸俗化，说话要有证据，批评要注意政治。
+
+报复主义。在党内受了士兵同志的批评，到党外找机会报复他，打骂就是报复的一种手段。在党内也寻报复；你在这次会议上说了我，我就在下次会议上找岔子报复你。这种报复主义，完全从个人观点出发，不知有阶级的利益和整个党的利益。它的目标不在敌对阶级，而在自己队伍里的别的个人。这是一种削弱组织、削弱战斗力的销蚀剂。
+
+小团体主义。只注意自己小团体的利益，不注意整体的利益，表面上不是为个人，实际上包含了极狭隘的个人主义，同样地具有很大的销蚀作用和离心作用。红军中历来小团体风气很盛，经过批评现在是好些了，但其残余依然存在，还须努力克服。
+
+雇佣思想。不认识党和红军都是执行革命任务的工具，而自己是其中的一员。不认识自己是革命的主体，以为自己仅仅对长官个人负责任，不是对革命负责任。这种消极的雇佣革命的思想，也是一种个人主义的表现。这种雇佣革命的思想，是无条件努力的积极活动分子所以不很多的原因。雇佣思想不肃清，积极活动分子便无由增加，革命的重担便始终放在少数人的肩上，于斗争极为不利。
+
+享乐主义。个人主义见于享乐方面的，在红军中也有不少的人。他们总是希望队伍开到大城市去。他们要到大城市不是为了去工作，而是为了去享乐。他们最不乐意的是在生活艰难的红色区域里工作。
+
+消极怠工。稍不遂意，就消极起来，不做工作。其原因主要是缺乏教育，但也有是领导者处理问题、分配工作或执行纪律不适当。
+
+离队思想。在红军工作的人要求脱离队伍调地方工作的与日俱增。其原因，也不完全是个人的，尚有一，红军物质生活过差；二，长期斗争，感觉疲劳；三，领导者处理问题、分配工作或执行纪律不适当等项原因。
+
+主要是加强教育，从思想上纠正个人主义。再则处理问题、分配工作、执行纪律要得当。并要设法改善红军的物质生活，利用一切可能时机休息整理，以改善物质条件。**个人主义的社会来源是小资产阶级和资产阶级的思想在党内的反映，当进行教育的时候必须说明这一点。**
+
+由于红军中游民成分占了很大的数量和全国特别是南方各省有广大游民群众的存在，就在红军中产生了流寇主义的政治思想。这种思想表现在：一，不愿意做艰苦工作建立根据地，建立人民群众的政权，并由此去扩大政治影响，而只想用流动游击的方法，去扩大政治影响。二，扩大红军，不走由扩大地方赤卫队[^3]、地方红军到扩大主力红军的路线，而要走“招兵买马”“招降纳叛”的路线。三，不耐烦和群众在一块作艰苦的斗争，只希望跑到大城市去大吃大喝。凡此一切流寇思想的表现，极大地妨碍着红军去执行正确的任务，故肃清流寇思想，实为红军党内思想斗争的一个重要目标。应当认识，历史上黄巢[^4]、李闯[^5]式的流寇主义，已为今日的环境所不许可。
+
+盲动主义的社会来源是流氓无产者的思想和小资产阶级的思想的综合。
+
+#### 星星之火，可以燎原(1930.1.5)
+
