--- a/毛泽东选集(1-7卷静火版)(一卷本).md
+++ b/毛泽东选集(1-7卷静火版)(一卷本).md
@@ -488,3 +488,221 @@
 [^1-2-2-26]: 靖卫团是一种反革命的地方武装。
 
 #### 关于纠正党内的错误思想(1929.12)
+
+**关于纠正党内的错误思想**[^1-2-3-*]
+
+（一九二九年十二月）
+
+红军第四军的共产党内存在着各种非无产阶级的思想，这对于执行党的正确路线，妨碍极大。若不彻底纠正，则中国伟大革命斗争给予红军第四军的任务，是必然担负不起来的。四军党内种种不正确思想的来源，自然是由于党的组织基础的最大部分是由农民和其他小资产阶级出身的成分所构成的；但是党的领导机关对于这些不正确的思想缺乏一致的坚决的斗争，缺乏对党员作正确路线的教育，也是使这些不正确思想存在和发展的重要原因。大会根据中央九月来信的精神，指出四军党内各种非无产阶级思想的表现、来源及其纠正的方法，号召同志们起来彻底地加以肃清。
+
+##### 关于单纯军事观点
+
+单纯军事观点在红军一部分同志中非常发展。其表现如：
+
+（一）认为军事政治二者是对立的，不承认军事只是完成政治任务的工具之一。甚至还有说“军事好，政治自然会好，军事不好，政治也不会好”的，则更进一步认为军事领导政治了。
+
+（二）以为红军的任务也和白军相仿佛，只是单纯地打仗的。不知道中国的红军是一个执行革命的政治任务的武装集团。特别是现在，红军决不是单纯地打仗的，它除了打仗消灭敌人军事力量之外，还要负担宣传群众、组织群众、武装群众、帮助群众建立革命政权以至于建立共产党的组织等项重大的任务。红军的打仗，不是单纯地为了打仗而打仗，而是为了宣传群众、组织群众、武装群众，并帮助群众建设革命政权才去打仗的，离了对群众的宣传、组织、武装和建设革命政权等项目标，就是失去了打仗的意义，也就是失去了红军存在的意义。
+
+（三）因此，在组织上，把红军的政治工作机关隶属于军事工作机关，提出“司令部对外”的口号。这种思想如果发展下去，便有走到脱离群众、以军队控制政权、离开无产阶级领导的危险，如像国民党军队所走的军阀主义的道路一样。
+
+（四）同时，在宣传工作上，忽视宣传队的重要性。在群众组织上，忽视军队士兵会[^1-2-3-1]的组织和对地方工农群众的组织。结果，宣传和组织工作，都成了被取消的状态。
+
+（五）打胜仗就骄傲，打败仗就消极。
+
+（六）本位主义，一切只知道为四军打算，不知道武装地方群众是红军的重要任务之一。这是一种放大了的小团体主义。
+
+（七）有少数同志囿于四军的局部环境，以为除此就没有别的革命势力了。因此，保存实力、避免斗争的思想非常浓厚。这是机会主义的残余。
+
+（八）不顾主客观条件，犯着革命的急性病，不愿意艰苦地做细小严密的群众工作，只想大干，充满着幻想。这是盲动主义的残余[^1-2-3-2]。
+
+单纯军事观点的来源：
+
+（一）政治水平低。因此不认识军队中政治领导的作用，不认识红军和白军是根本不同的。
+
+（二）雇佣军队的思想。因为历次作战俘虏兵甚多，此种分子加入红军，带来了浓厚的雇佣军队的思想，使单纯军事观点有了下层基础。
+
+（三）因有以上两个原因，便发生第三个原因，就是过分相信军事力量，而不相信人民群众的力量。
+
+（四）党对于军事工作没有积极的注意和讨论，也是形成一部分同志的单纯军事观点的原因。
+
+纠正的方法：
+
+（一）从教育上提高党内的政治水平，肃清单纯军事观点的理论根源，认清红军和白军的根本区别。同时，还要肃清机会主义和盲动主义的残余，打破四军本位主义。
+
+（二）加紧官兵的政治训练，特别是对俘虏成分的教育要加紧。同时，尽可能由地方政权机关选派有斗争经验的工农分子，加入红军，从组织上削弱以至去掉单纯军事观点的根源。
+
+（三）发动地方党对红军党的批评和群众政权机关对红军的批评，以影响红军的党和红军的官兵。
+
+（四）党对于军事工作要有积极的注意和讨论。一切工作，在党的讨论和决议之后，再经过群众去执行。
+
+（五）编制红军法规，明白地规定红军的任务，军事工作系统和政治工作系统的关系，红军和人民群众的关系，士兵会的权能及其和军事政治机关的关系。
+
+##### 关于极端民主化
+
+红军第四军在接受中央指示之后，极端民主化的现象，减少了许多。例如党的决议比较地能够执行了；要求在红军中实行所谓“由下而上的民主集权制”、“先交下级讨论，再由上级决议”等项错误主张，也没有人再提了。但是在实际上，这种减少，只是一时的和表面的现象，还不是极端民主化的思想的肃清。这就是说，极端民主化的根苗还深种在许多同志的思想中。例如对于决议案的执行，表示种种勉强的态度，就是证据。
+
+纠正的方法：
+
+（一）从理论上铲除极端民主化的根苗。首先，要指出极端民主化的危险，在于损伤以至完全破坏党的组织，削弱以至完全毁灭党的战斗力，使党担负不起斗争的责任，由此造成革命的失败。其次，要指出极端民主化的来源，在于小资产阶级的自由散漫性。这种自由散漫性带到党内，就成了政治上的和组织上的极端民主化的思想。这种思想是和无产阶级的斗争任务根本不相容的。
+
+（二）在组织上，厉行集中指导下的民主生活。其路线是：
+
+1　党的领导机关要有正确的指导路线，遇事要拿出办法，以建立领导的中枢。
+
+2　上级机关要明了下级机关的情况和群众生活的情况，成为正确指导的客观基础。
+
+3　党的各级机关解决问题，不要太随便。一成决议，就须坚决执行。
+
+4　上级机关的决议，凡属重要一点的，必须迅速地传达到下级机关和党员群众中去。其办法是开活动分子会，或开支部以至纵队的党员大会（须看环境的可能），派人出席作报告。
+
+5　党的下级机关和党员群众对于上级机关的指示，要经过详尽的讨论，以求彻底地了解指示的意义，并决定对它的执行方法。
+
+##### 关于非组织观点
+
+四军党内存在着的非组织的观点，其表现如下：
+
+甲　少数不服从多数。例如少数人的提议被否决，他们就不诚意地执行党的决议。
+
+纠正的方法：
+
+（一）开会时要使到会的人尽量发表意见。有争论的问题，要把是非弄明白，不要调和敷衍。一次不能解决的，二次再议（以不妨碍工作为条件），以期得到明晰的结论。
+
+（二）党的纪律之一是少数服从多数。少数人在自己的意见被否决之后，必须拥护多数人所通过的决议。除必要时得在下一次会议再提出讨论外，不得在行动上有任何反对的表示。
+
+乙　非组织的批评：
+
+（一）党内批评是坚强党的组织、增加党的战斗力的武器。但是红军党内的批评有些不是这样，变成了攻击个人。其结果，不但毁坏了个人，也毁坏了党的组织。这是小资产阶级个人主义的表现。纠正的方法，在于使党员明白批评的目的是增加党的战斗力以达到阶级斗争的胜利，不应当利用批评去做攻击个人的工具。
+
+（二）许多党员不在党内批评而在党外去批评。这是因为一般党员还不懂得党的组织（会议等）的重要，以为批评在组织内或在组织外没有什么分别。纠正的方法，就是要教育党员懂得党的组织的重要性，对党委或同志有所批评应当在党的会议上提出。
+
+##### 关于绝对平均主义
+
+红军中的绝对平均主义，有一个时期发展得很厉害。例如：发给伤兵用费，反对分伤轻伤重，要求平均发给。官长骑马，不认为是工作需要，而认为是不平等制度。分物品要求极端平均，不愿意有特别情形的部分多分去一点。背米不问大人小孩体强体弱，要平均背。住房子要分得一样平，司令部住了一间大点的房子也要骂起来。派勤务要派得一样平，稍微多做一点就不肯。甚至在一副担架两个伤兵的情况，宁愿大家抬不成，不愿把一个人抬了去。这些都证明红军官兵中的绝对平均主义还很严重。
+
+绝对平均主义的来源，和政治上的极端民主化一样，是手工业和小农经济的产物，不过一则见之于政治生活方面，一则见之于物质生活方面罢了。
+
+纠正的方法：应指出绝对平均主义不但在资本主义没有消灭的时期，只是农民小资产者的一种幻想；就是在社会主义时期，物质的分配也要按照“各尽所能按劳取酬”的原则和工作的需要，决无所谓绝对的平均。红军人员的物质分配，应该做到大体上的平均，例如官兵薪饷平等，因为这是现时斗争环境所需要的。但是必须反对不问一切理由的绝对平均主义，因为这不是斗争的需要，适得其反，是于斗争有妨碍的。
+
+##### 关于主观主义
+
+主观主义，在某些党员中浓厚地存在，这对分析政治形势和指导工作，都非常不利。因为对于政治形势的主观主义的分析和对于工作的主观主义的指导，其必然的结果，不是机会主义，就是盲动主义。至于党内的主观主义的批评，不要证据的乱说，或互相猜忌，往往酿成党内的无原则纠纷，破坏党的组织。
+
+关于党内批评问题，还有一点要说及的，就是有些同志的批评不注意大的方面，只注意小的方面。他们不明白批评的主要任务，是指出政治上的错误和组织上的错误。至于个人缺点，如果不是与政治的和组织的错误有联系，则不必多所指摘，使同志们无所措手足。而且这种批评一发展，党内精神完全集注到小的缺点方面，人人变成了谨小慎微的君子，就会忘记党的政治任务，这是很大的危险。
+
+纠正的方法：主要是教育党员使党员的思想和党内的生活都政治化，科学化。要达到这个目的，就要：（一）教育党员用马克思列宁主义的方法去作政治形势的分析和阶级势力的估量，以代替主观主义的分析和估量。（二）使党员注意社会经济的调查和研究，由此来决定斗争的策略和工作的方法，使同志们知道离开了实际情况的调查，就要堕入空想和盲动的深坑。（三）党内批评要防止主观武断和把批评庸俗化，说话要有证据，批评要注意政治。
+
+##### 关于个人主义
+
+红军党内的个人主义的倾向有如下各种表现：
+
+（一）报复主义。在党内受了士兵同志的批评，到党外找机会报复他，打骂就是报复的一种手段。在党内也寻报复；你在这次会议上说了我，我就在下次会议上找岔子报复你。这种报复主义，完全从个人观点出发，不知有阶级的利益和整个党的利益。它的目标不在敌对阶级，而在自己队伍里的别的个人。这是一种削弱组织、削弱战斗力的销蚀剂。
+
+（二）小团体主义。只注意自己小团体的利益，不注意整体的利益，表面上不是为个人，实际上包含了极狭隘的个人主义，同样地具有很大的销蚀作用和离心作用。红军中历来小团体风气很盛，经过批评现在是好些了，但其残余依然存在，还须努力克服。
+
+（三）雇佣思想。不认识党和红军都是执行革命任务的工具，而自己是其中的一员。不认识自己是革命的主体，以为自己仅仅对长官个人负责任，不是对革命负责任。这种消极的雇佣革命的思想，也是一种个人主义的表现。这种雇佣革命的思想，是无条件努力的积极活动分子所以不很多的原因。雇佣思想不肃清，积极活动分子便无由增加，革命的重担便始终放在少数人的肩上，于斗争极为不利。
+
+（四）享乐主义。个人主义见于享乐方面的，在红军中也有不少的人。他们总是希望队伍开到大城市去。他们要到大城市不是为了去工作，而是为了去享乐。他们最不乐意的是在生活艰难的红色区域里工作。
+
+（五）消极怠工。稍不遂意，就消极起来，不做工作。其原因主要是缺乏教育，但也有是领导者处理问题、分配工作或执行纪律不适当。
+
+（六）离队思想。在红军工作的人要求脱离队伍调地方工作的与日俱增。其原因，也不完全是个人的，尚有一，红军物质生活过差；二，长期斗争，感觉疲劳；三，领导者处理问题、分配工作或执行纪律不适当等项原因。
+
+纠正的方法：主要是加强教育，从思想上纠正个人主义。再则处理问题、分配工作、执行纪律要得当。并要设法改善红军的物质生活，利用一切可能时机休息整理，以改善物质条件。个人主义的社会来源是小资产阶级和资产阶级的思想在党内的反映，当进行教育的时候必须说明这一点。
+
+##### 关于流寇思想
+
+由于红军中游民成分占了很大的数量和全国特别是南方各省有广大游民群众的存在，就在红军中产生了流寇主义的政治思想。这种思想表现在：一，不愿意做艰苦工作建立根据地，建立人民群众的政权，并由此去扩大政治影响，而只想用流动游击的方法，去扩大政治影响。二，扩大红军，不走由扩大地方赤卫队[^1-2-3-3]、地方红军到扩大主力红军的路线，而要走“招兵买马”“招降纳叛”的路线。三，不耐烦和群众在一块作艰苦的斗争，只希望跑到大城市去大吃大喝。凡此一切流寇思想的表现，极大地妨碍着红军去执行正确的任务，故肃清流寇思想，实为红军党内思想斗争的一个重要目标。应当认识，历史上黄巢[^1-2-3-4]、李闯[^1-2-3-5]式的流寇主义，已为今日的环境所不许可。
+
+纠正的方法：
+
+（一）加紧教育，批评不正确思想，肃清流寇主义。
+
+（二）对现有红军基本队伍和新来的俘虏兵，加紧反流氓意识的教育。
+
+（三）争取有斗争经验的工农积极分子加入红军队伍，改变红军的成分。
+
+（四）从斗争的工农群众中创造出新的红军部队。
+
+##### 关于盲动主义残余
+
+红军党内对盲动主义已经做了斗争，但尚不充分。因此，红军中还有盲动主义思想的残余存在着。其表现如：一，不顾主观和客观条件的盲干。二，城市政策执行得不充分，不坚决。三，军纪松懈，特别是打败仗时。四，还有某些部队有烧屋行为。五，枪毙逃兵的制度和肉刑制度，也是带着盲动主义性质的。盲动主义的社会来源是流氓无产者的思想和小资产阶级的思想的综合。
+
+纠正的方法：
+
+（一）从思想上肃清盲动主义。
+
+（二）从制度上和政策上纠正盲动的行为。
+
+##### 注释
+
+[^1-2-3-*]: 这是毛泽东为中国共产党红军第四军第九次代表大会写的决议的第一部分。中国人民军队的建设，是经过了艰难的道路的。中国红军（抗日时期是八路军、新四军，现在是人民解放军）从一九二七年八月一日南昌起义创始，到一九二九年十二月，经过了两年多的时间。在这个时期内，红军中的共产党和各种错误思想作斗争，学到了许多东西，积累了相当丰富的经验。毛泽东写的这个决议，就是这些经验的总结。这个决议使红军肃清旧式军队的影响，完全建立在马克思列宁主义的基础上。这个决议不但在红军第四军实行了，后来各部分红军都先后不等地照此做了，这样就使整个中国红军完全成为真正的人民军队。中国人民军队中的党的工作和政治工作，以后有广大的发展和创造，现在的面貌和过去大不相同了，但是基本的路线还是继承了这个决议的路线。
+[^1-2-3-1]: 见本卷《井冈山的斗争》注[5]。
+[^1-2-3-2]: 一九二七年革命失败后的短期间，在共产党内曾经出现一种“左”倾盲动主义倾向，认为中国革命的性质是所谓“不断革命”，中国革命的形势是所谓“不断高涨”，因而不肯去组织有秩序的退却，错误地使用命令主义的方法，企图依靠少数党员和少数群众在全国组织毫无胜利希望的许多的地方起义。这种盲动主义的行动曾经在一九二七年底流行过，到了一九二八年初渐渐地停止了下来。但有些党员也还存在着这种情绪。盲动主义就是冒险主义。
+[^1-2-3-3]: 见本卷《中国的红色政权为什么能够存在？》注[9]。
+[^1-2-3-4]: 黄巢（？——八八四），曹州冤句（今山东菏泽）人，唐朝末年农民起义领袖。公元八七五年，即唐僖宗乾符二年，黄巢聚众响应王仙芝领导的起义。公元八七八年，王仙芝被杀后，黄巢收集王的余部，被推为领袖，号“冲天大将军”。他领导的起义队伍，曾经多次出山东流动作战，转战于山东、河南、安徽、江苏、湖北、湖南、江西、浙江、福建、广东、广西、陕西等省。公元八八○年，黄巢攻破潼关，不久占领长安，建立齐国，自称皇帝。后因内部分裂（大将朱温降唐），又受到李克用沙陀军及诸道军队的进攻，黄巢被迫退出长安，转入河南，由河南回到山东，于公元八八四年失败自杀。黄巢领导的农民战争持续了十年，是中国历史上有名的农民战争之一。它沉重地打击了当时的封建统治阶级，受到贫苦农民的拥护。由于黄巢起义军只是简单地进行流动的战争，没有建立过比较稳固的根据地，所以被封建统治者称为“流寇”。
+[^1-2-3-5]: 李闯即李自成（一六○六——一六四五），陕西米脂人，明朝末年农民起义领袖。一六二八年，即明思宗崇祯元年，陕西北部形成农民起义的潮流。李自成参加高迎祥的起义队伍，曾经由陕西入河南，到安徽，折回陕西。一六三六年高迎祥死，李自成被推为闯王。李自成在群众中的主要口号是“迎闯王，不纳粮”；同时他不准部下扰害群众，曾经提出“杀一人如杀我父，淫一妇如淫我母”的口号，来约束自己的部队。因此，拥护他的人很多，成为当时农民起义的主流之一。但他也没有建立过比较稳固的根据地，总是流动作战。他在被推为闯王后，率部入川，折回陕南，经湖北又入川，又经湖北入河南，旋占湖北襄阳、安陆等地，再经河南攻陕占西安，于一六四四年经山西攻入北京。不久，在明将吴三桂勾引清兵联合进攻下失败。
+
+#### 星星之火，可以燎原(1930.1.5)
+
+**星星之火，可以燎原**[^1-2-4-*]
+
+（一九三○年一月五日）
+
+在对于时局的估量和伴随而来的我们的行动问题上，我们党内有一部分同志还缺少正确的认识。他们虽然相信革命高潮不可避免地要到来，却不相信革命高潮有迅速到来的可能。因此他们不赞成争取江西的计划，而只赞成在福建、广东、江西之间的三个边界区域的流动游击，同时也没有在游击区域建立红色政权的深刻的观念，因此也就没有用这种红色政权的巩固和扩大去促进全国革命高潮的深刻的观念。他们似乎认为在距离革命高潮尚远的时期做这种建立政权的艰苦工作为徒劳，而希望用比较轻便的流动游击方式去扩大政治影响，等到全国各地争取群众的工作做好了，或做到某个地步了，然后再来一个全国武装起义，那时把红军的力量加上去，就成为全国范围的大革命。他们这种全国范围的、包括一切地方的、先争取群众后建立政权的理论，是于中国革命的实情不适合的。他们的这种理论的来源，主要是没有把中国是一个许多帝国主义国家互相争夺的半殖民地这件事认清楚。如果认清了中国是一个许多帝国主义国家互相争夺的半殖民地，则一，就会明白全世界何以只有中国有这种统治阶级内部互相长期混战的怪事，而且何以混战一天激烈一天，一天扩大一天，何以始终不能有一个统一的政权。二，就会明白农民问题的严重性，因之，也就会明白农村起义何以有现在这样的全国规模的发展。三，就会明白工农民主政权这个口号的正确。四，就会明白相应于全世界只有中国有统治阶级内部长期混战的一件怪事而产生出来的另一件怪事，即红军和游击队的存在和发展，以及伴随着红军和游击队而来的，成长于四围白色政权中的小块红色区域的存在和发展（中国以外无此怪事）。五，也就会明白红军、游击队和红色区域的建立和发展，是半殖民地中国在无产阶级领导之下的农民斗争的最高形式，和半殖民地农民斗争发展的必然结果；并且无疑义地是促进全国革命高潮的最重要因素。六，也就会明白单纯的流动游击政策，不能完成促进全国革命高潮的任务，而朱德毛泽东式、方志敏[^1-2-4-1]式之有根据地的，有计划地建设政权的，深入土地革命的，扩大人民武装的路线是经由乡赤卫队、区赤卫大队、县赤卫总队[^1-2-4-2]、地方红军直至正规红军这样一套办法的，政权发展是波浪式地向前扩大的，等等的政策，无疑义地是正确的。必须这样，才能树立全国革命群众的信仰，如苏联之于全世界然。必须这样，才能给反动统治阶级以甚大的困难，动摇其基础而促进其内部的分解。也必须这样，才能真正地创造红军，成为将来大革命的主要工具。总而言之，必须这样，才能促进革命的高潮。
+
+犯着革命急性病的同志们不切当地看大了革命的主观力量[^1-2-4-3]，而看小了反革命力量。这种估量，多半是从主观主义出发。其结果，无疑地是要走上盲动主义的道路。另一方面，如果把革命的主观力量看小了，把反革命力量看大了，这也是一种不切当的估量，又必然要产生另一方面的坏结果。因此，在判断中国政治形势的时候，需要认识下面的这些要点：
+
+（一）现在中国革命的主观力量虽然弱，但是立足于中国落后的脆弱的社会经济组织之上的反动统治阶级的一切组织（政权、武装、党派等）也是弱的。这样就可以解释现在西欧各国的革命的主观力量虽然比现在中国的革命的主观力量也许要强些，但因为它们的反动统治阶级的力量比中国的反动统治阶级的力量更要强大许多倍，所以仍然不能即时爆发革命。现时中国革命的主观力量虽然弱，但是因为反革命力量也是相对地弱的，所以中国革命的走向高潮，一定会比西欧快。
+
+（二）一九二七年革命失败以后，革命的主观力量确实大为削弱了。剩下的一点小小的力量，若仅依据某些现象来看，自然要使同志们（作这样看法的同志们）发生悲观的念头。但若从实质上看，便大大不然。这里用得着中国的一句老话：“星星之火，可以燎原。”这就是说，现在虽只有一点小小的力量，但是它的发展会是很快的。它在中国的环境里不仅是具备了发展的可能性，简直是具备了发展的必然性，这在五卅运动[^1-2-4-4]及其以后的大革命运动已经得了充分的证明。我们看事情必须要看它的实质，而把它的现象只看作入门的向导，一进了门就要抓住它的实质，这才是可靠的科学的分析方法。
+
+（三）对反革命力量的估量也是这样，决不可只看它的现象，要去看它的实质。当湘赣边界割据的初期，有些同志真正相信了当时湖南省委的不正确的估量，把阶级敌人看得一钱不值；到现在还传为笑谈的所谓“十分动摇”、“恐慌万状”两句话，就是那时（一九二八年五月至六月）湖南省委估量湖南的统治者鲁涤平[^1-2-4-5]的形容词。在这种估量之下，就必然要产生政治上的盲动主义。但是到了同年十一月至去年二月（蒋桂战争[^1-2-4-6]尚未爆发之前）约四个月期间内，敌人的第三次“会剿”[^1-2-4-7]临到了井冈山的时候，一部分同志又有“红旗到底打得多久”的疑问提出来了。其实，那时英、美、日在中国的斗争已到十分露骨的地步，蒋桂冯混战的形势业已形成，实质上是反革命潮流开始下落，革命潮流开始复兴的时候。但是在那个时候，不但红军和地方党内有一种悲观的思想，就是中央那时也不免为那种表面上的情况所迷惑，而发生了悲观的论调。中央二月来信[^1-2-4-8]就是代表那时候党内悲观分析的证据。
+
+（四）现时的客观情况，还是容易给只观察当前表面现象不观察实质的同志们以迷惑。特别是我们在红军中工作的人，一遇到败仗，或四面被围，或强敌跟追的时候，往往不自觉地把这种一时的特殊的小的环境，一般化扩大化起来，仿佛全国全世界的形势概属未可乐观，革命胜利的前途未免渺茫得很。所以有这种抓住表面抛弃实质的观察，是因为他们对于一般情况的实质并没有科学地加以分析。如问中国革命高潮是否快要到来，只有详细地去察看引起革命高潮的各种矛盾是否真正向前发展了，才能作决定。既然国际上帝国主义相互之间、帝国主义和殖民地之间、帝国主义和它们本国的无产阶级之间的矛盾是发展了，帝国主义争夺中国的需要就更迫切了。帝国主义争夺中国一迫切，帝国主义和整个中国的矛盾，帝国主义者相互间的矛盾，就同时在中国境内发展起来，因此就造成中国各派反动统治者之间的一天天扩大、一天天激烈的混战，中国各派反动统治者之间的矛盾，就日益发展起来。伴随各派反动统治者之间的矛盾——军阀混战而来的，是赋税的加重，这样就会促令广大的负担赋税者和反动统治者之间的矛盾日益发展。伴随着帝国主义和中国民族工业的矛盾而来的，是中国民族工业得不到帝国主义的让步的事实，这就发展了中国资产阶级和中国工人阶级之间的矛盾，中国资本家从拚命压榨工人找出路，中国工人则给以抵抗。伴随着帝国主义的商品侵略、中国商业资本的剥蚀和政府的赋税加重等项情况，便使地主阶级和农民的矛盾更加深刻化，即地租和高利贷的剥削更加重了，农民则更加仇恨地主。因为外货的压迫、广大工农群众购买力的枯竭和政府赋税的加重，使得国货商人和独立生产者日益走上破产的道路。因为反动政府在粮饷不足的条件之下无限制地增加军队，并因此而使战争一天多于一天，使得士兵群众经常处在困苦的环境之中。因为国家的赋税加重，地主的租息加重和战祸的日广一日，造成了普遍于全国的灾荒和匪祸，使得广大的农民和城市贫民走上求生不得的道路。因为无钱开学，许多在学学生有失学之忧；因为生产落后，许多毕业学生无就业之望。如果我们认识了以上这些矛盾，就知道中国是处在怎样一种皇皇不可终日的局面之下，处在怎样一种混乱状态之下。就知道反帝反军阀反地主的革命高潮，是怎样不可避免，而且是很快会要到来。中国是全国都布满了干柴，很快就会燃成烈火。“星火燎原”的话，正是时局发展的适当的描写。只要看一看许多地方工人罢工、农民暴动、士兵哗变、学生罢课的发展，就知道这个“星星之火”，距“燎原”的时期，毫无疑义地是不远了。
+
+上面的话的大意，在去年四月五日前委给中央的信中，就已经有了。那封信上说：
+
+==“中央此信（去年二月七日）对客观形势和主观力量的估量，都太悲观了。国民党三次‘进剿’井冈山[^1-2-4-9]，表示了反革命的最高潮。然至此为止，往后便是反革命潮流逐渐低落，革命潮流逐渐升涨。党的战斗力组织力虽然弱到如中央所云，但在反革命潮流逐渐低落的形势之下，恢复一定很快，党内干部分子的消极态度也会迅速消灭。群众是一定归向我们的。屠杀主义[^1-2-4-10]固然是为渊驱鱼，改良主义也再不能号召群众了。群众对国民党的幻想一定很快地消灭。在将来的形势之下，什么党派都是不能和共产党争群众的。党的六次大会[^1-2-4-11]所指示的政治路线和组织路线是对的：革命的现时阶段是民权主义而不是社会主义，党（按：应加‘在大城市中’五个字）的目前任务是争取群众而不是马上举行暴动。但是革命的发展将是很快的，武装暴动的宣传和准备应该采取积极的态度。在大混乱的现局之下，只有积极的口号积极的态度才能领导群众。党的战斗力的恢复也一定要在这种积极态度之下才有可能。……无产阶级领导是革命胜利的唯一关键。党的无产阶级基础的建立，中心区域产业支部的创造，是目前党在组织方面的重要任务；但是在同时，农村斗争的发展，小区域红色政权的建立，红军的创造和扩大，尤其是帮助城市斗争、促进革命潮流高涨的主要条件。所以，抛弃城市斗争，是错误的；但是畏惧农民势力的发展，以为将超过工人的势力而不利于革命，如果党员中有这种意见，我们以为也是错误的。因为半殖民地中国的革命，只有农民斗争得不到工人的领导而失败，没有农民斗争的发展超过工人的势力而不利于革命本身的。”==
+
+这封信对红军的行动策略问题有如下的答复：
+
+==“中央要我们将队伍分得很小，散向农村中，朱、毛离开队伍，隐匿大的目标，目的在于保存红军和发动群众。这是一种不切实际的想法。以连或营为单位，单独行动，分散在农村中，用游击的战术发动群众，避免目标，我们从一九二七年冬天就计划过，而且多次实行过，但是都失败了。因为：（一）主力红军多不是本地人，和地方赤卫队来历不同。（二）分小则领导不健全，恶劣环境应付不来，容易失败。（三）容易被敌人各个击破。（四）愈是恶劣环境，队伍愈须集中，领导者愈须坚决奋斗，方能团结内部，应付敌人。只有在好的环境里才好分兵游击，领导者也不如在恶劣环境时的刻不能离。”==
+
+这一段话的缺点是：所举不能分兵的理由，都是消极的，这是很不够的。兵力集中的积极的理由是：集中了才能消灭大一点的敌人，才能占领城镇。消灭了大一点的敌人，占领了城镇，才能发动大范围的群众，建立几个县联在一块的政权。这样才能耸动远近的视听（所谓扩大政治影响），才能于促进革命高潮发生实际的效力。例如我们前年干的湘赣边界政权，去年干的闽西政权[^1-2-4-12]，都是这种兵力集中政策的结果。这是一般的原则。至于说到也有分兵的时候没有呢？也是有的。前委给中央的信上说了红军的游击战术，那里面包括了近距离的分兵：
+
+==“我们三年来从斗争中所得的战术，真是和古今中外的战术都不同。用我们的战术，群众斗争的发动是一天比一天扩大的，任何强大的敌人是奈何我们不得的。我们的战术就是游击的战术。大要说来是：‘分兵以发动群众，集中以应付敌人。’‘敌进我退，敌驻我扰，敌疲我打，敌退我追。’‘固定区域的割据[^1-2-4-13]，用波浪式的推进政策。强敌跟追，用盘旋式的打圈子政策。’‘很短的时间，很好的方法，发动很大的群众。’这种战术正如打网，要随时打开，又要随时收拢。打开以争取群众，收拢以应付敌人。三年以来，都是用的这种战术。”==
+
+这里所谓“打开”，就是指近距离的分兵。例如湘赣边界第一次打下永新时，二十九团和三十一团在永新境内的分兵。又如第三次打下永新时，二十八团往安福边境，二十九团往莲花，三十一团往吉安边界的分兵。又如去年四月至五月在赣南各县的分兵，七月在闽西各县的分兵。至于远距离的分兵，则要在好一点的环境和在比较健全的领导机关两个条件之下才有可能。因为分兵的目的，是为了更能争取群众，更能深入土地革命和建立政权，更能扩大红军和地方武装。若不能达到这些目的，或者反因分兵而遭受失败，削弱了红军的力量，例如前年八月湘赣边界分兵打郴州那样，则不如不分为好。如果具备了上述两个条件，那就无疑地应该分兵，因为在这两个条件下，分散比集中更有利。
+
+中央二月来信的精神是不好的，这封信给了四军党内一部分同志以不良影响。中央那时还有一个通告，谓蒋桂战争不一定会爆发。但从此以后，中央的估量和指示，大体上说来就都是对的了。对于那个估量不适当的通告，中央已发了一个通告去更正。对于红军的这一封信，虽然没有更正，但是后来的指示，就没有那些悲观的论调了，对于红军行动的主张也和我们的主张一致了。但是中央那个信给一部分同志的不良影响是仍然存在的。因此，我觉得就在现时仍有对此问题加以解释的必要。
+
+关于一年争取江西的计划，也是去年四月前委向中央提出的，后来又在于都有一次决定。当时指出的理由，见之于给中央信上的，如下：
+
+==“蒋桂部队在九江一带彼此逼近，大战爆发即在眼前。群众斗争的恢复，加上反动统治内部矛盾的扩大，使革命高潮可能快要到来。在这种局面之下来布置工作，我们觉得南方数省中广东湖南两省买办地主的军力太大，湖南则更因党的盲动主义的错误，党内党外群众几乎尽失。闽赣浙三省则另成一种形势。第一，三省敌人军力最弱。浙江只有蒋伯诚[^1-2-4-14]的少数省防军。福建五部虽有十四团，但郭[^1-2-4-15]旅已被击破；陈卢[^1-2-4-16]两部均土匪军，战斗力甚低；陆战队两旅在沿海从前并未打过仗，战斗力必不大；只有张贞[^1-2-4-17]比较能打，但据福建省委分析，张亦只有两个团战力较强。且福建现在完全是混乱状态，不统一。江西朱培德[^1-2-4-18]、熊式辉[^1-2-4-19]两部共有十六团，比闽浙军力为强，然比起湖南来就差得多。第二，三省的盲动主义错误比较少。除浙江情况我们不大明了外，江西福建两省党和群众的基础，都比湖南好些。以江西论，赣北之德安、修水、铜鼓尚有相当基础；赣西宁冈、永新、莲花、遂川，党和赤卫队的势力是依然存在的；赣南的希望更大，吉安、永丰、兴国等县的红军第二第四团有日益发展之势；方志敏的红军并未消灭。这样就造成了向南昌包围的形势。我们建议中央，在国民党军阀长期战争期间，我们要和蒋桂两派争取江西，同时兼及闽西、浙西。在三省扩大红军的数量，造成群众的割据，以一年为期完成此计划。”==
+
+上面争取江西的话，不对的是规定一年为期。至于争取江西，除开江西的本身条件之外，还包含有全国革命高潮快要到来的条件。因为如果不相信革命高潮快要到来，便决不能得到一年争取江西的结论。那个建议的缺点就是不该规定为一年，因此，影响到革命高潮快要到来的所谓“快要”，也不免伴上了一些急躁性。至于江西的主观客观条件是很值得注意的。除主观条件如给中央信上所说外，客观条件现在可以明白指出的有三点：一是江西的经济主要是封建的经济，商业资产阶级势力较小，而地主的武装在南方各省中又比哪一省都弱。二是江西没有本省的军队，向来都是外省军队来此驻防。外来军队“剿共”“剿匪”，情形不熟，又远非本省军队那样关系切身，往往不很热心。三是距离帝国主义的影响比较远一点，不比广东接近香港，差不多什么都受英国的支配。我们懂得了这三点，就可以解释为什么江西的农村起义比哪一省都要普遍，红军游击队比哪一省都要多了。
+
+所谓革命高潮快要到来的“快要”二字作何解释，这点是许多同志的共同的问题。马克思主义者不是算命先生，未来的发展和变化，只应该也只能说出个大的方向，不应该也不可能机械地规定时日。但我所说的中国革命高潮快要到来，决不是如有些人所谓“有到来之可能”那样完全没有行动意义的、可望而不可即的一种空的东西。它是站在海岸遥望海中已经看得见桅杆尖头了的一只航船，它是立于高山之巅远看东方已见光芒四射喷薄欲出的一轮朝日，它是躁动于母腹中的快要成熟了的一个婴儿。
+
+##### 注释
+
+[^1-2-4-*]: 这是毛泽东给林彪的一封信，是为答复林彪散发的一封对红军前途究竟应该如何估计的征求意见的信。毛泽东在这封信中批评了当时林彪以及党内一些同志对时局估量的一种悲观思想。一九四八年林彪向中央提出，希望公开刊行这封信时不要提他的姓名。毛泽东同意了这个意见。在收入本书第一版的时候，这封信改题为《星星之火，可以燎原》，指名批评林彪的地方作了删改。
+[^1-2-4-1]: 方志敏（一八九九——一九三五），江西弋阳人，赣东北革命根据地和红军第十军的主要创建人。一九二二年加入中国社会主义青年团，一九二四年加入中国共产党，曾被增补为中国共产党第六届中央委员会委员。一九二八年一月，在江西的弋阳、横峰一带发动农民举行武装起义。一九二八年至一九三三年，领导起义的农民坚持游击战争，实行土地革命，建立红色政权，逐步地将农村革命根据地扩大到江西东北部和福建北部、安徽南部、浙江西部，将地方游击队发展为正规红军。一九三四年十一月，带领红军第十军团向皖南进军，继续执行抗日先遣队北上的任务。一九三五年一月，在同国民党军队作战中被捕。同年八月，在南昌英勇牺牲。
+[^1-2-4-2]: 见本卷《中国的红色政权为什么能够存在？》注[9]。
+[^1-2-4-3]: 这里所说的“革命的主观力量”，是指有组织的革命力量。
+[^1-2-4-4]: 见本卷《中国社会各阶级的分析》注[9]。
+[^1-2-4-5]: 鲁涤平（一八八七——一九三五），湖南宁乡人。一九二八年时任国民党湖南省政府主席。
+[^1-2-4-6]: 指一九二九年三四月间蒋介石和广西军阀李宗仁、白崇禧之间的战争。
+[^1-2-4-7]: 一九二八年七月至十一月，江西、湖南两省的国民党军队两次“会剿”井冈山革命根据地失败后，又于同年底至一九二九年初调集湖南、江西两省共六个旅的兵力，对井冈山革命根据地发动第三次“会剿”。毛泽东等周密地研究了粉碎敌人“会剿”的计划，决定红军第四军主力转入外线打击敌人，以红四军的一部配合红五军留守井冈山。经过内外线的艰苦转战，红军开辟了赣南、闽西革命根据地，曾经被敌人一度侵占的井冈山革命根据地也得到了恢复和发展。
+[^1-2-4-8]: 指中共中央一九二九年二月七日给红军第四军前敌委员会的信。本文中引录的一九二九年四月五日红军第四军前敌委员会给中央的信上，曾大略地摘出该信的内容，主要是关于当时形势的估计和红军的行动策略问题。中央的这封信所提出的意见是不适当的，所以前委在给中央的信中提出了不同的意见。
+[^1-2-4-9]: 这里是指湖南、江西两省国民党军队对井冈山革命根据地的第三次“会剿”。
+[^1-2-4-10]: 指反革命势力对付人民的革命力量采用血腥屠杀的手段。
+[^1-2-4-11]: 中国共产党第六次全国代表大会于一九二八年六月十八日至七月十一日在莫斯科举行。会上，瞿秋白作了《中国革命与共产党》的报告，周恩来作了组织问题和军事问题的报告，刘伯承作了军事问题的补充报告。会议通过了政治、苏维埃政权组织、土地、农民等问题决议案和军事工作草案。这次大会肯定了中国社会仍旧是半殖民地半封建社会，中国当时的革命依然是资产阶级民主革命，指出了当时的政治形势是在两个高潮之间和革命发展是不平衡的，党在当时的总任务不是进攻，而是争取群众。会议在批判右倾机会主义的同时，特别指出了当时党内最主要的危险倾向是脱离群众的盲动主义、军事冒险主义和命令主义。这次大会的主要方面是正确的，但也有缺点和错误。它对于中间阶级的两面性和反动势力的内部矛盾缺乏正确的估计和适当的政策；对于大革命失败后党所需要的策略上的有秩序的退却，对于农村根据地的重要性和民主革命的长期性，也缺乏必要的认识。
+[^1-2-4-12]: 指福建西部长汀、龙岩、永定、上杭等县的工农民主政权，它是红军第四军主力一九二九年离开井冈山进入福建时新开辟的革命根据地。
+[^1-2-4-13]: “固定区域的割据”指工农红军建立比较巩固的革命根据地。
+[^1-2-4-14]: 蒋伯诚，当时任国民党浙江省防军司令。
+[^1-2-4-15]: 郭，报国民党福建省防军暂编第二混成旅旅长郭凤鸣。
+[^1-2-4-16]: 陈卢，指福建的著匪陈国辉和卢兴邦，他们的部队在一九二六年被国民党政府收编。
+[^1-2-4-17]: 张贞，当时任国民党军暂编第一师师长。
+[^1-2-4-18]: 朱培德（一八八九——一九三七），云南盐兴（今禄丰县）人。当时任国民党江西省政府主席。
+[^1-2-4-19]: 熊式辉（一八九三——一九七四），江西安义人。当时任国民党江西省政府委员、第五师师长。
