--- a/毛泽东选集(1-7卷静火版)(索引).md
+++ b/毛泽东选集(1-7卷静火版)(索引).md
@@ -31,3 +31,7 @@
 #### 星星之火，可以燎原(1930.1.5)
 
 [星星之火，可以燎原](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/星星之火，可以燎原.md)
+
+#### 反对本本主义(1930.5)
+
+[反对本本主义](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/反对本本主义.md)
