--- a/毛泽东选集-读书笔记.md
+++ b/毛泽东选集-读书笔记.md
@@ -53,7 +53,7 @@
 
 现在国民党新军阀的统治，依然是城市买办阶级和乡村豪绅阶级的统治，对外投降帝国主义，对内以新军阀代替旧军阀，对工农阶级的经济的剥削和政治的压迫比从前更加厉害。
 
-中国内部各派军阀的矛盾和斗争，反映着帝国主义各国的矛盾和斗争。故只要各国帝国主义分裂中国的状况存在，各派军阀就无论如何不能妥协，所有妥协都是暂时的。今天的暂时的妥协，即酝酿着明天的更大的战争。
+**中国内部各派军阀的矛盾和斗争，反映着帝国主义各国的矛盾和斗争。**故只要各国帝国主义分裂中国的状况存在，各派军阀就无论如何不能妥协，所有妥协都是暂时的。今天的暂时的妥协，即酝酿着明天的更大的战争。
 
 中国迫切需要一个资产阶级的民主革命，这个革命必须由无产阶级领导才能完成。从广东出发向长江发展的一九二六年到一九二七年的革命，因为无产阶级没有坚决地执行自己的领导权，被买办豪绅阶级夺取了领导，以反革命代替了革命。
 
@@ -109,9 +109,29 @@
 
 主要是加强教育，从思想上纠正个人主义。再则处理问题、分配工作、执行纪律要得当。并要设法改善红军的物质生活，利用一切可能时机休息整理，以改善物质条件。**个人主义的社会来源是小资产阶级和资产阶级的思想在党内的反映，当进行教育的时候必须说明这一点。**
 
-由于红军中游民成分占了很大的数量和全国特别是南方各省有广大游民群众的存在，就在红军中产生了流寇主义的政治思想。这种思想表现在：一，不愿意做艰苦工作建立根据地，建立人民群众的政权，并由此去扩大政治影响，而只想用流动游击的方法，去扩大政治影响。二，扩大红军，不走由扩大地方赤卫队[^3]、地方红军到扩大主力红军的路线，而要走“招兵买马”“招降纳叛”的路线。三，不耐烦和群众在一块作艰苦的斗争，只希望跑到大城市去大吃大喝。凡此一切流寇思想的表现，极大地妨碍着红军去执行正确的任务，故肃清流寇思想，实为红军党内思想斗争的一个重要目标。应当认识，历史上黄巢[^4]、李闯[^5]式的流寇主义，已为今日的环境所不许可。
+由于红军中游民成分占了很大的数量和全国特别是南方各省有广大游民群众的存在，就在红军中产生了流寇主义的政治思想。这种思想表现在：一，不愿意做艰苦工作建立根据地，建立人民群众的政权，并由此去扩大政治影响，而只想用流动游击的方法，去扩大政治影响。二，扩大红军，不走由扩大地方赤卫队[^1-2-3-3]、地方红军到扩大主力红军的路线，而要走“招兵买马”“招降纳叛”的路线。三，不耐烦和群众在一块作艰苦的斗争，只希望跑到大城市去大吃大喝。凡此一切流寇思想的表现，极大地妨碍着红军去执行正确的任务，故肃清流寇思想，实为红军党内思想斗争的一个重要目标。应当认识，历史上黄巢[^1-2-3-4]、李闯[^1-2-3-5]式的流寇主义，已为今日的环境所不许可。
 
 盲动主义的社会来源是流氓无产者的思想和小资产阶级的思想的综合。
 
+[^1-2-3-3]: 见本卷《中国的红色政权为什么能够存在？》注[9]。
+[^1-2-3-4]: 黄巢（？——八八四），曹州冤句（今山东菏泽）人，唐朝末年农民起义领袖。公元八七五年，即唐僖宗乾符二年，黄巢聚众响应王仙芝领导的起义。公元八七八年，王仙芝被杀后，黄巢收集王的余部，被推为领袖，号“冲天大将军”。他领导的起义队伍，曾经多次出山东流动作战，转战于山东、河南、安徽、江苏、湖北、湖南、江西、浙江、福建、广东、广西、陕西等省。公元八八○年，黄巢攻破潼关，不久占领长安，建立齐国，自称皇帝。后因内部分裂（大将朱温降唐），又受到李克用沙陀军及诸道军队的进攻，黄巢被迫退出长安，转入河南，由河南回到山东，于公元八八四年失败自杀。黄巢领导的农民战争持续了十年，是中国历史上有名的农民战争之一。它沉重地打击了当时的封建统治阶级，受到贫苦农民的拥护。由于黄巢起义军只是简单地进行流动的战争，没有建立过比较稳固的根据地，所以被封建统治者称为“流寇”。
+[^1-2-3-5]: 李闯即李自成（一六○六——一六四五），陕西米脂人，明朝末年农民起义领袖。一六二八年，即明思宗崇祯元年，陕西北部形成农民起义的潮流。李自成参加高迎祥的起义队伍，曾经由陕西入河南，到安徽，折回陕西。一六三六年高迎祥死，李自成被推为闯王。李自成在群众中的主要口号是“迎闯王，不纳粮”；同时他不准部下扰害群众，曾经提出“杀一人如杀我父，淫一妇如淫我母”的口号，来约束自己的部队。因此，拥护他的人很多，成为当时农民起义的主流之一。但他也没有建立过比较稳固的根据地，总是流动作战。他在被推为闯王后，率部入川，折回陕南，经湖北又入川，又经湖北入河南，旋占湖北襄阳、安陆等地，再经河南攻陕占西安，于一六四四年经山西攻入北京。不久，在明将吴三桂勾引清兵联合进攻下失败。
+
 #### 星星之火，可以燎原(1930.1.5)
 
+也就会明白单纯的流动游击政策，不能完成促进全国革命高潮的任务，而朱德毛泽东式、方志敏[^1-2-4-1]式之有根据地的，有计划地建设政权的，深入土地革命的，扩大人民武装的路线是经由乡赤卫队、区赤卫大队、县赤卫总队[^1-2-4-2]、地方红军直至正规红军这样一套办法的，政权发展是波浪式地向前扩大的，等等的政策，无疑义地是正确的。必须这样，才能树立全国革命群众的信仰，如苏联之于全世界然。必须这样，才能给反动统治阶级以甚大的困难，动摇其基础而促进其内部的分解。也必须这样，才能真正地创造红军，成为将来大革命的主要工具。总而言之，必须这样，才能促进革命的高潮。
+
+现在中国革命的主观力量虽然弱，但是立足于中国落后的脆弱的社会经济组织之上的反动统治阶级的一切组织（政权、武装、党派等）也是弱的。
+
+如果我们认识了以上这些矛盾，就知道中国是处在怎样一种皇皇不可终日的局面之下，处在怎样一种混乱状态之下。就知道反帝反军阀反地主的革命高潮，是怎样不可避免，而且是很快会要到来。中国是全国都布满了干柴，很快就会燃成烈火。“星火燎原”的话，正是时局发展的适当的描写。只要看一看许多地方工人罢工、农民暴动、士兵哗变、学生罢课的发展，就知道这个“星星之火”，距“燎原”的时期，毫无疑义地是不远了。
+
+所以，抛弃城市斗争，是错误的；但是畏惧农民势力的发展，以为将超过工人的势力而不利于革命，如果党员中有这种意见，我们以为也是错误的。因为半殖民地中国的革命，只有农民斗争得不到工人的领导而失败，没有农民斗争的发展超过工人的势力而不利于革命本身的。
+
+分兵以发动群众，集中以应付敌人。
+
+敌进我退，敌驻我扰，敌疲我打，敌退我追。
+
+马克思主义者不是算命先生，未来的发展和变化，只应该也只能说出个大的方向，不应该也不可能机械地规定时日。
+
+[^1-2-4-1]: 方志敏（一八九九——一九三五），江西弋阳人，赣东北革命根据地和红军第十军的主要创建人。一九二二年加入中国社会主义青年团，一九二四年加入中国共产党，曾被增补为中国共产党第六届中央委员会委员。一九二八年一月，在江西的弋阳、横峰一带发动农民举行武装起义。一九二八年至一九三三年，领导起义的农民坚持游击战争，实行土地革命，建立红色政权，逐步地将农村革命根据地扩大到江西东北部和福建北部、安徽南部、浙江西部，将地方游击队发展为正规红军。一九三四年十一月，带领红军第十军团向皖南进军，继续执行抗日先遣队北上的任务。一九三五年一月，在同国民党军队作战中被捕。同年八月，在南昌英勇牺牲。
+[^1-2-4-2]:见本卷《中国的红色政权为什么能够存在？》注[9]。
