--- a/毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/星星之火，可以燎原.md
+++ b/毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/星星之火，可以燎原.md
@@ -16,15 +16,15 @@
 
 上面的话的大意，在去年四月五日前委给中央的信中，就已经有了。那封信上说：
 
-==“中央此信（去年二月七日）对客观形势和主观力量的估量，都太悲观了。国民党三次‘进剿’井冈山[^9]，表示了反革命的最高潮。然至此为止，往后便是反革命潮流逐渐低落，革命潮流逐渐升涨。党的战斗力组织力虽然弱到如中央所云，但在反革命潮流逐渐低落的形势之下，恢复一定很快，党内干部分子的消极态度也会迅速消灭。群众是一定归向我们的。屠杀主义[^10]固然是为渊驱鱼，改良主义也再不能号召群众了。群众对国民党的幻想一定很快地消灭。在将来的形势之下，什么党派都是不能和共产党争群众的。党的六次大会[^11]所指示的政治路线和组织路线是对的：革命的现时阶段是民权主义而不是社会主义，党（按：应加‘在大城市中’五个字）的目前任务是争取群众而不是马上举行暴动。但是革命的发展将是很快的，武装暴动的宣传和准备应该采取积极的态度。在大混乱的现局之下，只有积极的口号积极的态度才能领导群众。党的战斗力的恢复也一定要在这种积极态度之下才有可能。……无产阶级领导是革命胜利的唯一关键。党的无产阶级基础的建立，中心区域产业支部的创造，是目前党在组织方面的重要任务；但是在同时，农村斗争的发展，小区域红色政权的建立，红军的创造和扩大，尤其是帮助城市斗争、促进革命潮流高涨的主要条件。所以，抛弃城市斗争，是错误的；但是畏惧农民势力的发展，以为将超过工人的势力而不利于革命，如果党员中有这种意见，我们以为也是错误的。因为半殖民地中国的革命，只有农民斗争得不到工人的领导而失败，没有农民斗争的发展超过工人的势力而不利于革命本身的。”==
+> “中央此信（去年二月七日）对客观形势和主观力量的估量，都太悲观了。国民党三次‘进剿’井冈山[^9]，表示了反革命的最高潮。然至此为止，往后便是反革命潮流逐渐低落，革命潮流逐渐升涨。党的战斗力组织力虽然弱到如中央所云，但在反革命潮流逐渐低落的形势之下，恢复一定很快，党内干部分子的消极态度也会迅速消灭。群众是一定归向我们的。屠杀主义[^10]固然是为渊驱鱼，改良主义也再不能号召群众了。群众对国民党的幻想一定很快地消灭。在将来的形势之下，什么党派都是不能和共产党争群众的。党的六次大会[^11]所指示的政治路线和组织路线是对的：革命的现时阶段是民权主义而不是社会主义，党（按：应加‘在大城市中’五个字）的目前任务是争取群众而不是马上举行暴动。但是革命的发展将是很快的，武装暴动的宣传和准备应该采取积极的态度。在大混乱的现局之下，只有积极的口号积极的态度才能领导群众。党的战斗力的恢复也一定要在这种积极态度之下才有可能。……无产阶级领导是革命胜利的唯一关键。党的无产阶级基础的建立，中心区域产业支部的创造，是目前党在组织方面的重要任务；但是在同时，农村斗争的发展，小区域红色政权的建立，红军的创造和扩大，尤其是帮助城市斗争、促进革命潮流高涨的主要条件。所以，抛弃城市斗争，是错误的；但是畏惧农民势力的发展，以为将超过工人的势力而不利于革命，如果党员中有这种意见，我们以为也是错误的。因为半殖民地中国的革命，只有农民斗争得不到工人的领导而失败，没有农民斗争的发展超过工人的势力而不利于革命本身的。”
 
 这封信对红军的行动策略问题有如下的答复：
 
-==“中央要我们将队伍分得很小，散向农村中，朱、毛离开队伍，隐匿大的目标，目的在于保存红军和发动群众。这是一种不切实际的想法。以连或营为单位，单独行动，分散在农村中，用游击的战术发动群众，避免目标，我们从一九二七年冬天就计划过，而且多次实行过，但是都失败了。因为：（一）主力红军多不是本地人，和地方赤卫队来历不同。（二）分小则领导不健全，恶劣环境应付不来，容易失败。（三）容易被敌人各个击破。（四）愈是恶劣环境，队伍愈须集中，领导者愈须坚决奋斗，方能团结内部，应付敌人。只有在好的环境里才好分兵游击，领导者也不如在恶劣环境时的刻不能离。”==
+> “中央要我们将队伍分得很小，散向农村中，朱、毛离开队伍，隐匿大的目标，目的在于保存红军和发动群众。这是一种不切实际的想法。以连或营为单位，单独行动，分散在农村中，用游击的战术发动群众，避免目标，我们从一九二七年冬天就计划过，而且多次实行过，但是都失败了。因为：（一）主力红军多不是本地人，和地方赤卫队来历不同。（二）分小则领导不健全，恶劣环境应付不来，容易失败。（三）容易被敌人各个击破。（四）愈是恶劣环境，队伍愈须集中，领导者愈须坚决奋斗，方能团结内部，应付敌人。只有在好的环境里才好分兵游击，领导者也不如在恶劣环境时的刻不能离。”
 
 这一段话的缺点是：所举不能分兵的理由，都是消极的，这是很不够的。兵力集中的积极的理由是：集中了才能消灭大一点的敌人，才能占领城镇。消灭了大一点的敌人，占领了城镇，才能发动大范围的群众，建立几个县联在一块的政权。这样才能耸动远近的视听（所谓扩大政治影响），才能于促进革命高潮发生实际的效力。例如我们前年干的湘赣边界政权，去年干的闽西政权[^12]，都是这种兵力集中政策的结果。这是一般的原则。至于说到也有分兵的时候没有呢？也是有的。前委给中央的信上说了红军的游击战术，那里面包括了近距离的分兵：
 
-==“我们三年来从斗争中所得的战术，真是和古今中外的战术都不同。用我们的战术，群众斗争的发动是一天比一天扩大的，任何强大的敌人是奈何我们不得的。我们的战术就是游击的战术。大要说来是：‘分兵以发动群众，集中以应付敌人。’‘敌进我退，敌驻我扰，敌疲我打，敌退我追。’‘固定区域的割据[^13]，用波浪式的推进政策。强敌跟追，用盘旋式的打圈子政策。’‘很短的时间，很好的方法，发动很大的群众。’这种战术正如打网，要随时打开，又要随时收拢。打开以争取群众，收拢以应付敌人。三年以来，都是用的这种战术。”==
+> “我们三年来从斗争中所得的战术，真是和古今中外的战术都不同。用我们的战术，群众斗争的发动是一天比一天扩大的，任何强大的敌人是奈何我们不得的。我们的战术就是游击的战术。大要说来是：‘分兵以发动群众，集中以应付敌人。’‘敌进我退，敌驻我扰，敌疲我打，敌退我追。’‘固定区域的割据[^13]，用波浪式的推进政策。强敌跟追，用盘旋式的打圈子政策。’‘很短的时间，很好的方法，发动很大的群众。’这种战术正如打网，要随时打开，又要随时收拢。打开以争取群众，收拢以应付敌人。三年以来，都是用的这种战术。”
 
 这里所谓“打开”，就是指近距离的分兵。例如湘赣边界第一次打下永新时，二十九团和三十一团在永新境内的分兵。又如第三次打下永新时，二十八团往安福边境，二十九团往莲花，三十一团往吉安边界的分兵。又如去年四月至五月在赣南各县的分兵，七月在闽西各县的分兵。至于远距离的分兵，则要在好一点的环境和在比较健全的领导机关两个条件之下才有可能。因为分兵的目的，是为了更能争取群众，更能深入土地革命和建立政权，更能扩大红军和地方武装。若不能达到这些目的，或者反因分兵而遭受失败，削弱了红军的力量，例如前年八月湘赣边界分兵打郴州那样，则不如不分为好。如果具备了上述两个条件，那就无疑地应该分兵，因为在这两个条件下，分散比集中更有利。
 
@@ -32,7 +32,7 @@
 
 关于一年争取江西的计划，也是去年四月前委向中央提出的，后来又在于都有一次决定。当时指出的理由，见之于给中央信上的，如下：
 
-==“蒋桂部队在九江一带彼此逼近，大战爆发即在眼前。群众斗争的恢复，加上反动统治内部矛盾的扩大，使革命高潮可能快要到来。在这种局面之下来布置工作，我们觉得南方数省中广东湖南两省买办地主的军力太大，湖南则更因党的盲动主义的错误，党内党外群众几乎尽失。闽赣浙三省则另成一种形势。第一，三省敌人军力最弱。浙江只有蒋伯诚[^14]的少数省防军。福建五部虽有十四团，但郭[^15]旅已被击破；陈卢[^16]两部均土匪军，战斗力甚低；陆战队两旅在沿海从前并未打过仗，战斗力必不大；只有张贞[^17]比较能打，但据福建省委分析，张亦只有两个团战力较强。且福建现在完全是混乱状态，不统一。江西朱培德[^18]、熊式辉[^19]两部共有十六团，比闽浙军力为强，然比起湖南来就差得多。第二，三省的盲动主义错误比较少。除浙江情况我们不大明了外，江西福建两省党和群众的基础，都比湖南好些。以江西论，赣北之德安、修水、铜鼓尚有相当基础；赣西宁冈、永新、莲花、遂川，党和赤卫队的势力是依然存在的；赣南的希望更大，吉安、永丰、兴国等县的红军第二第四团有日益发展之势；方志敏的红军并未消灭。这样就造成了向南昌包围的形势。我们建议中央，在国民党军阀长期战争期间，我们要和蒋桂两派争取江西，同时兼及闽西、浙西。在三省扩大红军的数量，造成群众的割据，以一年为期完成此计划。”==
+> “蒋桂部队在九江一带彼此逼近，大战爆发即在眼前。群众斗争的恢复，加上反动统治内部矛盾的扩大，使革命高潮可能快要到来。在这种局面之下来布置工作，我们觉得南方数省中广东湖南两省买办地主的军力太大，湖南则更因党的盲动主义的错误，党内党外群众几乎尽失。闽赣浙三省则另成一种形势。第一，三省敌人军力最弱。浙江只有蒋伯诚[^14]的少数省防军。福建五部虽有十四团，但郭[^15]旅已被击破；陈卢[^16]两部均土匪军，战斗力甚低；陆战队两旅在沿海从前并未打过仗，战斗力必不大；只有张贞[^17]比较能打，但据福建省委分析，张亦只有两个团战力较强。且福建现在完全是混乱状态，不统一。江西朱培德[^18]、熊式辉[^19]两部共有十六团，比闽浙军力为强，然比起湖南来就差得多。第二，三省的盲动主义错误比较少。除浙江情况我们不大明了外，江西福建两省党和群众的基础，都比湖南好些。以江西论，赣北之德安、修水、铜鼓尚有相当基础；赣西宁冈、永新、莲花、遂川，党和赤卫队的势力是依然存在的；赣南的希望更大，吉安、永丰、兴国等县的红军第二第四团有日益发展之势；方志敏的红军并未消灭。这样就造成了向南昌包围的形势。我们建议中央，在国民党军阀长期战争期间，我们要和蒋桂两派争取江西，同时兼及闽西、浙西。在三省扩大红军的数量，造成群众的割据，以一年为期完成此计划。”
 
 上面争取江西的话，不对的是规定一年为期。至于争取江西，除开江西的本身条件之外，还包含有全国革命高潮快要到来的条件。因为如果不相信革命高潮快要到来，便决不能得到一年争取江西的结论。那个建议的缺点就是不该规定为一年，因此，影响到革命高潮快要到来的所谓“快要”，也不免伴上了一些急躁性。至于江西的主观客观条件是很值得注意的。除主观条件如给中央信上所说外，客观条件现在可以明白指出的有三点：一是江西的经济主要是封建的经济，商业资产阶级势力较小，而地主的武装在南方各省中又比哪一省都弱。二是江西没有本省的军队，向来都是外省军队来此驻防。外来军队“剿共”“剿匪”，情形不熟，又远非本省军队那样关系切身，往往不很热心。三是距离帝国主义的影响比较远一点，不比广东接近香港，差不多什么都受英国的支配。我们懂得了这三点，就可以解释为什么江西的农村起义比哪一省都要普遍，红军游击队比哪一省都要多了。
 
