--- a/毛泽东选集(1-7卷静火版)(索引).md
+++ b/毛泽东选集(1-7卷静火版)(索引).md
@@ -35,3 +35,8 @@
 #### 反对本本主义(1930.5)
 
 [反对本本主义](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/反对本本主义.md)
+
+#### 必须注意经济工作(1933.8.12)
+
+[必须注意经济工作](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/必须注意经济工作.md)
+
