--- a/毛泽东选集(1-7卷静火版)(索引).md
+++ b/毛泽东选集(1-7卷静火版)(索引).md
@@ -40,3 +40,6 @@
 
 [必须注意经济工作](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/必须注意经济工作.md)
 
+#### 怎样分析农村阶级(1933.10)
+
+[怎样分析农村阶级](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/怎样分析农村阶级.md)
