--- a/毛泽东选集-读书笔记(索引).md
+++ b/毛泽东选集-读书笔记(索引).md
@@ -36,6 +36,10 @@
 
 [反对本本主义](毛泽东选集-读书笔记/第一卷/第二次国内革命战争时期/反对本本主义.md)
 
-#### 必须注意经济工作
+#### 必须注意经济工作(1933.8.12)
 
 [必须注意经济工作](毛泽东选集-读书笔记/第一卷/第二次国内革命战争时期/必须注意经济工作.md)
+
+#### 怎样分析农村阶级(1933.10)
+
+[怎样分析农村阶级](毛泽东选集-读书笔记/第一卷/第二次国内革命战争时期/怎样分析农村阶级.md)
