--- a/毛泽东选集-读书笔记.md
+++ b/毛泽东选集-读书笔记.md
@@ -176,3 +176,13 @@
 
 [^1-2-5-7]:这里所说的山头指江西、湖南边界的井冈山地区，平地指江西南部、福建西部地区。一九二九年一月，毛泽东、朱德率领红军第四军的主力，自井冈山出发，向江西南部、福建西部进军，开辟赣南、闽西两大革命根据地。
 [^1-2-5-8]:指一九二八年六月至七月召开的中国共产党第六次全国代表大会通过的各项决议案。一九二九年初，红军第四军前敌委员会曾经把这些决议案汇集印成单行本，发给红军和地方的党组织。
+
+#### 必须注意经济工作(1933.8.12)
+
+革命战争的激烈发展，要求我们动员群众，立即开展经济战线上的运动，进行各项必要和可能的经济建设事业。
+
+因此也就明白，在现在的阶段上，经济建设必须是环绕着革命战争这个中心任务的。革命战争是当前的中心任务，经济建设事业是为着它的，是环绕着它的，是服从于它的。那种以为经济建设已经是当前一切任务的中心，而忽视革命战争，离开革命战争去进行经济建设，同样是错误的观点。只有在国内战争完结之后，才说得上也才应该说以经济建设为一切任务的中心。在国内战争中企图进行和平的，为将来所应有而现在所不应有的，为将来的环境所许可而现在的环境不许可的那些经济建设工作，只是一种瞎想。当前的工作是战争所迫切地要求的一些工作。这些工作每件都是为着战争，而不是离开战争的和平事业。如果同志们中间有离开战争进行经济建设的想法，那就应立刻改正。
+
+**动员群众的方式，不应该是官僚主义的。**官僚主义的领导方式，是任何革命工作所不应有的，经济建设工作同样来不得官僚主义。要把官僚主义方式这个极坏的家伙抛到粪缸里去，因为没有一个同志喜欢它。每一个同志喜欢的应该是群众化的方式，即是每一个工人、农民所喜欢接受的方式。官僚主义的表现，一种是不理不睬或敷衍塞责的怠工现象。我们要同这种现象作严厉的斗争。另一种是命令主义。命令主义者表面上不怠工，好像在那里努力干。实际上，命令主义地发展合作社，是不能成功的；暂时在形式上发展了，也是不能巩固的。结果是失去信用，妨碍了合作社的发展。命令主义地推销公债，不管群众了解不了解，买不买得这样多，只是蛮横地要照自己的数目字去派，结果是群众不喜欢，公债不能好好地推销。我们一定不能要命令主义，我们要的是努力宣传，说服群众，按照具体的环境、具体地表现出来的群众情绪，去发展合作社，去推销公债，去做一切经济动员的工作。
+
+#### 怎样分析农村阶级(1933.10)
