--- a/毛泽东选集-读书笔记(索引).md
+++ b/毛泽东选集-读书笔记(索引).md
@@ -43,3 +43,7 @@
 #### 怎样分析农村阶级(1933.10)
 
 [怎样分析农村阶级](毛泽东选集-读书笔记/第一卷/第二次国内革命战争时期/怎样分析农村阶级.md)
+
+#### 我们的经济政策(1934.1)
+
+[我们的经济政策](毛泽东选集-读书笔记/第一卷/第二次国内革命战争时期/我们的经济政策.md)
