--- a/毛泽东选集-读书笔记.md
+++ b/毛泽东选集-读书笔记.md
@@ -186,3 +186,7 @@
 **动员群众的方式，不应该是官僚主义的。**官僚主义的领导方式，是任何革命工作所不应有的，经济建设工作同样来不得官僚主义。要把官僚主义方式这个极坏的家伙抛到粪缸里去，因为没有一个同志喜欢它。每一个同志喜欢的应该是群众化的方式，即是每一个工人、农民所喜欢接受的方式。官僚主义的表现，一种是不理不睬或敷衍塞责的怠工现象。我们要同这种现象作严厉的斗争。另一种是命令主义。命令主义者表面上不怠工，好像在那里努力干。实际上，命令主义地发展合作社，是不能成功的；暂时在形式上发展了，也是不能巩固的。结果是失去信用，妨碍了合作社的发展。命令主义地推销公债，不管群众了解不了解，买不买得这样多，只是蛮横地要照自己的数目字去派，结果是群众不喜欢，公债不能好好地推销。我们一定不能要命令主义，我们要的是努力宣传，说服群众，按照具体的环境、具体地表现出来的群众情绪，去发展合作社，去推销公债，去做一切经济动员的工作。
 
 #### 怎样分析农村阶级(1933.10)
+
+占有土地，自己不劳动，或只有附带的劳动，而靠剥削农民为生的，叫做地主。
+
+军阀、官僚、土豪、劣绅是地主阶级的政治代表，是地主中特别凶恶者。
