--- a/毛泽东选集-读书笔记/第一卷/第二次国内革命战争时期/怎样分析农村阶级.md
+++ b/毛泽东选集-读书笔记/第一卷/第二次国内革命战争时期/怎样分析农村阶级.md
@@ -4,11 +4,11 @@
 
 ## 一　地主
 
-占有土地，自己不劳动，或只有附带的劳动，而靠剥削农民为生的，叫做地主。地主剥削的方式，主要地是收取地租，此外或兼放债，或兼雇工，或兼营工商业。但对农民剥削地租是地主剥削的主要的方式。管公堂和收学租[^1]也是地租剥削的一类。
+**占有土地，自己不劳动，或只有附带的劳动，而靠剥削农民为生的，叫做地主。**地主剥削的方式，主要地是收取地租，此外或兼放债，或兼雇工，或兼营工商业。但对农民剥削地租是地主剥削的主要的方式。管公堂和收学租[^1]也是地租剥削的一类。
 
 有些地主虽然已破产了，但破产之后仍不劳动，依靠欺骗、掠夺或亲友接济等方法为生，而其生活状况超过普通中农者，仍然算是地主。
 
-军阀、官僚、土豪、劣绅是地主阶级的政治代表，是地主中特别凶恶者。富农中亦常有较小的土豪、劣绅。
+**军阀、官僚、土豪、劣绅是地主阶级的政治代表，是地主中特别凶恶者。**富农中亦常有较小的土豪、劣绅。
 
 帮助地主收租管家，依靠地主剥削农民为主要的生活来源，其生活状况超过普通中农的一些人，应和地主一例看待。
 
