--- a/毛泽东选集(1-7卷静火版)(索引).md
+++ b/毛泽东选集(1-7卷静火版)(索引).md
@@ -47,3 +47,11 @@
 #### 我们的经济政策(1934.1)
 
 [我们的经济政策](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/我们的经济政策.md)
+
+#### 关心群众生活，注意工作方法(1934.1.27)
+
+[关心群众生活，注意工作方法](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/关心群众生活，注意工作方法.md)
+
+#### 论反对日本帝国主义的策略(1935.12.27)
+
+[论反对日本帝国主义的策略](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/论反对日本帝国主义的策略.md)
