--- a/毛泽东选集-读书笔记.md
+++ b/毛泽东选集-读书笔记.md
@@ -190,3 +190,40 @@
 占有土地，自己不劳动，或只有附带的劳动，而靠剥削农民为生的，叫做地主。
 
 军阀、官僚、土豪、劣绅是地主阶级的政治代表，是地主中特别凶恶者。
+
+#### 我们的经济政策(1934.1)
+
+我们的经济政策的原则，是进行一切可能的和必须的经济方面的建设，集中经济力量供给战争，同时极力改良民众的生活，巩固工农在经济方面的联合，保证无产阶级对于农民的领导，争取国营经济对私人经济的领导，造成将来发展到社会主义的前提。
+
+红色区域在建立的头一二年，农业生产往往是下降的[^1-2-8-1]。但是经过分配土地后确定了地权，加以我们提倡生产，农民群众的劳动热情增长了，生产便有恢复的形势了。现在有些地方不但恢复了而且超过了革命前的生产量。有些地方不但恢复了在革命起义过程中荒废了的土地，而且开发了新的土地。
+
+在国民党时代，土地是地主的，农民不愿意也不可能用自己的力量去改良土地。只有在我们把土地分配给农民，对农民的生产加以提倡奖励以后，农民群众的劳动热情才爆发了起来，伟大的生产胜利才能得到。
+
+工业的进行需要有适当的计划。在散漫的手工业基础上，全部的精密计划当然不可能。但是关于某些主要的事业，首先是国家经营和合作社经营的事业，相当精密的生产计划，却是完全必需的。确切地计算原料的生产，计算到敌区和我区的销场，是我们每一种国营工业和合作社工业从开始进行的时候就必须注意的。
+
+我们对于私人经济，只要不出于政府法律范围之外，不但不加阻止，而且加以提倡和奖励。因为目前私人经济的发展，是国家的利益和人民的利益所需要的。私人经济，不待说，现时是占着绝对的优势，并且在相当长的期间内也必然还是优势。目前私人经济在红色区域是取着小规模经营的形式。
+
+合作社经济和国营经济配合起来，经过长期的发展，将成为经济方面的巨大力量，将对私人经济逐渐占优势并取得领导的地位。所以，尽可能地发展国营经济和大规模地发展合作社经济，应该是与奖励私人经济发展，同时并进的。
+
+国家银行发行纸币，基本上应该根据国民经济发展的需要，单纯财政的需要只能放在次要的地位。
+
+应该使一切政府工作人员明白，贪污和浪费是极大的犯罪。
+
+[^1-2-8-1]:农业生产在革命根据地建立的头一二年，往往有些下降，主要地是由于在分配土地期间，地权还没有确定，新的经济秩序还没有走上轨道，以致农民的生产情绪还有些波动。
+
+#### 关心群众生活，注意工作方法(1934.1.27)
+
+因为革命战争是群众的战争，只有动员群众才能进行战争，只有依靠群众才能进行战争。
+
+总之，一切群众的实际生活问题，都是我们应当注意的问题。
+
+一切这些群众生活上的问题，都应该把它提到自己的议事日程上。应该讨论，应该决定，应该实行，应该检查。要使广大群众认识我们是代表他们的利益的，是和他们呼吸相通的。要使他们从这些事情出发，了解我们提出来的更高的任务，革命战争的任务，拥护革命，把革命推到全国去，接受我们的政治号召，为革命的胜利斗争到底。
+
+国民党现在实行他们的堡垒政策[^1-2-9-5]，大筑其乌龟壳，以为这是他们的铜墙铁壁。同志们，这果然是铜墙铁壁吗？一点也不是！你们看，几千年来，那些封建皇帝的城池宫殿还不坚固吗？群众一起来，一个个都倒了。俄国皇帝是世界上最凶恶的一个统治者；当无产阶级和农民的革命起来的时候，那个皇帝还有没有呢？没有了。铜墙铁壁呢？倒掉了。**同志们，真正的铜墙铁壁是什么？是群众，是千百万真心实意地拥护革命的群众。这是真正的铜墙铁壁，什么力量也打不破的，完全打不破的。**反革命打不破我们，我们却要打破反革命。在革命政府的周围团结起千百万群众来，发展我们的革命战争，我们就能消灭一切反革命，我们就能夺取全中国。
+
+我们是革命战争的领导者、组织者，我们又是群众生活的领导者、组织者。组织革命战争，改良群众生活，这是我们的两大任务。在这里，工作方法的问题，就严重地摆在我们的面前。我们不但要提出任务，而且要解决完成任务的方法问题。我们的任务是过河，但是没有桥或没有船就不能过。不解决桥或船的问题，过河就是一句空话。不解决方法问题，任务也只是瞎说一顿。不注意扩大红军的领导，不讲究扩大红军的方法，尽管把扩大红军念一千遍，结果还是不能成功。其他如查田工作[^1-2-9-6]、经济建设工作、文化教育工作、新区边区的工作，**一切工作，如果仅仅提出任务而不注意实行时候的工作方法，不反对官僚主义的工作方法而采取实际的具体的工作方法，不抛弃命令主义的工作方法而采取耐心说服的工作方法，那末，什么任务也是不能实现的。**
+
+要造成几千个长冈乡，几十个兴国县。这些就是我们的巩固的阵地。我们占据了这些阵地，我们就能从这些阵地出发去粉碎敌人的“围剿”，去打倒帝国主义和国民党在全国的统治。
+
+[^1-2-9-5]:一九三三年六月，蒋介石在江西南昌召开军事会议，决定在革命根据地周围普遍建筑碉堡，作为第五次“围剿”的新军事策略。据统计，至一九三四年一月底，江西共筑碉堡四千多座。后来日本侵略者在中国同八路军新四军作战，也采用蒋介石的这种堡垒政策。根据毛泽东关于人民战争的战略，这种反革命的堡垒政策是完全可以打破和战胜的，这已为历史的事实所充分证明。
+[^1-2-9-6]:见本卷《必须注意经济工作》注[3]。
