--- a/毛泽东选集(1-7卷静火版)(一卷本).md
+++ b/毛泽东选集(1-7卷静火版)(一卷本).md
@@ -1160,3 +1160,5 @@
 [^1-2-10-37]: 义和团战争是一九○○年发生在中国北部的反对帝国主义的武装斗争。参加这次战争的，有广大的农民、手工业者和其他群众，他们用宗教迷信互相联系，在秘密结社的基础上组织起来，对英、美、德、法、俄、日、意、奥的联合侵略军进行了英勇的斗争。八国的联合侵略军在占领天津、北京以后，极残酷地镇压了这个运动。
 [^1-2-10-38]: 见本卷《湖南农民运动考察报告》注[3]。
 [^1-2-10-39]: 参见列宁《无产阶级革命的军事纲领》（《列宁全集》第28卷，人民出版社1989年版，第86—97页）和《联共（布）党史简明教程》第六章第三节（人民出版社1975年版，第185—192页）。
+
+#### 中国革命战争的战略问题(1936.12)
