--- a/毛泽东选集-读书笔记(索引).md
+++ b/毛泽东选集-读书笔记(索引).md
@@ -55,3 +55,7 @@
 #### 论反对日本帝国主义的策略(1935.12.27)
 
 [论反对日本帝国主义的策略](毛泽东选集-读书笔记/第一卷/第二次国内革命战争时期/论反对日本帝国主义的策略.md)
+
+#### 中国革命战争的战略问题(1936.12)
+
+[中国革命战争的战略问题](毛泽东选集-读书笔记/第一卷/第二次国内革命战争时期/中国革命战争的战略问题.md)
