--- a/毛泽东选集-读书笔记.md
+++ b/毛泽东选集-读书笔记.md
@@ -227,3 +227,65 @@
 
 [^1-2-9-5]:一九三三年六月，蒋介石在江西南昌召开军事会议，决定在革命根据地周围普遍建筑碉堡，作为第五次“围剿”的新军事策略。据统计，至一九三四年一月底，江西共筑碉堡四千多座。后来日本侵略者在中国同八路军新四军作战，也采用蒋介石的这种堡垒政策。根据毛泽东关于人民战争的战略，这种反革命的堡垒政策是完全可以打破和战胜的，这已为历史的事实所充分证明。
 [^1-2-9-6]:见本卷《必须注意经济工作》注[3]。
+
+#### 论反对日本帝国主义的策略(1935.12.27)
+
+大土豪、大劣绅、大军阀、大官僚、大买办们的主意早就打定了。他们过去是、现在仍然是在说：革命（不论什么革命）总比帝国主义坏。**他们组成了一个卖国贼营垒，在他们面前没有什么当不当亡国奴的问题，他们已经撤去了民族的界线，他们的利益同帝国主义的利益是不可分离的，他们的总头子就是蒋介石[^1-2-10-9]。**
+
+这是因为民族资产阶级同地主阶级、买办阶级不是同一的东西，他们之间是有分别的。民族资产阶级没有地主阶级那样多的封建性，没有买办阶级那样多的买办性。
+
+无论蔡廷锴们将来的事业是什么，无论当时福建人民政府还是怎样守着老一套不去发动民众斗争，但是他们把本来向着红军的火力掉转去向着日本帝国主义和蒋介石，不能不说是有益于革命的行为。这是国民党营垒的破裂。
+
+在日本炸弹的威力圈及于全中国的时候，在斗争改变常态而突然以汹涌的阵势向前推进的时候，敌人的营垒是会发生破裂的。
+
+半殖民地的政治和经济的主要特点之一，就是民族资产阶级的软弱性。
+
+国民党营垒中，在民族危机到了严重关头的时候，是要发生破裂的。这种破裂，表现于民族资产阶级的动摇，表现于冯玉祥、蔡廷锴、马占山等风头一时的抗日人物。这种情况，基本地说来是不利于反革命，而有利于革命的。由于中国政治经济的不平衡，以及由此而生的革命发展的不平衡，增大了这种破裂的可能性。
+
+**让我再来说一说它的反面，那就是民族资产阶级的某些分子常常是欺骗民众的好手这样一个问题。为什么？因为他们中间除了那些真正拥护人民革命事业的人们而外，有许多人在一个时期内能够以革命的或半革命的面目出现，所以他们同时就具备着欺骗民众的资格，使得民众不容易认识他们的不彻底性以及装模作样的假相。这就增加了共产党批评同盟者、揭破假革命、争取领导权的责任。**
+
+即使在地主买办阶级营垒中也不是完全统一的。这是半殖民地的环境，即许多帝国主义争夺中国的环境所造成的。
+
+你们看，不是有点奇怪吗？并不奇怪，这不过是大狗小狗饱狗饿狗之间的一点特别有趣的争斗，一个不大不小的缺口，一种又痒又痛的矛盾。但是这点争斗，这个缺口，这种矛盾，对于革命的人民却是有用的。我们要把敌人营垒中间的一切争斗、缺口、矛盾，统统收集起来，作为反对当前主要敌人之用。
+
+在日本帝国主义打进中国本部来了这一个基本的变化上面，变化了中国各阶级之间的相互关系，扩大了民族革命营垒的势力，减弱了民族反革命营垒的势力。
+
+马克思主义者看问题，不但要看到部分，而且要看到全体。
+
+讲到长征，请问有什么意义呢？我们说，长征是历史纪录上的第一次，长征是宣言书，长征是宣传队，长征是播种机。自从盘古开天地，三皇五帝到于今，历史上曾经有过我们这样的长征吗？十二个月光阴中间，天上每日几十架飞机侦察轰炸，地下几十万大军围追堵截，路上遇着了说不尽的艰难险阻，我们却开动了每人的两只脚，长驱二万余里，纵横十一个省。请问历史上曾有过我们这样的长征吗？没有，从来没有的。长征又是宣言书。它向全世界宣告，红军是英雄好汉，帝国主义者和他们的走狗蒋介石等辈则是完全无用的。长征宣告了帝国主义和蒋介石围追堵截的破产。长征又是宣传队。它向十一个省内大约两万万人民宣布，只有红军的道路，才是解放他们的道路。不因此一举，那么广大的民众怎会如此迅速地知道世界上还有红军这样一篇大道理呢？长征又是播种机。它散布了许多种子在十一个省内，发芽、长叶、开花、结果，将来是会有收获的。总而言之，长征是以我们胜利、敌人失败的结果而告结束。谁使长征胜利的呢？是共产党。没有共产党，这样的长征是不可能设想的。中国共产党，它的领导机关，它的干部，它的党员，是不怕任何艰难困苦的。谁怀疑我们领导革命战争的能力，谁就会陷进机会主义的泥坑里去。长征一完结，新局面就开始。直罗镇一仗，中央红军同西北红军兄弟般的团结，粉碎了卖国贼蒋介石向着陕甘边区的“围剿”[^1-2-10-26]，给党中央把全国革命大本营放在西北的任务，举行了一个奠基礼。
+
+所有这些都指明，革命的阵势，是由局部性转变到全国性，由不平衡状态逐渐地转变到某种平衡状态。目前是大变动的前夜。党的任务就是把红军的活动和全国的工人、农民、学生、小资产阶级、民族资产阶级的一切活动汇合起来，成为一个统一的民族革命战线。
+
+党的基本的策略任务是什么呢？不是别的，就是建立广泛的民族革命统一战线。
+
+当着革命的形势已经改变的时候，革命的策略，革命的领导方式，也必须跟着改变。
+
+中国的和世界的反革命力量是比较过去更加衰弱了，中国的和世界的革命力量是比较过去更加增长了。这是正确的估计，这是一方面的估计。但是同时我们应当说，目前中国的和世界的反革命力量暂时还是大于革命力量。这也是正确的估计，这是又一方面的估计。**由于中国政治经济发展的不平衡，产生了革命发展的不平衡。**革命的胜利总是从那些反革命势力比较薄弱的地方首先开始，首先发展，首先胜利；而在那些反革命势力雄厚的地方，革命还是没有起来，或者发展得很慢。这是中国革命在过去长时期内已经遇到的情形。
+
+今后革命发展的速度，也一定比过去要快得多，因为中国的和世界的局面都是临在战争和革命的新时期了。**虽然如此，中国革命战争还是持久战，帝国主义的力量和革命发展的不平衡，规定了这个持久性。**我们说，时局的特点，是新的民族革命高潮的到来，中国处在新的全国大革命的前夜，这是现时革命形势的特点。这是事实，这是一方面的事实。现在我们又说，帝国主义还是一个严重的力量，革命力量的不平衡状态是一个严重的缺点，要打倒敌人必须准备作持久战，这是现时革命形势的又一个特点。这也是事实，这是又一方面的事实。
+
+马克思列宁主义反对革命队伍中的幼稚病。坚持关门主义策略的人们所主张的，就是一套幼稚病。**革命的道路，同世界上一切事物活动的道路一样，总是曲折的，不是笔直的。**革命和反革命的阵线可能变动，也同世界上一切事物的可能变动一样。日本帝国主义决定要变全中国为它的殖民地，和中国革命的现时力量还有严重的弱点，这两个基本事实就是党的新策略即广泛的统一战线的出发点。组织千千万万的民众，调动浩浩荡荡的革命军，是今天的革命向反革命进攻的需要。只有这样的力量，才能把日本帝国主义和汉奸卖国贼打垮，这是有目共见的真理。**因此，只有统一战线的策略才是马克思列宁主义的策略。**关门主义的策略则是孤家寡人的策略。
+
+我们一定不要关门主义，我们要的是制日本帝国主义和汉奸卖国贼的死命的民族革命统一战线。
+
+总之，现在是两个基本势力相斗争，一切中间势力，不附属于那一方面，就附属于这一方面，这是一定的道理。
+
+相反，人民共和国同帝国主义的走狗豪绅买办阶级是处在正相反对的地位，它不把那些成分放在所谓人民之列。这和蒋介石的“中华民国国民政府”，仅仅代表最大的富翁，并不代表老百姓，并不把老百姓放在所谓“国民”之列，是一样的。
+
+总括工农及其他人民的全部利益，就构成了中华民族的利益。**买办阶级和地主阶级虽然也住在中国的土地上，可是他们是不顾民族利益的，他们的利益是同多数人的利益相冲突的。**我们仅仅离开他们这些少数人，仅仅同他们这些少数人相冲突，所以我们有权利称我们自己是代表全民族的。
+
+但是民族资产阶级如果参加反对帝国主义的统一战线，那末，工人阶级和民族资产阶级就有了共同的利害关系。人民共和国在资产阶级民主革命的时代并不废除非帝国主义的、非封建主义的私有财产，并不没收民族资产阶级的工商业，而且还鼓励这些工商业的发展。任何民族资本家，只要他不赞助帝国主义和中国卖国贼，我们就要保护他。在民主革命阶段，劳资间的斗争是有限度的。人民共和国的劳动法保护工人的利益，却并不反对民族资本家发财，并不反对民族工商业的发展，因为这种发展不利于帝国主义，而有利于中国人民。由此可知，人民共和国是代表反帝国主义反封建势力的各阶层人民的利益的。人民共和国的政府以工农为主体，同时容纳其他反帝国主义反封建势力的阶级。
+
+让这些人参加人民共和国的政府，不危险吗？不危险的。工人农民是这个共和国的基本群众。给城市小资产阶级、知识分子及其他拥护反帝反封建纲领的分子以在人民共和国政府中说话做事的权利，给他们以选举权和被选举权，不能违背工农基本群众的利益。我们纲领的重要部分应当保护工农基本群众的利益。工农基本群众的代表在人民共和国政府中占了大多数，共产党在这个政府中的领导和活动，都保证了他们进来不危险。
+
+一九二四年至一九二七年的革命是资产阶级民主主义性质的革命，这次革命没有完成，而是失败了。一九二七年至现在，我们领导的土地革命，也是资产阶级民主主义性质的革命，因为革命的任务是反帝反封建，并不是反资本主义。今后一个相当长时期中的革命还是如此。
+
+革命的转变，那是将来的事。在将来，民主主义的革命必然要转变为社会主义的革命。何时转变，应以是否具备了转变的条件为标准，时间会要相当地长。不到具备了政治上经济上一切应有的条件之时，不到转变对于全国最大多数人民有利而不是不利之时，不应当轻易谈转变。
+
+于今帝国主义则更加无义战，只有被压迫民族和被压迫阶级有义战。**全世界一切由人民起来反对压迫者的战争，都是义战。**
+
+[^1-2-10-9]:毛泽东做这个报告的时候，蒋介石继续实行对日妥协、对内屠杀和镇压的反动政策，如出卖华北主权，镇压人民的抗日运动，围攻要求抗日的红军等等。因此，中国共产党必须尽量揭穿蒋介石这个卖国贼的真面目；也因此，党在这时提出的抗日民族统一战线还没有包括蒋介石在内。但是毛泽东在这个报告中，已经说到了日本和英美帝国主义的矛盾可能引起中国地主买办阶级营垒中的分化，党应当利用这种矛盾，争取一切可以争取的力量来反对当前的主要敌人日本帝国主义。随着日本帝国主义对中国侵略的加紧，英美同日本的矛盾更加表面化，中国共产党认为和英美帝国主义利益密切联系的蒋介石集团可能改变对日本的态度，因而采取逼迫蒋介石转向抗日的政策。一九三六年五月，红军由山西回师陕北，即直接向南京国民党政府要求停止内战一致抗日。同年八月，中国共产党中央又致国民党中央一封信，要求组织两党共同抗日的统一战线，并派遣代表进行谈判。但蒋介石仍然拒绝共产党的主张。直到一九三六年十二月蒋介石在西安被国民党内主张联共抗日的军人所扣留的时候，他才被迫接受共产党关于停止内战准备抗日的要求。
+[^1-2-10-26]:一九三五年七月，国民党军开始对陕甘革命根据地发动第三次“围剿”。陕甘红军第二十六军先在东线击溃了敌人两个旅，将该线敌军主力赶到黄河以东。同年九月，原在鄂豫皖根据地的红军第二十五军，经陕南陇东到达陕北，与陕甘红军会合，成立红军第十五军团。十月，红十五军团在陕西甘泉县的劳山战役中消灭敌军一一○师大部，击毙其师长，不久又将敌军一○七师的四个营消灭于陕西富县榆林桥。于是敌人重新组织兵力，以董英斌（东北军五十七军军长）带五个师分两路进攻，东边一个师沿陕西洛川、富县大道北上，西边四个师由甘肃的庆阳、合水沿葫芦河向陕西富县方面前进。同年十月，红一方面军主力（此时称红军陕甘支队）到达陕北。十一月，陕甘支队恢复红一方面军番号，红十五军团列入红一方面军建制。接着红一方面军歼灭敌军一○九师于富县西面的直罗镇，又于追击中歼灭敌军一○六师一个团于张家湾地区。这样就彻底粉碎了敌人对陕甘根据地的第三次“围剿”。
+
+#### 中国革命战争的战略问题(1936.12)
+
