--- a/毛泽东选集-读书笔记/第一卷/第二次国内革命战争时期/论反对日本帝国主义的策略.md
+++ b/毛泽东选集-读书笔记/第一卷/第二次国内革命战争时期/论反对日本帝国主义的策略.md
@@ -20,11 +20,11 @@
 
 问题摆在民族资产阶级、买办阶级和地主阶级面前，摆在国民党面前，又是怎样的呢？
 
-大土豪、大劣绅、大军阀、大官僚、大买办们的主意早就打定了。他们过去是、现在仍然是在说：革命（不论什么革命）总比帝国主义坏。他们组成了一个卖国贼营垒，在他们面前没有什么当不当亡国奴的问题，他们已经撤去了民族的界线，他们的利益同帝国主义的利益是不可分离的，他们的总头子就是蒋介石[^9]。这一卖国贼营垒是中国人民的死敌。假如没有这一群卖国贼，日本帝国主义是不可能放肆到这步田地的。他们是帝国主义的走狗。
+**大土豪、大劣绅、大军阀、大官僚、大买办们的主意早就打定了。他们过去是、现在仍然是在说：革命（不论什么革命）总比帝国主义坏。他们组成了一个卖国贼营垒，在他们面前没有什么当不当亡国奴的问题，他们已经撤去了民族的界线，他们的利益同帝国主义的利益是不可分离的，他们的总头子就是蒋介石[^9]。**这一卖国贼营垒是中国人民的死敌。假如没有这一群卖国贼，日本帝国主义是不可能放肆到这步田地的。他们是帝国主义的走狗。
 
-民族资产阶级是一个复杂的问题。这个阶级曾经参加过一九二四年至一九二七年的革命，随后又为这个革命的火焰所吓坏，站到人民的敌人即蒋介石集团那一方面去了。问题是在今天的情况下，民族资产阶级有没有发生变化的可能性呢？我们认为是有这种可能性的。这是因为民族资产阶级同地主阶级、买办阶级不是同一的东西，他们之间是有分别的。民族资产阶级没有地主阶级那样多的封建性，没有买办阶级那样多的买办性。民族资产阶级内部有同外国资本和本国土地关系较多的一部分人，这一部分人是民族资产阶级的右翼，我们暂且不去估计他们的变化的可能性。问题是在没有那些关系或者关系较少的那些部分。我们认为在殖民地化威胁的新环境之下，民族资产阶级的这些部分的态度可能发生变化。这个变化的特点就是他们的动摇。他们一方面不喜欢帝国主义，一方面又怕革命的彻底性，他们在这二者之间动摇着。这就说明，在一九二四年至一九二七年的革命时期他们为什么参加了革命，及到这一时期之末，他们又为什么站到蒋介石方面去了。现在的时期，同一九二七年蒋介石叛变革命的时期有什么分别呢？那时的中国还是一个半殖民地，现在正在走向殖民地。九年以来，他们抛弃了自己的同盟者工人阶级，和地主买办阶级做朋友，得了什么好处没有呢？没有什么好处，得到的只不过是民族工商业的破产或半破产的境遇。因为这些情况，我们认为民族资产阶级的态度，在今天的时局下，有起变化的可能性。变化的程度怎样呢？总的特点是动摇。但在斗争的某些阶段，他们中间的一部分（左翼）是有参加斗争的可能的。其另一部分，则有由动摇而采取中立态度的可能。
+民族资产阶级是一个复杂的问题。这个阶级曾经参加过一九二四年至一九二七年的革命，随后又为这个革命的火焰所吓坏，站到人民的敌人即蒋介石集团那一方面去了。问题是在今天的情况下，民族资产阶级有没有发生变化的可能性呢？我们认为是有这种可能性的。**这是因为民族资产阶级同地主阶级、买办阶级不是同一的东西，他们之间是有分别的。民族资产阶级没有地主阶级那样多的封建性，没有买办阶级那样多的买办性。**民族资产阶级内部有同外国资本和本国土地关系较多的一部分人，这一部分人是民族资产阶级的右翼，我们暂且不去估计他们的变化的可能性。问题是在没有那些关系或者关系较少的那些部分。我们认为在殖民地化威胁的新环境之下，民族资产阶级的这些部分的态度可能发生变化。这个变化的特点就是他们的动摇。他们一方面不喜欢帝国主义，一方面又怕革命的彻底性，他们在这二者之间动摇着。这就说明，在一九二四年至一九二七年的革命时期他们为什么参加了革命，及到这一时期之末，他们又为什么站到蒋介石方面去了。现在的时期，同一九二七年蒋介石叛变革命的时期有什么分别呢？那时的中国还是一个半殖民地，现在正在走向殖民地。九年以来，他们抛弃了自己的同盟者工人阶级，和地主买办阶级做朋友，得了什么好处没有呢？没有什么好处，得到的只不过是民族工商业的破产或半破产的境遇。因为这些情况，我们认为民族资产阶级的态度，在今天的时局下，有起变化的可能性。变化的程度怎样呢？总的特点是动摇。但在斗争的某些阶段，他们中间的一部分（左翼）是有参加斗争的可能的。其另一部分，则有由动摇而采取中立态度的可能。
 
-蔡廷锴等人领导的十九路军[^10]是代表什么阶级的利益呢？他们是代表着民族资产阶级、上层小资产阶级、乡村的富农和小地主。蔡廷锴们不是同红军打过死仗的吗？可是后来又同红军订立了抗日反蒋同盟。他们在江西，向红军进攻；到了上海，又抵抗日本帝国主义；到了福建，便同红军成立了妥协，向蒋介石开起火来。无论蔡廷锴们将来的事业是什么，无论当时福建人民政府还是怎样守着老一套不去发动民众斗争，但是他们把本来向着红军的火力掉转去向着日本帝国主义和蒋介石，不能不说是有益于革命的行为。这是国民党营垒的破裂。九一八事变以后的环境能够使国民党营垒分裂出这样一部分人，为什么今天的环境反倒不能造成国民党的分裂呢？我们党内持这样一种论点的人是不对的，他们说，整个地主资产阶级的营垒是统一的，固定的，任何情况下也不能使它起变化。他们不但不认识今天的严重环境，并且连历史也忘记了。
+蔡廷锴等人领导的十九路军[^10]是代表什么阶级的利益呢？他们是代表着民族资产阶级、上层小资产阶级、乡村的富农和小地主。蔡廷锴们不是同红军打过死仗的吗？可是后来又同红军订立了抗日反蒋同盟。他们在江西，向红军进攻；到了上海，又抵抗日本帝国主义；到了福建，便同红军成立了妥协，向蒋介石开起火来。**无论蔡廷锴们将来的事业是什么，无论当时福建人民政府还是怎样守着老一套不去发动民众斗争，但是他们把本来向着红军的火力掉转去向着日本帝国主义和蒋介石，不能不说是有益于革命的行为。这是国民党营垒的破裂。**九一八事变以后的环境能够使国民党营垒分裂出这样一部分人，为什么今天的环境反倒不能造成国民党的分裂呢？我们党内持这样一种论点的人是不对的，他们说，整个地主资产阶级的营垒是统一的，固定的，任何情况下也不能使它起变化。他们不但不认识今天的严重环境，并且连历史也忘记了。
 
 让我再讲一点历史。一九二六年和一九二七年，当着革命军向武汉前进，以至打到武汉、打到河南的时候，发生了唐生智[^11]、冯玉祥[^12]参加革命的事情。冯玉祥于一九三三年在察哈尔[^13]还曾经和共产党一度合作，建立了抗日同盟军。
 
@@ -32,25 +32,25 @@
 
 马占山在东三省的抗日行为[^15]，也是统治者营垒中的一个分裂。
 
-所有这些例子都指明：在日本炸弹的威力圈及于全中国的时候，在斗争改变常态而突然以汹涌的阵势向前推进的时候，敌人的营垒是会发生破裂的。
+所有这些例子都指明：**在日本炸弹的威力圈及于全中国的时候，在斗争改变常态而突然以汹涌的阵势向前推进的时候，敌人的营垒是会发生破裂的。**
 
 同志们，现在让我们把问题转到另一点。
 
-如果有人拿中国民族资产阶级在政治上经济上的软弱性这一点来反对我们的论点，认为中国民族资产阶级虽然处在新环境，还是没有改变态度的可能，这种说法对不对呢？我认为也是不对的。如果不能改变态度的原因，是民族资产阶级的软弱性，那末，一九二四年至一九二七年为什么改变了他们的常态，不仅是动摇，简直是参加了革命呢？难道民族资产阶级的软弱性是后来才得的新毛病，而不是他们从娘肚子里带出来的老毛病吗？难道今天软弱，那时就不软弱吗？半殖民地的政治和经济的主要特点之一，就是民族资产阶级的软弱性。正是因为这样，帝国主义敢于欺负他们，而这也就规定了他们不喜欢帝国主义的特点。自然，我们不但不否认，并且完全承认：又是因为这一点，帝国主义和地主买办阶级容易拿某种临时的贿赂为钓饵将他们拉了过去，而这也就规定了他们对于革命的不彻底性。可是总不能说，在今天的情况下，他们同地主阶级和买办阶级没有任何的分别。
+如果有人拿中国民族资产阶级在政治上经济上的软弱性这一点来反对我们的论点，认为中国民族资产阶级虽然处在新环境，还是没有改变态度的可能，这种说法对不对呢？我认为也是不对的。如果不能改变态度的原因，是民族资产阶级的软弱性，那末，一九二四年至一九二七年为什么改变了他们的常态，不仅是动摇，简直是参加了革命呢？难道民族资产阶级的软弱性是后来才得的新毛病，而不是他们从娘肚子里带出来的老毛病吗？难道今天软弱，那时就不软弱吗？**半殖民地的政治和经济的主要特点之一，就是民族资产阶级的软弱性。**正是因为这样，帝国主义敢于欺负他们，而这也就规定了他们不喜欢帝国主义的特点。自然，我们不但不否认，并且完全承认：又是因为这一点，帝国主义和地主买办阶级容易拿某种临时的贿赂为钓饵将他们拉了过去，而这也就规定了他们对于革命的不彻底性。可是总不能说，在今天的情况下，他们同地主阶级和买办阶级没有任何的分别。
 
-所以我们着重地指出：国民党营垒中，在民族危机到了严重关头的时候，是要发生破裂的。这种破裂，表现于民族资产阶级的动摇，表现于冯玉祥、蔡廷锴、马占山等风头一时的抗日人物。这种情况，基本地说来是不利于反革命，而有利于革命的。由于中国政治经济的不平衡，以及由此而生的革命发展的不平衡，增大了这种破裂的可能性。
+所以我们着重地指出：**国民党营垒中，在民族危机到了严重关头的时候，是要发生破裂的。这种破裂，表现于民族资产阶级的动摇，表现于冯玉祥、蔡廷锴、马占山等风头一时的抗日人物。这种情况，基本地说来是不利于反革命，而有利于革命的。由于中国政治经济的不平衡，以及由此而生的革命发展的不平衡，增大了这种破裂的可能性。**
 
-同志们！这个问题的正面，已经说完了。让我再来说一说它的反面，那就是民族资产阶级的某些分子常常是欺骗民众的好手这样一个问题。为什么？因为他们中间除了那些真正拥护人民革命事业的人们而外，有许多人在一个时期内能够以革命的或半革命的面目出现，所以他们同时就具备着欺骗民众的资格，使得民众不容易认识他们的不彻底性以及装模作样的假相。这就增加了共产党批评同盟者、揭破假革命、争取领导权的责任。如果我们否认民族资产阶级在大震动中有动摇及参加革命的可能性，那也就取消了至少也减轻了我们党对于争取领导权的任务。因为，如果民族资产阶级是同地主买办一模一样，以卖国贼的狰狞面孔出现，争取领导权的任务就大可取消，至少也可以减轻了。
+同志们！这个问题的正面，已经说完了。**让我再来说一说它的反面，那就是民族资产阶级的某些分子常常是欺骗民众的好手这样一个问题。为什么？因为他们中间除了那些真正拥护人民革命事业的人们而外，有许多人在一个时期内能够以革命的或半革命的面目出现，所以他们同时就具备着欺骗民众的资格，使得民众不容易认识他们的不彻底性以及装模作样的假相。这就增加了共产党批评同盟者、揭破假革命、争取领导权的责任。**如果我们否认民族资产阶级在大震动中有动摇及参加革命的可能性，那也就取消了至少也减轻了我们党对于争取领导权的任务。因为，如果民族资产阶级是同地主买办一模一样，以卖国贼的狰狞面孔出现，争取领导权的任务就大可取消，至少也可以减轻了。
 
-在整个地分析中国地主资产阶级在大震动中的姿态时，还有一个方面应该指出，那就是：即使在地主买办阶级营垒中也不是完全统一的。这是半殖民地的环境，即许多帝国主义争夺中国的环境所造成的。当斗争是向着日本帝国主义的时候，美国以至英国的走狗们是有可能遵照其主人的叱声的轻重，同日本帝国主义者及其走狗暗斗以至明争的。过去这种狗打架的事情多得很，我们不去说它。于今只说被蒋介石禁闭过的国民党政客胡汉民[^16]，不久以前也签名于我们所提出的抗日救国六大纲领的文件[^17]。胡汉民所依托的两广派军阀[^18]，也在所谓“收复失地”和“抗日剿匪[^19]并重”（蒋介石的是“先剿匪，后抗日”）的欺骗口号之下，同蒋介石对立。你们看，不是有点奇怪吗？并不奇怪，这不过是大狗小狗饱狗饿狗之间的一点特别有趣的争斗，一个不大不小的缺口，一种又痒又痛的矛盾。但是这点争斗，这个缺口，这种矛盾，对于革命的人民却是有用的。我们要把敌人营垒中间的一切争斗、缺口、矛盾，统统收集起来，作为反对当前主要敌人之用。
+在整个地分析中国地主资产阶级在大震动中的姿态时，还有一个方面应该指出，那就是：**即使在地主买办阶级营垒中也不是完全统一的。这是半殖民地的环境，即许多帝国主义争夺中国的环境所造成的。**当斗争是向着日本帝国主义的时候，美国以至英国的走狗们是有可能遵照其主人的叱声的轻重，同日本帝国主义者及其走狗暗斗以至明争的。过去这种狗打架的事情多得很，我们不去说它。于今只说被蒋介石禁闭过的国民党政客胡汉民[^16]，不久以前也签名于我们所提出的抗日救国六大纲领的文件[^17]。胡汉民所依托的两广派军阀[^18]，也在所谓“收复失地”和“抗日剿匪[^19]并重”（蒋介石的是“先剿匪，后抗日”）的欺骗口号之下，同蒋介石对立。**你们看，不是有点奇怪吗？并不奇怪，这不过是大狗小狗饱狗饿狗之间的一点特别有趣的争斗，一个不大不小的缺口，一种又痒又痛的矛盾。但是这点争斗，这个缺口，这种矛盾，对于革命的人民却是有用的。我们要把敌人营垒中间的一切争斗、缺口、矛盾，统统收集起来，作为反对当前主要敌人之用。**
 
-把这个阶级关系问题总起来说，就是：在日本帝国主义打进中国本部来了这一个基本的变化上面，变化了中国各阶级之间的相互关系，扩大了民族革命营垒的势力，减弱了民族反革命营垒的势力。
+把这个阶级关系问题总起来说，就是：**在日本帝国主义打进中国本部来了这一个基本的变化上面，变化了中国各阶级之间的相互关系，扩大了民族革命营垒的势力，减弱了民族反革命营垒的势力。**
 
 现在我们来说中国民族革命营垒里的情形。
 
-首先是红军的情形。同志们，你们看，差不多一年半以来，中国的三支主力红军都在作阵地的大转移。从去年八月任弼时[^20]同志等率领第六军团向贺龙同志的地方开始转移[^21]起，接着就是十月开始的我们的转移[^22]。今年三月，川陕边区的红军也开始转移[^23]。这三支红军，都放弃了原有阵地，转移到新地区去。这个大转移，使得旧区域变为游击区。在转移中，红军本身又有很大的削弱。如果我们拿着整个局面中的这一方面来看，敌人是得到了暂时的部分的胜利，我们是遭遇了暂时的部分的失败。这种说法对不对呢？我以为是对的，因为这是事实。但是有人说（例如张国焘[^24]）：中央红军[^25]失败了。这话对不对呢？不对。因为这不是事实。马克思主义者看问题，不但要看到部分，而且要看到全体。一个虾蟆坐在井里说：“天有一个井大。”这是不对的，因为天不止一个井大。如果它说：“天的某一部分有一个井大。”这是对的，因为合乎事实。我们说，红军在一个方面（保持原有阵地的方面）说来是失败了，在另一个方面（完成长征计划的方面）说来是胜利了。敌人在一个方面（占领我军原有阵地的方面）说来是胜利了，在另一个方面（实现“围剿”“追剿”计划的方面）说来是失败了。这样说才是恰当的，因为我们完成了长征。
+首先是红军的情形。同志们，你们看，差不多一年半以来，中国的三支主力红军都在作阵地的大转移。从去年八月任弼(**bì**)时[^20]同志等率领第六军团向贺龙同志的地方开始转移[^21]起，接着就是十月开始的我们的转移[^22]。今年三月，川陕边区的红军也开始转移[^23]。这三支红军，都放弃了原有阵地，转移到新地区去。这个大转移，使得旧区域变为游击区。在转移中，红军本身又有很大的削弱。如果我们拿着整个局面中的这一方面来看，敌人是得到了暂时的部分的胜利，我们是遭遇了暂时的部分的失败。这种说法对不对呢？我以为是对的，因为这是事实。但是有人说（例如张国焘[^24]）：中央红军[^25]失败了。这话对不对呢？不对。因为这不是事实。**马克思主义者看问题，不但要看到部分，而且要看到全体。**一个虾蟆坐在井里说：“天有一个井大。”这是不对的，因为天不止一个井大。如果它说：“天的某一部分有一个井大。”这是对的，因为合乎事实。我们说，红军在一个方面（保持原有阵地的方面）说来是失败了，在另一个方面（完成长征计划的方面）说来是胜利了。敌人在一个方面（占领我军原有阵地的方面）说来是胜利了，在另一个方面（实现“围剿”“追剿”计划的方面）说来是失败了。这样说才是恰当的，因为我们完成了长征。
 
-讲到长征，请问有什么意义呢？我们说，长征是历史纪录上的第一次，长征是宣言书，长征是宣传队，长征是播种机。自从盘古开天地，三皇五帝到于今，历史上曾经有过我们这样的长征吗？十二个月光阴中间，天上每日几十架飞机侦察轰炸，地下几十万大军围追堵截，路上遇着了说不尽的艰难险阻，我们却开动了每人的两只脚，长驱二万余里，纵横十一个省。请问历史上曾有过我们这样的长征吗？没有，从来没有的。长征又是宣言书。它向全世界宣告，红军是英雄好汉，帝国主义者和他们的走狗蒋介石等辈则是完全无用的。长征宣告了帝国主义和蒋介石围追堵截的破产。长征又是宣传队。它向十一个省内大约两万万人民宣布，只有红军的道路，才是解放他们的道路。不因此一举，那么广大的民众怎会如此迅速地知道世界上还有红军这样一篇大道理呢？长征又是播种机。它散布了许多种子在十一个省内，发芽、长叶、开花、结果，将来是会有收获的。总而言之，长征是以我们胜利、敌人失败的结果而告结束。谁使长征胜利的呢？是共产党。没有共产党，这样的长征是不可能设想的。中国共产党，它的领导机关，它的干部，它的党员，是不怕任何艰难困苦的。谁怀疑我们领导革命战争的能力，谁就会陷进机会主义的泥坑里去。长征一完结，新局面就开始。直罗镇一仗，中央红军同西北红军兄弟般的团结，粉碎了卖国贼蒋介石向着陕甘边区的“围剿”[^26]，给党中央把全国革命大本营放在西北的任务，举行了一个奠基礼。
+**讲到长征，请问有什么意义呢？我们说，长征是历史纪录上的第一次，长征是宣言书，长征是宣传队，长征是播种机。自从盘古开天地，三皇五帝到于今，历史上曾经有过我们这样的长征吗？十二个月光阴中间，天上每日几十架飞机侦察轰炸，地下几十万大军围追堵截，路上遇着了说不尽的艰难险阻，我们却开动了每人的两只脚，长驱二万余里，纵横十一个省。请问历史上曾有过我们这样的长征吗？没有，从来没有的。长征又是宣言书。它向全世界宣告，红军是英雄好汉，帝国主义者和他们的走狗蒋介石等辈则是完全无用的。长征宣告了帝国主义和蒋介石围追堵截的破产。长征又是宣传队。它向十一个省内大约两万万人民宣布，只有红军的道路，才是解放他们的道路。不因此一举，那么广大的民众怎会如此迅速地知道世界上还有红军这样一篇大道理呢？长征又是播种机。它散布了许多种子在十一个省内，发芽、长叶、开花、结果，将来是会有收获的。总而言之，长征是以我们胜利、敌人失败的结果而告结束。谁使长征胜利的呢？是共产党。没有共产党，这样的长征是不可能设想的。中国共产党，它的领导机关，它的干部，它的党员，是不怕任何艰难困苦的。谁怀疑我们领导革命战争的能力，谁就会陷进机会主义的泥坑里去。长征一完结，新局面就开始。直罗镇一仗，中央红军同西北红军兄弟般的团结，粉碎了卖国贼蒋介石向着陕甘边区的“围剿”[^26]，给党中央把全国革命大本营放在西北的任务，举行了一个奠基礼。**
 
 主力红军如此，南方各省的游击战争怎么样呢？南方的游击战争，受到了某些挫折，但是并没有被消灭。许多部分，正在恢复、生长和发展[^27]。
 
@@ -64,17 +64,17 @@
 
 少数民族，特别是内蒙民族，在日本帝国主义的直接威胁之下，正在起来斗争。其前途，将和华北人民的斗争和红军在西北的活动，汇合在一起。
 
-所有这些都指明，革命的阵势，是由局部性转变到全国性，由不平衡状态逐渐地转变到某种平衡状态。目前是大变动的前夜。党的任务就是把红军的活动和全国的工人、农民、学生、小资产阶级、民族资产阶级的一切活动汇合起来，成为一个统一的民族革命战线。
+**所有这些都指明，革命的阵势，是由局部性转变到全国性，由不平衡状态逐渐地转变到某种平衡状态。目前是大变动的前夜。党的任务就是把红军的活动和全国的工人、农民、学生、小资产阶级、民族资产阶级的一切活动汇合起来，成为一个统一的民族革命战线。**
 
 ## 民族统一战线
 
 观察了反革命和革命两方面的形势以后，我们就容易说明党的策略任务了。
 
-党的基本的策略任务是什么呢？不是别的，就是建立广泛的民族革命统一战线。
+**党的基本的策略任务是什么呢？不是别的，就是建立广泛的民族革命统一战线。**
 
-当着革命的形势已经改变的时候，革命的策略，革命的领导方式，也必须跟着改变。日本帝国主义和汉奸卖国贼的任务，是变中国为殖民地；我们的任务，是变中国为独立、自由和领土完整的国家。
+**当着革命的形势已经改变的时候，革命的策略，革命的领导方式，也必须跟着改变。**日本帝国主义和汉奸卖国贼的任务，是变中国为殖民地；我们的任务，是变中国为独立、自由和领土完整的国家。
 
-实现中国的独立自由是一个伟大的任务。这须同外国帝国主义和本国反革命势力作战。日本帝国主义是下了凶横直进的决心的。国内豪绅买办阶级的反革命势力，在目前还是大过人民的革命势力。打倒日本帝国主义和中国反革命势力的事业，不是一天两天可以成功的，必须准备花费长久的时间；不是少少一点力量可以成功的，必须聚积雄厚的力量。中国的和世界的反革命力量是比较过去更加衰弱了，中国的和世界的革命力量是比较过去更加增长了。这是正确的估计，这是一方面的估计。但是同时我们应当说，目前中国的和世界的反革命力量暂时还是大于革命力量。这也是正确的估计，这是又一方面的估计。由于中国政治经济发展的不平衡，产生了革命发展的不平衡。革命的胜利总是从那些反革命势力比较薄弱的地方首先开始，首先发展，首先胜利；而在那些反革命势力雄厚的地方，革命还是没有起来，或者发展得很慢。这是中国革命在过去长时期内已经遇到的情形。在将来，可以想到，在某些阶段里，革命的总的形势是更加发展了，但是不平衡状态还会存在着。要把不平衡的状态变到大体上平衡的状态，还要经过很长的时间，还要花费很大的气力，还要依靠党的策略路线的正确。如果说，苏联共产党领导的革命战争[^29]是在三个年头里完结了的话，那末中国共产党领导的革命战争，过去已经花去了很长的时间，而要最后地彻底地解决内外反革命势力，我们还得准备再花一个应有的时间，像过去那样地过分的性急是不行的。还得提出一个很好的革命策略，像过去那样地老在狭小的圈子里打转，是干不出大事情来的。不是说中国的事情只能慢吞吞地去干，中国的事情要勇猛地去干，亡国的危险不容许我们有一分钟的懈怠。今后革命发展的速度，也一定比过去要快得多，因为中国的和世界的局面都是临在战争和革命的新时期了。虽然如此，中国革命战争还是持久战，帝国主义的力量和革命发展的不平衡，规定了这个持久性。我们说，时局的特点，是新的民族革命高潮的到来，中国处在新的全国大革命的前夜，这是现时革命形势的特点。这是事实，这是一方面的事实。现在我们又说，帝国主义还是一个严重的力量，革命力量的不平衡状态是一个严重的缺点，要打倒敌人必须准备作持久战，这是现时革命形势的又一个特点。这也是事实，这是又一方面的事实。这两种特点，这两种事实，都一齐跑来教训我们，要求我们适应情况，改变策略，改变我们调动队伍进行战斗的方式。目前的时局，要求我们勇敢地抛弃关门主义，采取广泛的统一战线，防止冒险主义。不到决战的时机，没有决战的力量，不能冒冒失失地去进行决战。
+实现中国的独立自由是一个伟大的任务。这须同外国帝国主义和本国反革命势力作战。日本帝国主义是下了凶横直进的决心的。国内豪绅买办阶级的反革命势力，在目前还是大过人民的革命势力。打倒日本帝国主义和中国反革命势力的事业，不是一天两天可以成功的，必须准备花费长久的时间；不是少少一点力量可以成功的，必须聚积雄厚的力量。**中国的和世界的反革命力量是比较过去更加衰弱了，中国的和世界的革命力量是比较过去更加增长了。这是正确的估计，这是一方面的估计。但是同时我们应当说，目前中国的和世界的反革命力量暂时还是大于革命力量。这也是正确的估计，这是又一方面的估计。由于中国政治经济发展的不平衡，产生了革命发展的不平衡。革命的胜利总是从那些反革命势力比较薄弱的地方首先开始，首先发展，首先胜利；而在那些反革命势力雄厚的地方，革命还是没有起来，或者发展得很慢。这是中国革命在过去长时期内已经遇到的情形。**在将来，可以想到，在某些阶段里，革命的总的形势是更加发展了，但是不平衡状态还会存在着。要把不平衡的状态变到大体上平衡的状态，还要经过很长的时间，还要花费很大的气力，还要依靠党的策略路线的正确。如果说，苏联共产党领导的革命战争[^29]是在三个年头里完结了的话，那末中国共产党领导的革命战争，过去已经花去了很长的时间，而要最后地彻底地解决内外反革命势力，我们还得准备再花一个应有的时间，像过去那样地过分的性急是不行的。还得提出一个很好的革命策略，像过去那样地老在狭小的圈子里打转，是干不出大事情来的。不是说中国的事情只能慢吞吞地去干，中国的事情要勇猛地去干，亡国的危险不容许我们有一分钟的懈怠。**今后革命发展的速度，也一定比过去要快得多，因为中国的和世界的局面都是临在战争和革命的新时期了。虽然如此，中国革命战争还是持久战，帝国主义的力量和革命发展的不平衡，规定了这个持久性。我们说，时局的特点，是新的民族革命高潮的到来，中国处在新的全国大革命的前夜，这是现时革命形势的特点。这是事实，这是一方面的事实。现在我们又说，帝国主义还是一个严重的力量，革命力量的不平衡状态是一个严重的缺点，要打倒敌人必须准备作持久战，这是现时革命形势的又一个特点。这也是事实，这是又一方面的事实。**这两种特点，这两种事实，都一齐跑来教训我们，要求我们适应情况，改变策略，改变我们调动队伍进行战斗的方式。目前的时局，要求我们勇敢地抛弃关门主义，采取广泛的统一战线，防止冒险主义。不到决战的时机，没有决战的力量，不能冒冒失失地去进行决战。
 
 这里不来说关门主义和冒险主义的关系，也不来说冒险主义在将来大的时局开展中可能发生的危险性，这点等到将来再说不迟。这里只说统一战线的策略和关门主义的策略，是正相反对的两个不同的策略。
 
@@ -86,7 +86,7 @@
 
 一个则说，这些批评都是不对的。革命的力量是要纯粹又纯粹，革命的道路是要笔直又笔直。圣经上载了的才是对的。民族资产阶级是全部永世反革命了。对于富农，是一步也退让不得。对于黄色工会，只有同它拚命。如果同蔡廷锴握手的话，那必须在握手的瞬间骂他一句反革命。哪有猫儿不吃油，哪有军阀不是反革命？知识分子只有三天的革命性，招收他们是危险的。因此，结论：关门主义是唯一的法宝，统一战线是机会主义的策略。
 
-同志们，统一战线的道理和关门主义的道理究竟哪一个是对的呢？马克思列宁主义到底赞成哪一个呢？我坚决地回答：赞成统一战线，反对关门主义。人中间有三岁小孩子，三岁小孩子有许多道理都是对的，但是不能使他们管天下国家的大事，因为他们还不明白天下国家的道理。马克思列宁主义反对革命队伍中的幼稚病。坚持关门主义策略的人们所主张的，就是一套幼稚病。革命的道路，同世界上一切事物活动的道路一样，总是曲折的，不是笔直的。革命和反革命的阵线可能变动，也同世界上一切事物的可能变动一样。日本帝国主义决定要变全中国为它的殖民地，和中国革命的现时力量还有严重的弱点，这两个基本事实就是党的新策略即广泛的统一战线的出发点。组织千千万万的民众，调动浩浩荡荡的革命军，是今天的革命向反革命进攻的需要。只有这样的力量，才能把日本帝国主义和汉奸卖国贼打垮，这是有目共见的真理。因此，只有统一战线的策略才是马克思列宁主义的策略。关门主义的策略则是孤家寡人的策略。关门主义“为渊驱鱼，为丛驱雀”，把“千千万万”和“浩浩荡荡”都赶到敌人那一边去，只博得敌人的喝采。关门主义在实际上是日本帝国主义和汉奸卖国贼的忠顺的奴仆。关门主义的所谓“纯粹”和“笔直”，是马克思列宁主义向之掌嘴，而日本帝国主义则向之嘉奖的东西。我们一定不要关门主义，我们要的是制日本帝国主义和汉奸卖国贼的死命的民族革命统一战线。
+同志们，统一战线的道理和关门主义的道理究竟哪一个是对的呢？马克思列宁主义到底赞成哪一个呢？我坚决地回答：赞成统一战线，反对关门主义。人中间有三岁小孩子，三岁小孩子有许多道理都是对的，但是不能使他们管天下国家的大事，因为他们还不明白天下国家的道理。**马克思列宁主义反对革命队伍中的幼稚病。坚持关门主义策略的人们所主张的，就是一套幼稚病。革命的道路，同世界上一切事物活动的道路一样，总是曲折的，不是笔直的。革命和反革命的阵线可能变动，也同世界上一切事物的可能变动一样。日本帝国主义决定要变全中国为它的殖民地，和中国革命的现时力量还有严重的弱点，这两个基本事实就是党的新策略即广泛的统一战线的出发点。组织千千万万的民众，调动浩浩荡荡的革命军，是今天的革命向反革命进攻的需要。只有这样的力量，才能把日本帝国主义和汉奸卖国贼打垮，这是有目共见的真理。因此，只有统一战线的策略才是马克思列宁主义的策略。关门主义的策略则是孤家寡人的策略。**关门主义“为渊驱鱼，为丛驱雀”，把“千千万万”和“浩浩荡荡”都赶到敌人那一边去，只博得敌人的喝采。关门主义在实际上是日本帝国主义和汉奸卖国贼的忠顺的奴仆。关门主义的所谓“纯粹”和“笔直”，是马克思列宁主义向之掌嘴，而日本帝国主义则向之嘉奖的东西。**我们一定不要关门主义，我们要的是制日本帝国主义和汉奸卖国贼的死命的民族革命统一战线。**
 
 ## 人民共和国[^30]
 
@@ -96,27 +96,27 @@
 
 现时革命方面的特点，是有了经过锻炼的共产党，又有了经过锻炼的红军。这是一件极关重要的事。如果现时还没有经过锻炼的共产党和红军，那就将发生极大的困难。为什么？因为中国的汉奸卖国贼是很多的，并且是有力量的，他们必然想出各种法子来破坏这个统一战线，用他们威迫利诱、纵横捭阖的手段来挑拨离间，用兵力来强压，来各个击破那些比较他们小的、愿意离开卖国贼而同我们联合起来打日本的力量。如果抗日政府抗日军队中缺乏共产党和红军这个要素，这种情形是难于避免的。一九二七年革命的失败，主要的原因就是由于共产党内的机会主义路线，不努力扩大自己的队伍（工农运动和共产党领导的军队），而只依仗其暂时的同盟者国民党。其结果是帝国主义命令它的走狗豪绅买办阶级，伸出千百只手来，首先把蒋介石拉去，然后又把汪精卫[^31]拉去，使革命陷于失败。那时的革命统一战线没有中心支柱，没有坚强的革命的武装队伍，四面八方都造起反来，共产党只得孤军作战，无力抵制帝国主义和中国反革命的各个击破的策略。那时虽然有贺龙、叶挺一支军队，但还不是政治上坚强的军队，党又不善于领导它，终归失败了。这是缺乏革命中心力量招致革命失败的血的教训。在今天，这件事起了变化了，坚强的共产党和坚强的红军都已经有了，而且有了红军的根据地。共产党和红军不但在现在充当着抗日民族统一战线的发起人，而且在将来的抗日政府和抗日军队中必然要成为坚强的台柱子，使日本帝国主义者和蒋介石对于抗日民族统一战线所使用的拆台政策，不能达到最后的目的。没有疑义，威迫利诱、纵横捭阖的手段，日本帝国主义者和蒋介石是一定要多方使用的，我们是要十分留神的。
 
-当然，对于抗日民族统一战线的广泛的队伍，我们不能希望每部分都有如同共产党和红军一样程度的巩固。在他们的活动过程中，有些坏分子因为受了敌人的影响退出统一战线的事情，是会发生的。但是我们不怕这些人退出去。一些坏人受敌人的影响退出去，一些好人却会受我们的影响加进来。只要共产党和红军本身是存在的，发展的，那末，抗日民族统一战线必然也会是存在的，发展的。这就是共产党和红军在民族统一战线中的领导作用。共产党人现在已经不是小孩子了，他们能够善处自己，又能够善处同盟者。日本帝国主义者和蒋介石能够用纵横捭阖的手段来对付革命队伍，共产党也能够用纵横捭阖的手段对付反革命队伍。他们能够拉了我们队伍中的坏分子跑出去，我们当然也能够拉了他们队伍中的“坏分子”（对于我们是好分子）跑过来。假如我们能够从他们队伍中多拉一些人出来，那敌人的队伍就减少了，我们的队伍就扩大了。总之，现在是两个基本势力相斗争，一切中间势力，不附属于那一方面，就附属于这一方面，这是一定的道理。而日本帝国主义者和蒋介石灭亡中国和出卖中国的政策，不能不驱使很多的力量跑到我们方面来，或者径直加入共产党和红军的队伍，或者同共产党和红军结成联合战线。只要我们的策略不是关门主义，这个目的是能够达到的。
+当然，对于抗日民族统一战线的广泛的队伍，我们不能希望每部分都有如同共产党和红军一样程度的巩固。在他们的活动过程中，有些坏分子因为受了敌人的影响退出统一战线的事情，是会发生的。但是我们不怕这些人退出去。一些坏人受敌人的影响退出去，一些好人却会受我们的影响加进来。只要共产党和红军本身是存在的，发展的，那末，抗日民族统一战线必然也会是存在的，发展的。这就是共产党和红军在民族统一战线中的领导作用。共产党人现在已经不是小孩子了，他们能够善处自己，又能够善处同盟者。日本帝国主义者和蒋介石能够用纵横捭阖的手段来对付革命队伍，共产党也能够用纵横捭阖的手段对付反革命队伍。他们能够拉了我们队伍中的坏分子跑出去，我们当然也能够拉了他们队伍中的“坏分子”（对于我们是好分子）跑过来。假如我们能够从他们队伍中多拉一些人出来，那敌人的队伍就减少了，我们的队伍就扩大了。**总之，现在是两个基本势力相斗争，一切中间势力，不附属于那一方面，就附属于这一方面，这是一定的道理。**而日本帝国主义者和蒋介石灭亡中国和出卖中国的政策，不能不驱使很多的力量跑到我们方面来，或者径直加入共产党和红军的队伍，或者同共产党和红军结成联合战线。只要我们的策略不是关门主义，这个目的是能够达到的。
 
 为什么要把工农共和国改变为人民共和国呢？
 
 我们的政府不但是代表工农的，而且是代表民族的。这个意义，是在工农民主共和国的口号里原来就包括了的，因为工人、农民占了全民族人口的百分之八十至九十。我们党的第六次全国代表大会所规定的十大政纲[^32]，不但代表了工农的利益，同时也代表了民族的利益。但是现在的情况，使得我们要把这个口号改变一下，改变为人民共和国。这是因为日本侵略的情况变动了中国的阶级关系，不但小资产阶级，而且民族资产阶级，有了参加抗日斗争的可能性。
 
-那是没有问题的，人民共和国不代表敌对阶级的利益。相反，人民共和国同帝国主义的走狗豪绅买办阶级是处在正相反对的地位，它不把那些成分放在所谓人民之列。这和蒋介石的“中华民国国民政府”，仅仅代表最大的富翁，并不代表老百姓，并不把老百姓放在所谓“国民”之列，是一样的。中国百分之八十至九十的人口是工人和农民，所以人民共和国应当首先代表工人和农民的利益。但是人民共和国去掉帝国主义的压迫，使中国自由独立，去掉地主的压迫，使中国离开半封建制度，这些事情就不但使工农得了利益，也使其他人民得了利益。总括工农及其他人民的全部利益，就构成了中华民族的利益。买办阶级和地主阶级虽然也住在中国的土地上，可是他们是不顾民族利益的，他们的利益是同多数人的利益相冲突的。我们仅仅离开他们这些少数人，仅仅同他们这些少数人相冲突，所以我们有权利称我们自己是代表全民族的。
+那是没有问题的，人民共和国不代表敌对阶级的利益。**相反，人民共和国同帝国主义的走狗豪绅买办阶级是处在正相反对的地位，它不把那些成分放在所谓人民之列。这和蒋介石的“中华民国国民政府”，仅仅代表最大的富翁，并不代表老百姓，并不把老百姓放在所谓“国民”之列，是一样的。**中国百分之八十至九十的人口是工人和农民，所以人民共和国应当首先代表工人和农民的利益。但是人民共和国去掉帝国主义的压迫，使中国自由独立，去掉地主的压迫，使中国离开半封建制度，这些事情就不但使工农得了利益，也使其他人民得了利益。**总括工农及其他人民的全部利益，就构成了中华民族的利益。买办阶级和地主阶级虽然也住在中国的土地上，可是他们是不顾民族利益的，他们的利益是同多数人的利益相冲突的。我们仅仅离开他们这些少数人，仅仅同他们这些少数人相冲突，所以我们有权利称我们自己是代表全民族的。**
 
-工人阶级的利益同民族资产阶级的利益也是有冲突的。要开展民族革命，对于民族革命的先锋队不给以政治上、经济上的权利，不使工人阶级能够拿出力量来对付帝国主义及其走狗卖国贼，是不能成功的。但是民族资产阶级如果参加反对帝国主义的统一战线，那末，工人阶级和民族资产阶级就有了共同的利害关系。人民共和国在资产阶级民主革命的时代并不废除非帝国主义的、非封建主义的私有财产，并不没收民族资产阶级的工商业，而且还鼓励这些工商业的发展。任何民族资本家，只要他不赞助帝国主义和中国卖国贼，我们就要保护他。在民主革命阶段，劳资间的斗争是有限度的。人民共和国的劳动法保护工人的利益，却并不反对民族资本家发财，并不反对民族工商业的发展，因为这种发展不利于帝国主义，而有利于中国人民。由此可知，人民共和国是代表反帝国主义反封建势力的各阶层人民的利益的。人民共和国的政府以工农为主体，同时容纳其他反帝国主义反封建势力的阶级。
+工人阶级的利益同民族资产阶级的利益也是有冲突的。要开展民族革命，对于民族革命的先锋队不给以政治上、经济上的权利，不使工人阶级能够拿出力量来对付帝国主义及其走狗卖国贼，是不能成功的。**但是民族资产阶级如果参加反对帝国主义的统一战线，那末，工人阶级和民族资产阶级就有了共同的利害关系。人民共和国在资产阶级民主革命的时代并不废除非帝国主义的、非封建主义的私有财产，并不没收民族资产阶级的工商业，而且还鼓励这些工商业的发展。任何民族资本家，只要他不赞助帝国主义和中国卖国贼，我们就要保护他。在民主革命阶段，劳资间的斗争是有限度的。人民共和国的劳动法保护工人的利益，却并不反对民族资本家发财，并不反对民族工商业的发展，因为这种发展不利于帝国主义，而有利于中国人民。由此可知，人民共和国是代表反帝国主义反封建势力的各阶层人民的利益的。人民共和国的政府以工农为主体，同时容纳其他反帝国主义反封建势力的阶级。**
 
-让这些人参加人民共和国的政府，不危险吗？不危险的。工人农民是这个共和国的基本群众。给城市小资产阶级、知识分子及其他拥护反帝反封建纲领的分子以在人民共和国政府中说话做事的权利，给他们以选举权和被选举权，不能违背工农基本群众的利益。我们纲领的重要部分应当保护工农基本群众的利益。工农基本群众的代表在人民共和国政府中占了大多数，共产党在这个政府中的领导和活动，都保证了他们进来不危险。中国革命的现时阶段依然是资产阶级民主主义性质的革命，不是无产阶级社会主义性质的革命，这是十分明显的。只有反革命的托洛茨基分子[^33]，才瞎说中国已经完成了资产阶级民主革命，再要革命就只是社会主义的革命了。一九二四年至一九二七年的革命是资产阶级民主主义性质的革命，这次革命没有完成，而是失败了。一九二七年至现在，我们领导的土地革命，也是资产阶级民主主义性质的革命，因为革命的任务是反帝反封建，并不是反资本主义。今后一个相当长时期中的革命还是如此。
+**让这些人参加人民共和国的政府，不危险吗？不危险的。工人农民是这个共和国的基本群众。给城市小资产阶级、知识分子及其他拥护反帝反封建纲领的分子以在人民共和国政府中说话做事的权利，给他们以选举权和被选举权，不能违背工农基本群众的利益。我们纲领的重要部分应当保护工农基本群众的利益。工农基本群众的代表在人民共和国政府中占了大多数，共产党在这个政府中的领导和活动，都保证了他们进来不危险。**中国革命的现时阶段依然是资产阶级民主主义性质的革命，不是无产阶级社会主义性质的革命，这是十分明显的。只有反革命的托洛茨基分子[^33]，才瞎说中国已经完成了资产阶级民主革命，再要革命就只是社会主义的革命了。**一九二四年至一九二七年的革命是资产阶级民主主义性质的革命，这次革命没有完成，而是失败了。一九二七年至现在，我们领导的土地革命，也是资产阶级民主主义性质的革命，因为革命的任务是反帝反封建，并不是反资本主义。今后一个相当长时期中的革命还是如此。**
 
 革命的动力，基本上依然是工人、农民和城市小资产阶级，现在则可能增加一个民族资产阶级。
 
-革命的转变，那是将来的事。在将来，民主主义的革命必然要转变为社会主义的革命。何时转变，应以是否具备了转变的条件为标准，时间会要相当地长。不到具备了政治上经济上一切应有的条件之时，不到转变对于全国最大多数人民有利而不是不利之时，不应当轻易谈转变。怀疑这一点而希望在很短的时间内去转变，如像过去某些同志所谓民主革命在重要省份开始胜利之日，就是革命开始转变之时，是不对的。这是因为他们看不见中国是一个何等样的政治经济情况的国家，他们不知道中国在政治上经济上完成民主革命，较之俄国要困难得多，需要更多的时间和努力。
+**革命的转变，那是将来的事。在将来，民主主义的革命必然要转变为社会主义的革命。何时转变，应以是否具备了转变的条件为标准，时间会要相当地长。不到具备了政治上经济上一切应有的条件之时，不到转变对于全国最大多数人民有利而不是不利之时，不应当轻易谈转变。**怀疑这一点而希望在很短的时间内去转变，如像过去某些同志所谓民主革命在重要省份开始胜利之日，就是革命开始转变之时，是不对的。这是因为他们看不见中国是一个何等样的政治经济情况的国家，他们不知道中国在政治上经济上完成民主革命，较之俄国要困难得多，需要更多的时间和努力。
 
 ## 国际援助
 
 最后，需要讲一点中国革命和世界革命的相互关系。
 
-自从帝国主义这个怪物出世之后，世界的事情就联成一气了，要想割开也不可能了。我们中华民族有同自己的敌人血战到底的气概，有在自力更生的基础上光复旧物的决心，有自立于世界民族之林的能力。但是这不是说我们可以不需要国际援助；不，国际援助对于现代一切国家一切民族的革命斗争都是必要的。古人说：“春秋无义战。”[^34]于今帝国主义则更加无义战，只有被压迫民族和被压迫阶级有义战。全世界一切由人民起来反对压迫者的战争，都是义战。俄国的二月革命和十月革命是义战。第一次世界大战后欧洲各国人民的革命是义战。中国的反鸦片战争[^35]，太平天国战争[^36]，义和团战争[^37]，辛亥革命战争[^38]，一九二六年至一九二七年的北伐战争，一九二七年至现在的土地革命战争，今天的抗日和讨伐卖国贼的战争，都是义战。在目前的全中国抗日高潮和全世界反法西斯高潮中，义战将遍于全中国，全世界。凡义战都是互相援助的，凡非义战都是应该使之转变成为义战的，这就是列宁主义的路线[^39]。我们的抗日战争需要国际人民的援助，首先是苏联人民的援助，他们也一定会援助我们，因为我们和他们是休戚相关的。过去一个时期内，中国革命力量和国际革命力量被蒋介石隔断了，就这点上说，我们是孤立的。现在这种形势已经改变了，变得对我们有利了。今后这种形势还会继续向有利的方面改变。我们不会再是孤立的了。这是中国抗日战争和中国革命取得胜利的一个必要的条件。
+自从帝国主义这个怪物出世之后，世界的事情就联成一气了，要想割开也不可能了。我们中华民族有同自己的敌人血战到底的气概，有在自力更生的基础上光复旧物的决心，有自立于世界民族之林的能力。但是这不是说我们可以不需要国际援助；不，国际援助对于现代一切国家一切民族的革命斗争都是必要的。古人说：“春秋无义战。”[^34]**于今帝国主义则更加无义战，只有被压迫民族和被压迫阶级有义战。全世界一切由人民起来反对压迫者的战争，都是义战。**俄国的二月革命和十月革命是义战。第一次世界大战后欧洲各国人民的革命是义战。中国的反鸦片战争[^35]，太平天国战争[^36]，义和团战争[^37]，辛亥革命战争[^38]，一九二六年至一九二七年的北伐战争，一九二七年至现在的土地革命战争，今天的抗日和讨伐卖国贼的战争，都是义战。在目前的全中国抗日高潮和全世界反法西斯高潮中，义战将遍于全中国，全世界。凡义战都是互相援助的，凡非义战都是应该使之转变成为义战的，这就是列宁主义的路线[^39]。我们的抗日战争需要国际人民的援助，首先是苏联人民的援助，他们也一定会援助我们，因为我们和他们是休戚相关的。过去一个时期内，中国革命力量和国际革命力量被蒋介石隔断了，就这点上说，我们是孤立的。现在这种形势已经改变了，变得对我们有利了。今后这种形势还会继续向有利的方面改变。我们不会再是孤立的了。这是中国抗日战争和中国革命取得胜利的一个必要的条件。
 
 ## 注释
 
@@ -126,11 +126,11 @@
 [^3]:一九二一年十一月，由美国政府发起，美、英、法、意、日、葡、比、荷和中国九国代表在华盛顿开会。这是一个美国与日本争夺远东霸权的会议。次年二月六日，根据美国提出的在华“各国商务、实业机会均等”和“中国门户开放”的侵略原则，缔结了九国公约。九国公约的作用，是以几个帝国主义国家共同控制中国来代替日本独占中国的局面。由于美国的经济实力超过其他国家，这个公约实际上为美帝国主义用“机会均等”的名义压倒对手，进而独占中国准备了条件。
 [^4]:一九三一年九月十八日，日本驻在中国东北境内的所谓“关东军”进攻沈阳，中国人民习惯上称日本这次侵略行动为九一八事变。事变发生后，驻沈阳及东北各地的中国军队执行蒋介石的不准抵抗的命令，使日军得以迅速地占领辽宁、吉林、黑龙江三省。
 [^5]:东北四省指当时中国东北部的辽宁、吉林、黑龙江、热河四省（热河省于一九五五年撤销，原辖区分别划归河北、辽宁两省和内蒙古自治区）。一九三一年九一八事变后，日本侵略军先占领了辽宁、吉林、黑龙江三省，一九三三年又侵占热河省。
-[^6]:一九三五年十一月二十五日，日本帝国主义嗾使国民党河北省政府滦榆、蓟密两区行政督察专员殷汝耕在通县成立傀儡政权，名为“冀东防共自治委员会”（一个月后改称“冀东防共自治政府”），使当时河北省东部二十二个县脱离了中国政府的管辖。这就是冀东事变。
+[^6]:一九三五年十一月二十五日，日本帝国主义嗾(**sǒu，唆使**)使国民党河北省政府滦榆、蓟密两区行政督察专员殷汝耕在通县成立傀儡政权，名为“冀东防共自治委员会”（一个月后改称“冀东防共自治政府”），使当时河北省东部二十二个县脱离了中国政府的管辖。这就是冀东事变。
 [^7]:外交谈判指当时国民党政府与日本政府所进行的关于所谓“广田三原则”的谈判。“广田三原则”是日本外相广田弘毅在一九三五年十月对中国驻日大使提出的所谓“对华三原则”，其内容是：一、中国取缔一切抗日运动，放弃依赖英美的政策；二、中国承认伪“满洲国”，树立中日“满”经济合作；三、中日共同防共。十一月至十二月间，中日双方就“广田三原则”多次进行谈判。一九三六年一月，国民党政府外交部发表声明，说“国民政府既非全部承认三原则，亦非全然不承认”。
 [^8]:一九三五年，全国人民的反日爱国运动开始新的高涨。北平学生在中国共产党领导下，首先在十二月九日举行大规模的爱国示威游行，提出“反对华北防共自治运动”、“停止内战，一致对外”、“打倒日本帝国主义”等口号。游行的学生遭到了国民党政府的镇压。第二天，北平各校学生宣布总罢课。十六日，学生和市民一万余人，再度举行示威游行。全国人民纷纷响应，开始了中国人民抗日运动的新高潮。这就是著名的一二九运动。全国各阶级的关系由此很明显地表现出新的变化，中国共产党提出的抗日民族统一战线政策，得到一切爱国人们的公开拥护。
 [^9]:毛泽东做这个报告的时候，蒋介石继续实行对日妥协、对内屠杀和镇压的反动政策，如出卖华北主权，镇压人民的抗日运动，围攻要求抗日的红军等等。因此，中国共产党必须尽量揭穿蒋介石这个卖国贼的真面目；也因此，党在这时提出的抗日民族统一战线还没有包括蒋介石在内。但是毛泽东在这个报告中，已经说到了日本和英美帝国主义的矛盾可能引起中国地主买办阶级营垒中的分化，党应当利用这种矛盾，争取一切可以争取的力量来反对当前的主要敌人日本帝国主义。随着日本帝国主义对中国侵略的加紧，英美同日本的矛盾更加表面化，中国共产党认为和英美帝国主义利益密切联系的蒋介石集团可能改变对日本的态度，因而采取逼迫蒋介石转向抗日的政策。一九三六年五月，红军由山西回师陕北，即直接向南京国民党政府要求停止内战一致抗日。同年八月，中国共产党中央又致国民党中央一封信，要求组织两党共同抗日的统一战线，并派遣代表进行谈判。但蒋介石仍然拒绝共产党的主张。直到一九三六年十二月蒋介石在西安被国民党内主张联共抗日的军人所扣留的时候，他才被迫接受共产党关于停止内战准备抗日的要求。
-[^10]:蔡廷锴曾任国民党第十九路军总指挥兼第十九军军长，与蒋光鼐（前任总指挥）同为该路军的负责人。十九路军原来在江西与红军作战，九一八事变后调往上海。那时上海和全国人民抗日的高潮，给了十九路军以很大影响。一九三二年一月二十八日夜，日本海军陆战队向上海攻击，十九路军和上海人民一起进行了抗战。但是这个战争后来因为国民党反动派的破坏而失败。随后，十九路军又被蒋介石调到福建去同红军作战。这时十九路军的领导人逐渐觉悟到同红军作战是没有出路的。一九三三年十月，他们同与十九路军有历史关系的陈铭枢一起，代表十九路军同红军签订了抗日反蒋初步协定。十一月，他们又拥戴李济深为领袖，公开宣布与蒋介石破裂，在福建成立“中华共和国人民革命政府”。不久，十九路军和福建人民政府在蒋介石的兵力压迫下失败，此后蔡廷锴等人继续采取与共产党合作的立场。
+[^10]:蔡廷锴曾任国民党第十九路军总指挥兼第十九军军长，与蒋光鼐(**nài**)（前任总指挥）同为该路军的负责人。十九路军原来在江西与红军作战，九一八事变后调往上海。那时上海和全国人民抗日的高潮，给了十九路军以很大影响。一九三二年一月二十八日夜，日本海军陆战队向上海攻击，十九路军和上海人民一起进行了抗战。但是这个战争后来因为国民党反动派的破坏而失败。随后，十九路军又被蒋介石调到福建去同红军作战。这时十九路军的领导人逐渐觉悟到同红军作战是没有出路的。一九三三年十月，他们同与十九路军有历史关系的陈铭枢一起，代表十九路军同红军签订了抗日反蒋初步协定。十一月，他们又拥戴李济深为领袖，公开宣布与蒋介石破裂，在福建成立“中华共和国人民革命政府”。不久，十九路军和福建人民政府在蒋介石的兵力压迫下失败，此后蔡廷锴等人继续采取与共产党合作的立场。
 [^11]:唐生智（一八八九——一九七○），湖南东安人。早年曾参加辛亥革命和反袁护国战争。一九二三年在湘军中任师长兼湘南督办。一九二六年春利用并参加湖南人民反对军阀吴佩孚、赵恒惕的运动，任湖南省代省长。表示拥护孙中山联俄、联共、扶助农工的三大政策，愿意参加北伐。同年六月被广州国民政府任命为国民革命军第八军军长兼北伐军前敌总指挥和湖南省政府主席。北伐战争中，一度采取同共产党合作的态度，在一定程度上允许开展工农运动。一九二七年三月当选为武汉国民政府委员，四月任第一集团军第四方面军总指挥。不久，改任第四集团军总司令。四一二反革命政变后，曾积极主张东征讨蒋，对两湖右派势力发动的反动事件亦表示反对。七月十五日，汪精卫发动反革命政变，他也背弃了“拥护三大政策”的诺言。晚年支持和参加革命，中华人民共和国成立后，曾任全国人民代表大会常务委员会委员等职。
 [^12]:冯玉祥（一八八二——一九四八），安徽巢县人。曾任北洋陆军第十一师师长，陕西、河南的督军及陆军检阅使等职。以后曾赴苏联考察。一九二六年九月，当北伐的国民革命军攻抵武汉时，冯玉祥就任国民军联军总司令，率领他的军队在绥远省（现属内蒙古自治区）宣布脱离北洋军阀的系统而参加革命。一九二七年五月就任国民革命军第二集团军总司令，率部由陕西出发，和北伐军会同进攻河南省。随后，他一度附和蒋介石、汪精卫反对共产党的活动，但同蒋介石集团间始终存在着利害冲突。九一八事变后，他赞成抗日，在一九三三年五月间，与共产党合作，在张家口组织民众抗日同盟军，抵抗日本帝国主义的侵略。由于蒋介石势力和日本侵略军的双重压迫，这次抗日起义于十月间失败。冯玉祥在晚年继续采取与共产党合作的立场。
 [^13]:察哈尔，原来是一个省，一九五二年撤销，原辖地区划归河北、山西两省。
@@ -143,7 +143,7 @@
 [^20]:任弼时（一九○四——一九五○），湖南湘阴人。一九二二年加入中国共产党。一九三三年五月，任湘赣省委书记兼军区政治委员。一九三四年七月，任中央代表、红军第六军团军政委员会主席。同年十月，红军第六军团和第二军团会合，任第二军团政治委员，随后创建了湘鄂川黔边区，任省委书记兼军区政治委员。一九三六年七月，第二、六军团组成第二方面军，任政治委员。抗日战争初期任八路军总政治部主任。他在中国共产党第五、六、七次全国代表大会上均被选为中央委员，一九二七年中共中央召开的八七会议上被选为临时中央政治局委员，一九三一年中共六届四中全会上被选为中央政治局委员，一九四○年参加中共中央书记处工作，一九四五年中共七届一中全会上被选为中央政治局委员和中央书记处书记。一九五○年十月二十七日逝世于北京。
 [^21]:中国工农红军第六军团原驻湘赣边区根据地，一九三四年八月奉中共中央的命令在第六军团军政委员会主席任弼时等率领下，誓师突围转移。同年十月，在贵州东部与贺龙率领的红军第三军（后改称第二军团）会合，十一月成立了湘鄂川黔边区临时省委和军区，后开辟了湘鄂川黔革命根据地。
 [^22]:一九三四年十月，中国工农红军第一、三、五、八、九军团（即中央红军，一九三五年六月与红四方面军会合时，恢复第一方面军的番号），中央和军委机关、直属部队编成的两个纵队，从江西瑞金等地出发，开始战略性的大转移。红军经过福建、江西、广东、湖南、广西、贵州、四川、云南、西康（现在分属四川省和西藏自治区）、甘肃、陕西等十一个省，走过终年积雪的高山，越过人迹罕至的沼泽草地，历尽艰苦，击溃敌人的多次围追堵截，长征两万余里，终于在一九三五年十月胜利地到达陕西北部的革命根据地。
-[^23]:川陕边区的红军即中国工农红军第四方面军。一九三五年三月，第四方面军发起强渡嘉陵江战役后，离开川陕边区根据地，五月开始向四川、西康（现在分属四川省和西藏自治区）两省的边境转移。同年六月，在四川西部的懋功（今小金）地区与红军第一方面军会合。八月，一、四方面军在毛儿盖、卓克基地区组织右、左两路军北上。九月，曾经长期领导第四方面军的张国焘违抗中共中央的北上命令，擅自率领左路军全部和右路军的一部南下，进行分裂党和红军的活动。一九三六年六七月间，由湘鄂川黔边区突围，经湖南、贵州、云南到达西康的红军第二、第六军团，在甘孜等地与第四方面军会合。会合以后，第二、第六军团正式组成红军第二方面军。这时，张国焘被迫率第四方面军与第二方面军一起北上转移。同年十月，第四方面军和第二方面军先后到达甘肃会宁、将台堡（今属宁夏回族自治区隆德县）地区，与第一方面军胜利会师。
+[^23]:川陕边区的红军即中国工农红军第四方面军。一九三五年三月，第四方面军发起强渡嘉陵江战役后，离开川陕边区根据地，五月开始向四川、西康（现在分属四川省和西藏自治区）两省的边境转移。同年六月，在四川西部的懋(**mào**)功（今小金）地区与红军第一方面军会合。八月，一、四方面军在毛儿盖、卓克基地区组织右、左两路军北上。九月，曾经长期领导第四方面军的张国焘违抗中共中央的北上命令，擅自率领左路军全部和右路军的一部南下，进行分裂党和红军的活动。一九三六年六七月间，由湘鄂川黔边区突围，经湖南、贵州、云南到达西康的红军第二、第六军团，在甘孜等地与第四方面军会合。会合以后，第二、第六军团正式组成红军第二方面军。这时，张国焘被迫率第四方面军与第二方面军一起北上转移。同年十月，第四方面军和第二方面军先后到达甘肃会宁、将台堡（今属宁夏回族自治区隆德县）地区，与第一方面军胜利会师。
 [^24]:张国焘（一八九七——一九七九），江西萍乡人。一九二一年参加中国共产党第一次全国代表大会。曾被选为中共中央委员、政治局委员、政治局常委。一九三一年任中共鄂豫皖中央分局书记、中华苏维埃共和国临时中央政府副主席等职。一九三五年六月红军第一、第四方面军在四川懋功（今小金）地区会师后任红军总政治委员。他反对中央关于红军北上的决定，进行分裂党和红军的活动，另立中央。一九三六年六月被迫取消第二中央，随后与红军第二、第四方面军一起北上，十二月到达陕北。一九三七年九月起，任陕甘宁边区政府副主席、代主席。一九三八年四月，他乘祭黄帝陵之机逃离陕甘宁边区，经西安到武汉，投入国民党特务集团，成为中国革命的叛徒，随即被开除出党。一九七九年死于加拿大。
 [^25]:中央红军指主要在江西福建区域发展起来而由中共中央直接领导的红军，即中国工农红军第一方面军。
 [^26]:一九三五年七月，国民党军开始对陕甘革命根据地发动第三次“围剿”。陕甘红军第二十六军先在东线击溃了敌人两个旅，将该线敌军主力赶到黄河以东。同年九月，原在鄂豫皖根据地的红军第二十五军，经陕南陇东到达陕北，与陕甘红军会合，成立红军第十五军团。十月，红十五军团在陕西甘泉县的劳山战役中消灭敌军一一○师大部，击毙其师长，不久又将敌军一○七师的四个营消灭于陕西富县榆林桥。于是敌人重新组织兵力，以董英斌（东北军五十七军军长）带五个师分两路进攻，东边一个师沿陕西洛川、富县大道北上，西边四个师由甘肃的庆阳、合水沿葫芦河向陕西富县方面前进。同年十月，红一方面军主力（此时称红军陕甘支队）到达陕北。十一月，陕甘支队恢复红一方面军番号，红十五军团列入红一方面军建制。接着红一方面军歼灭敌军一○九师于富县西面的直罗镇，又于追击中歼灭敌军一○六师一个团于张家湾地区。这样就彻底粉碎了敌人对陕甘根据地的第三次“围剿”。
