--- a/毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/中国革命战争的战略问题.md
+++ b/毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/中国革命战争的战略问题.md
@@ -458,7 +458,7 @@
 
 “打得赢就打，打不赢就走”，这就是今天我们的运动战的通俗的解释。天下也没有只承认打不承认走的军事家，不过不如我们走得这么厉害罢了。对于我们，走路的时间通常多于作战的时间，平均每月打得一个大仗就算是好的。一切的“走”都是为着“打”，我们的一切战略战役方针都是建立在“打”的一个基本点上。然而在我们面前有几种不好打的情形：第一是当面的敌人多了不好打；第二是当面敌人虽不多，但它和邻近敌人十分密接，也有时不好打；第三，一般地说来，凡不孤立而占有十分巩固阵地之敌都不好打；第四是打而不能解决战斗时，不好再继续打。以上这些时候，我们都是准备走的。这样的走是许可的，是必须的。因为我们承认必须的走，是在首先承认必须的打的条件之下。红军的运动战的基本特点，就在这里。
 
-基本的是运动战，并不是拒绝必要的和可能的阵地战。战略防御时，我们钳制方面某些支点的固守，战略进攻时遇着孤立无援之敌，都是应该承认用阵地战去对付的。采取这样的阵地战制胜敌人的经验，我们过去已经不少；很多的城市、堡垒、寨子，被我们打开，某种程度的敌人野战阵地被我们突破。以后还要增加这一方面的努力，补足我们这一方面的弱点。我们完全应该提倡那种在情况需要而且许可下的阵地攻击和阵地防御。我们所反对的，仅仅是在今天采取一般的阵地战，或者把阵地战和运动战平等看待，这些才是不能许可的
+基本的是运动战，并不是拒绝必要的和可能的阵地战。战略防御时，我们钳制方面某些支点的固守，战略进攻时遇着孤立无援之敌，都是应该承认用阵地战去对付的。采取这样的阵地战制胜敌人的经验，我们过去已经不少；很多的城市、堡垒、寨子，被我们打开，某种程度的敌人野战阵地被我们突破。以后还要增加这一方面的努力，补足我们这一方面的弱点。我们完全应该提倡那种在情况需要而且许可下的阵地攻击和阵地防御。我们所反对的，仅仅是在今天采取一般的阵地战，或者把阵地战和运动战平等看待，这些才是不能许可的。
 
 红军的游击性，没有固定作战线，根据地的流动性，根据地建设工作的流动性，十年战争中一点也没有变化吗？有变化的。从井冈山到江西第一次反“围剿”前为第一个阶段，这个阶段中游击性和流动性是很大的，红军还在幼年时代，根据地还是游击区。从第一次反“围剿”到第三次反“围剿”为第二个阶段，这个阶段中游击性和流动性就缩小了许多，方面军已经建立，包含几百万人口的根据地已经存在。从第三次反“围剿”后至第五次反“围剿”为第三个阶段，游击性流动性更缩小了。中央政府与革命军事委员会已经建立。长征是第四个阶段。由于错误地否认小游击和小流动，就来了一个大游击和大流动。目前是第五个阶段。由于没有战胜第五次“围剿”和大流动，红军和根据地都大大地缩小了，但又已经在西北立住了脚根，巩固了并发展了陕甘宁边区根据地。红军主力三个方面军已经统一指挥，此事为前此所未有。
 
