--- a/毛泽东选集-读书笔记.md
+++ b/毛泽东选集-读书笔记.md
@@ -289,3 +289,144 @@
 
 #### 中国革命战争的战略问题(1936.12)
 
+大家明白，不论做什么事，不懂得那件事的情形，它的性质，它和它以外的事情的关联，就不知道那件事的规律，就不知道如何去做，就不能做好那件事。
+
+战争——从有私有财产和有阶级以来就开始了的、用以解决阶级和阶级、民族和民族、国家和国家、政治集团和政治集团之间、在一定发展阶段上的矛盾的一种最高的斗争形式。
+
+中国革命战争——不论是国内战争或民族战争，是在中国的特殊环境之内进行的，比较一般的战争，一般的革命战争，又有它的特殊的情形和特殊的性质。因此，在一般战争和一般革命战争的规律之外，又有它的一些特殊的规律。如果不懂得这些，就不能在中国革命战争中打胜仗。
+
+他们不知道：我们固然应该尊重过去流血的经验，但是还应该尊重自己流血的经验。
+
+我们研究在各个不同历史阶段、各个不同性质、不同地域和民族的战争的指导规律，应该着眼其特点和着眼其发展，反对战争问题上的机械论。
+
+一切战争指导规律，依照历史的发展而发展，依照战争的发展而发展；一成不变的东西是没有的。
+
+战争——这个人类互相残杀的怪物，人类社会的发展终久要把它消灭的，而且就在不远的将来会要把它消灭的。但是消灭它的方法只有一个，就是用战争反对战争，用革命战争反对反革命战争，用民族革命战争反对民族反革命战争，用阶级革命战争反对阶级反革命战争。历史上的战争，只有正义的和非正义的两类。**我们是拥护正义战争反对非正义战争的。**一切反革命战争都是非正义的，一切革命战争都是正义的。
+
+人类社会进步到消灭了阶级，消灭了国家，到了那时，什么战争也没有了，反革命战争没有了，革命战争也没有了，非正义战争没有了，正义战争也没有了，这就是人类的永久和平的时代。**我们研究革命战争的规律，出发于我们要求消灭一切战争的志愿，这是区别我们共产党人和一切剥削阶级的界线。**
+
+研究带全局性的战争指导规律，是战略学的任务。研究带局部性的战争指导规律，是战役学和战术学的任务。
+
+要求战役指挥员和战术指挥员了解某种程度的战略上的规律，何以成为必要呢？因为懂得了全局性的东西，就更会使用局部性的东西，因为局部性的东西是隶属于全局性的东西的。
+
+然而全局性的东西，不能脱离局部而独立，全局是由它的一切局部构成的。有的时候，有些局部破坏了或失败了，全局可以不起重大的影响，就是因为这些局部不是对于全局有决定意义的东西。战争中有些战术上或战役上的失败或不成功，常常不至于引起战争全局的变坏，就是因为这些失败不是有决定意义的东西。
+
+指挥全局的人，最要紧的，是把自己的注意力摆在照顾战争的全局上面。主要地是依据情况，照顾部队和兵团的组成问题，照顾两个战役之间的关系问题，照顾各个作战阶段之间的关系问题，照顾我方全部活动和敌方全部活动之间的关系问题，这些都是最吃力的地方，如果丢了这个去忙一些次要的问题，那就难免要吃亏了。
+
+说重要，说有决定意义，不能按照一般的或抽象的情况去规定，必须按照具体的情况去规定。
+
+这就是说，能够把战争或作战的一切重要的问题，都提到较高的原则性上去解决。达到这个目的，就是研究战略问题的任务。
+
+学习不是容易的事情，使用更加不容易。
+
+什么方法呢？那就是熟识敌我双方各方面的情况，找出其行动的规律，并且应用这些规律于自己的行动。
+
+然而只要做到指挥大体上适合情况，即在有决定意义的部分适合情况，那就是胜利的基础了。
+
+指挥员的正确的部署来源于正确的决心，正确的决心来源于正确的判断，正确的判断来源于周到的和必要的侦察，和对于各种侦察材料的联贯起来的思索。指挥员使用一切可能的和必要的侦察手段，将侦察得来的敌方情况的各种材料加以去粗取精、去伪存真、由此及彼、由表及里的思索，然后将自己方面的情况加上去，研究双方的对比和相互的关系，因而构成判断，定下决心，作出计划，——这是军事家在作出每一个战略、战役或战斗的计划之前的一个整个的认识情况的过程。
+
+认识情况的过程，不但存在于军事计划建立之前，而且存在于军事计划建立之后。当执行某一计划时，从开始执行起，到战局终结止，这是又一个认识情况的过程，即实行的过程。此时，第一个过程中的东西是否符合于实况，需要重新加以检查。如果计划和情况不符合，或者不完全符合，就必须依照新的认识，构成新的判断，定下新的决心，把已定计划加以改变，使之适合于新的情况。部分地改变的事差不多每一作战都是有的，全部地改变的事也是间或有的。
+
+一切带原则性的军事规律，或军事理论，都是前人或今人做的关于过去战争经验的总结。这些过去的战争所留给我们的血的教训，应该着重地学习它。这是一件事。然而还有一件事，即是从自己经验中考证这些结论，吸收那些用得着的东西，拒绝那些用不着的东西，增加那些自己所特有的东西。这后一件事是十分重要的，不这样做，我们就不能指导战争。
+
+**革命战争是民众的事，常常不是先学好了再干，而是干起来再学习，干就是学习。**从“老百姓”到军人之间有一个距离，但不是万里长城，而是可以迅速地消灭的，干革命，干战争，就是消灭这个距离的方法。说学习和使用不容易，是说学得彻底，用得纯熟不容易。说老百姓很快可以变成军人，是说此门并不难入。
+
+军事的规律，和其他事物的规律一样，是客观实际[^1-2-11-1]在我们头脑中的反映，除了我们的头脑以外，一切都是客观实际的东西。
+
+中国古代大军事学家孙武子[^1-2-11-2]书上“知彼知己，百战不殆”这句话，是包括学习和使用两个阶段而说的，包括从认识客观实际中的发展规律，并按照这些规律去决定自己行动克服当前敌人而说的；我们不要看轻这句话。
+
+**军事家不能超过物质条件许可的范围外企图战争的胜利，然而军事家可以而且必须在物质条件许可的范围内争取战争的胜利。**军事家活动的舞台建筑在客观物质条件的上面，然而军事家凭着这个舞台，却可以导演出许多有声有色威武雄壮的活剧来。因此，我们红军的指导者，在既定的客观物质基础即军事、政治、经济、自然诸条件之上，就必须发挥我们的威力，提挈全军，去打倒那些民族的和阶级的敌人，改变这个不好的世界。这里就用得着而且必须用我们的主观指导的能力。
+
+历史告诉我们，正确的政治的和军事的路线，不是自然地平安地产生和发展起来的，而是从斗争中产生和发展起来的。
+
+国民党是反对土地革命的，因此没有农民的援助。其军队虽多，却不能使兵士群众和许多小生产者出身的下级干部自觉地为国民党拚命，官兵之间在政治上是分歧的，这就减少了它的战斗力。
+
+很明显的，正确地规定战略方向，进攻时反对冒险主义，防御时反对保守主义，转移时反对逃跑主义；反对红军的游击主义，却又承认红军的游击性；反对战役的持久战和战略的速决战，承认战略的持久战和战役的速决战；反对固定的作战线和阵地战，承认非固定的作战线和运动战；反对击溃战，承认歼灭战；反对战略方向的两个拳头主义，承认一个拳头主义；反对大后方制度，承认小后方制度；反对绝对的集中指挥，承认相对的集中指挥；反对单纯军事观点和流寇主义[^1-2-11-14]，承认红军是中国革命的宣传者和组织者；反对土匪主义[^1-2-11-15]，承认严肃的政治纪律；反对军阀主义，承认有限制的民主生活和有威权的军事纪律；反对不正确的宗派主义的干部政策，承认正确的干部政策；反对孤立政策，承认争取一切可能的同盟者；最后，反对把红军停顿于旧阶段，争取红军发展到新阶段——所有这些原则问题，都要求正确的解决。我们现在要讲的战略问题，就是要就中国革命战争的十年血战史的经验，好好地说明这些问题。
+
+所谓胜利，主要地是说反“围剿”的胜利，这就是战略和战役的胜利。
+
+中国国内战争和任何古今中外的战争一样，基本的战斗形式只有攻防两种。
+
+革命和革命战争是进攻的，但是也有防御和后退——这种说法才是完全正确的。
+
+消极防御实际上是假防御，只有积极防御才是真防御，才是为了反攻和进攻的防御。
+
+德日帝国主义的军事家们指出防御的一个重要的弱点是不能振奋人心，反而使人心动摇。这是说的阶级矛盾剧烈，而战争的利益仅仅属于反动的统治阶层乃至反动的当权政派的那种国家。我们的情况不同。在保卫革命根据地和保卫中国的口号下，我们能够团结最大多数人民万众一心地作战，因为我们是被压迫者和被侵略者。
+
+一切正义战争的防御战，不但有麻痹政治上异己分子的作用，而且可以动员落后的人民群众加入到战争中来。
+
+马克思说的武装起义之后一刻也不应该停止进攻[^1-2-11-26]，这是说乘敌不备而突然起义的群众，应该不让反动的统治者有保守政权或恢复政权的机会，趁此一瞬间把国内反动的统治势力打个措手不及，而不要满足于已得的胜利，轻视敌人，放松对于敌人的进攻，或者畏缩不前，坐失消灭敌人的时机，招致革命的失败。这是正确的。然而不是说，敌我双方已在军事对抗中，而且敌人是优势，当受敌人压迫时，革命党人也不应该采取防御手段。如果这样想，那就是第一号的傻子。
+
+在军事上说来，我们的战争是防御和进攻的交替的应用。
+
+对于敌人的一次有计划的“围剿”，如果我们没有必要的和充分的准备，必然陷入被动地位。临时仓卒应战，胜利的把握是没有的。因此，在和敌人准备“围剿”同时，进行我们的反“围剿”的准备，实有完全的必要。
+
+战略退却，是劣势军队处在优势军队进攻面前，因为顾到不能迅速地击破其进攻，为了保存军力，待机破敌，而采取的一个有计划的战略步骤。
+
+革命运动所造成的丧失是破坏，而其取得是进步的建设。
+
+惧怕一时的不良的政治影响，就要以长期的不良影响做代价。
+
+战略退却的全部的作用，在于转入反攻，战略退却仅是战略防御的第一阶段。全战略的决定关键，在于随之而来的反攻阶段之能不能取胜。
+
+只有决战，才能解决两军之间谁胜谁败的问题。这就是战略反攻阶段的全任务。反攻是一个长过程，是防御战的最精彩最活跃的阶段，也就是防御战的最后阶段。所谓积极防御，主要地就是指的这种带决战性的战略的反攻。
+
+必须敌情、地形、人民等条件，都利于我，不利于敌，确有把握而后动手。否则宁可退让，持重待机。机会总是有的，不可率尔应战。
+
+没有好的全战役计划，绝不能有真正好的第一仗。
+
+没有全局在胸，是不会真的投下一着好棋子的。
+
+战略指导者当其处在一个战略阶段时，应该计算到往后多数阶段，至少也应计算到下一个阶段。
+
+那种走一步看一步的指导方式，对于政治是不利的，对于战争也是不利的。走一步应该看那一步的具体变化，据此以修改或发展自己战略战役计划，不这样做，就会弄出冒险直冲的错误。
+
+**集中兵力之所以必要，是为了改变敌我的形势。**
+
+同时，将自己战略上的弱者地位，使之改变为战役上或战斗上的强者的地位。这即是所谓内线作战中的外线作战，“围剿”中的围剿，封锁中的封锁，防御中的进攻，劣势中的优势，弱者中的强者，不利中的有利，被动中的主动。
+
+照我的意见，在有强大敌军存在的条件下，无论自己有多少军队，在一个时间内，主要的使用方向只应有一个，不应有两个。我不反对作战方向有两个或两个以上，但主要的方向，在同一个时间内，只应有一个。
+
+**我们的战略是“以一当十”，我们的战术是“以十当一”，这是我们制胜敌人的根本法则之一。**
+
+集中主力于一个方向，其他方向剩下了钳制力量，自然不免使土地受到损失。然而这是暂时的局部的损失，其代价是突击方向取得了胜利。突击方向胜利了，钳制方向的损失就可以恢复了。
+
+由于看不见根据地人民的力量，常常发生惧怕红军远离根据地的错误心理。
+
+我们主张的集中兵力，并不包括放弃人民的游击战争在内。立三路线主张废弃小的游击战争，“一枝枪也集中到红军中去”，早已证明是不对的了。人民的游击战争，从整个革命战争的观点看来，和主力红军是互为左右手，只有主力红军而无人民的游击战争，就像一个独臂将军。根据地的人民条件，具体地说来，特别是对于作战说来，就是有武装起来了的人民。敌人视为畏途，主要地也在这一点。
+
+置红军的支队于次要的作战方向也是必要的，不是一切都要集中。我们主张的集中兵力，是建立在保证对于战场作战的绝对或相对优势的原则上。对于强敌，或关系紧要的战场作战，应以绝对优势的兵力临之，例如一九三○年十二月三十日第一次反“围剿”的第一仗，集中四万人打张辉瓒的九千人。对于弱敌或不关紧要的战场作战，临之以相对优势的兵力也就够了，例如一九三一年五月三十一日第二次反“围剿”的最后一战，向建宁打七千人的刘和鼎师，红军只用了一万多人。
+
+也不是说每次都要优势兵力。在某种情况下，也可以用相对劣势或绝对劣势兵力出现于战场。相对劣势，例如某一区域仅仅有一支不大的红军（不是有兵而不集中），为着打破某一优势敌人的进攻，在人民、地形或天候等条件能给我们以大的援助时，以游击队或小支队钳制其正面及一翼，红军集中全力突然袭击其另一翼的一部分，当然也是必要的，并且是可以胜利的。当我袭击其一翼的一部分时，兵力的对比仍适用以优势对劣势、以多胜少的原则。绝对劣势，例如游击队袭击白军大队伍，仅仅是袭击其一小部分，同样适用上述的原则。
+
+我们是以少胜多的——我们向整个中国统治者这样说。我们又是以多胜少的——我们向战场上作战的各个局部的敌人这样说。这件事情已经不是什么秘密，敌人一般地都摸熟我们的脾气了。然而敌人不能取消我们的胜利，也不能避免他们的损失，因为何时何地我们这样做，他们不晓得。这一点我们是保守秘密的。红军的作战一般是奇袭。
+
+由于敌人强大和红军技术贫弱所发生的红军作战的显著特点之一，就是没有固定的作战线。
+
+战争和领土的流动性，影响到根据地各种建设工作也发生流动性。若干年月的建设计划是不能设想的。计划改变的频繁，是我们家常便饭的事情。
+
+游击性在将来一定是可羞的和必须抛弃的东西，但在今天却是宝贵的和必须坚持的东西。
+
+**“打得赢就打，打不赢就走”，这就是今天我们的运动战的通俗的解释。**
+
+一切的“走”都是为着“打”，我们的一切战略战役方针都是建立在“打”的一个基本点上。
+
+因为我们承认必须的走，是在首先承认必须的打的条件之下。
+
+**基本的是运动战，并不是拒绝必要的和可能的阵地战。**战略防御时，我们钳制方面某些支点的固守，战略进攻时遇着孤立无援之敌，都是应该承认用阵地战去对付的。
+
+我们要把所有一切过去的优良的东西都总结起来，成为有系统的更发展的更丰富的军事路线，以便争取在今天战胜敌人，并且准备在将来转变到新阶段去。
+
+**战略的持久战，战役和战斗的速决战，这是一件事的两方面，这是国内战争的两个同时并重的原则，也可以适用于反对帝国主义的战争。**
+
+但在一般的速决原则之下，反对不正当的急躁性是必要的。
+
+“拚消耗”的主张，对于中国红军来说是不适时宜的。“比宝”不是龙王向龙王比，而是乞丐向龙王比，未免滑稽。对于几乎一切都取给于敌方的红军，基本的方针是歼灭战。只有歼灭敌人的有生力量才能打破“围剿”和发展革命根据地。给敌以杀伤，是作为给敌以歼灭的手段而采取的，否则便没有意义。因给敌以杀伤而给我以消耗，又因给敌以歼灭而给我以补充，这样就不但抵偿了我军的消耗，而且增加了我军的力量。击溃战，对于雄厚之敌不是基本上决定胜负的东西。歼灭战，则对任何敌人都立即起了重大的影响。**对于人，伤其十指不如断其一指；对于敌，击溃其十个师不如歼灭其一个师。**
+
+我们建立军事工业，须使之不助长依赖性。**我们的基本方针是依赖帝国主义和国内敌人的军事工业。**
+
+[^1-2-11-1]:“实际”这一个概念，按照中国文字，有两种含义：一种是指真实的情况，一种是指人们的行动（也即一般人所说的实践）。毛泽东在他的著作中，应用这一个概念，时常是双关的。
+[^1-2-11-2]:孙武子即孙武，中国春秋时代的著名军事学家，著《孙子》十三篇。本文引语见《孙子·谋攻》。
+[^1-2-11-14]:参见本卷《关于纠正党内的错误思想》注[4]和注[5]。
+[^1-2-11-15]:土匪主义指无纪律、无组织、无明确的政治目标的抢掠行为。
+[^1-2-11-26]:见马克思一八七一年四月十二日致库格曼论巴黎公社的信（《马克思恩格斯选集》第4卷，人民出版社1972年版，第392—393页）；参见恩格斯《德国的革命和反革命》第十七节（《马克思恩格斯选集》第1卷，人民出版社1972年版，第585—586页）。
