--- a/毛泽东选集(1-7卷静火版)(索引).md
+++ b/毛泽东选集(1-7卷静火版)(索引).md
@@ -59,3 +59,11 @@
 #### 中国革命战争的战略问题(1936.12)
 
 [中国革命战争的战略问题](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/中国革命战争的战略问题.md)
+
+#### 关于蒋介石声明的声明(1936.12.28)
+
+[关于蒋介石声明的声明](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/关于蒋介石声明的声明.md)
+
+#### 中国共产党在抗日时期的任务(1937.5.3)
+
+[中国共产党在抗日时期的任务](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/中国共产党在抗日时期的任务.md)
