--- a/毛泽东选集-读书笔记.md
+++ b/毛泽东选集-读书笔记.md
@@ -430,3 +430,7 @@
 [^1-2-11-14]:参见本卷《关于纠正党内的错误思想》注[4]和注[5]。
 [^1-2-11-15]:土匪主义指无纪律、无组织、无明确的政治目标的抢掠行为。
 [^1-2-11-26]:见马克思一八七一年四月十二日致库格曼论巴黎公社的信（《马克思恩格斯选集》第4卷，人民出版社1972年版，第392—393页）；参见恩格斯《德国的革命和反革命》第十七节（《马克思恩格斯选集》第1卷，人民出版社1972年版，第585—586页）。
+
+#### 关于蒋介石声明的声明(1936.12.28)
+
+爱国有罪，冤狱遍于国中；卖国有赏，汉奸弹冠相庆。
